beginning to translate state names

--- a/ᎤᎾᏥ.mw
+++ b/ᎤᎾᏥ.mw
@@ -19,7 +19,7 @@
 
 [[File:Snowfall_Luxembourg_train_station.JPG|thumb|right|250px|Snowfall ᎾᎾᎢ ᎯᎠ [[Luxembourg]] ᏔᎷᎩᏍᎩ ᏅᏃᎯ ᎤᎴᏫᏍᏗ.]]
 
-ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎧᏃᎮᎭ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏠᏱᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ ᎭᏫᎾᏗᏢ ᏫᏚᏳᎪᏛ ᎪᎳ ᎠᏠᏯᏍᏛ [[Maine]], [[New Hampshire|ᎢᏤ Hampshire]], [[Vermont]], [[Massachusetts]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Cape Cod|ᏂᎦᏛᎢ ᎠᏰᎵ]]), [[Rhode Island|Rhode ᎠᎽᏰᎵ]], [[Connecticut]], [[New York|ᎢᏤ York]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Long Island|ᎦᏅᎯᏓ ᎠᎽᏰᎵ]]), [[Pennsylvania]], [[New Jersey|ᎢᏤ ᎫᏢᎥᏍᎬ]], [[Michigan]], ᎤᏴᏢ ᎢᏗᏢ [[Ohio]], ᎤᏴᏢ ᎢᏗᏢ [[Indiana]], ᎤᏴᏢ ᎢᏗᏢ [[Illinois]], [[Wisconsin]], [[Minnesota]], [[Iowa]], [[North Dakota|ᎤᏴᏢ Dakota]], [[South Dakota|ᎤᎦᎾᏭ Dakota]], [[Montana]], [[Wyoming]], ᏭᏕᎵᎬᏗᏢ [[Colorado]] ᎠᎴ ᎯᎠ [[Front Range|ᎢᎬᏱᏗᏢ ᎠᏍᏓᏅᏅ]], [[Idaho]], ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎧᎸᎬᎢᏗᏢ [[Utah]], ᎤᏴᏢ ᎢᏗᏢ [[Nevada]], ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ [[Washington]], [[Oregon]], [[California]], [[Arizona]], [[New Mexico|ᎢᏤ Mexico]], [[Maryland]], [[West Virginia|ᏭᏕᎵᎬ Virginia]], ᎠᎴ [[Virginia]], ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᎧᏲᏗ ᎡᏍᎦᏂ ᎣᏍᏛ ᎧᎸᎬ ᎯᎠ Rockies ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ Montana ᎠᎴ Wyoming ᎠᎴ ᎯᎠ ᏭᏕᎵᎬᏗᏢ Dakotas (ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ [[High Plains (United States)|ᎦᎸᎳᏗ ᏂᎬᏅ]]) ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ snowless. ᎾᎥᏂᎨᏍᏙᏗ ᎧᏃᎮᎭ ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ ᎭᏫᎾᏗᏢ ᏐᎢ ᎧᏃᎮᎭ ᎾᏍᎩ ᎾᏍᏇ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎧᏃᎮᎭ ᎤᏗᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎾᎾᎢ ᎡᎳᏗᎨ ᏂᎦᏛᎢ, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎤᎾᏥ ᎾᏍᎩᎾᎢ ᎢᎦ ᎠᎴ ᎤᏠᏱᎭ ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᏂᏗᏢ ᏑᎾᏙᏓᏆᏍᏗ. [[Canada]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎧᎵᏬᎯ ᎫᏝᎢ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎡᎷᏪᎢ ᎡᏍᎦᏂ yvwatuwidv [[Vancouver, British Columbia|Vancouver, ᎩᎵᏏ Columbia]], ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎤᎦᎾᏭ ᎢᏗᏢ [[Alberta]] ᎠᎴ ᎢᏅ ᎤᎦᎾᏭ ᎢᏗᏢ [[Ontario]]. [[Alaska]] ᎨᏒᎢ ᎾᏍᎩᏯᎢᎨᏙᏗ ᎫᏝᎢ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎦᏙᎯ ᎡᏍᎦᏂ ᎠᎴ ᎯᎸᏍᎩ ᎠᎹᏰᎵ, ᎾᎯᏳᎢ ᎤᎾᏥ ᎭᏫᎾᏗᏢ [[Hawaii]] ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᎤᎩᏒᎩ ᎾᎿ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏫᎪᏍᏓᏴ (ᎦᎸᎳᏗᏢ ᎬᏩᏚᏫᏛ 2700 m).
+ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎧᏃᎮᎭ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏠᏱᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ ᎭᏫᎾᏗᏢ ᏫᏚᏳᎪᏛ ᎪᎳ ᎠᏠᏯᏍᏛ [[Maine|ᎺᏂ]], [[New Hampshire|ᎠᏤ ᎭᎻᏒ]], [[Vermont|ᏣᏩᎦ]], [[ᎺᏌᏧᏎᏗ]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Cape Cod|ᏂᎦᏛᎢ ᎠᏰᎵ]]), [[Rhode Island|ᎤᏍᏗ ᏧᎦᏚᏛᎢ]], [[ᎧᏁᏓᎦᏗ]], [[New York|ᏄᏯᎩ]] (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ [[Long Island|ᎦᏅᎯᏓ ᎠᎽᏰᎵ]]), [[Pennsylvania|ᎤᎩᏓᎵᏱ]], [[New Jersey|ᎠᏤ ᏨᏏ]], [[Michigan|ᎻᏏᎦᏂ]], ᎤᏴᏢ ᎢᏗᏢ [[Ohio|ᎣᎭᏲ]], ᎤᏴᏢ ᎢᏗᏢ [[Indiana|ᎢᏂᏗᏰᎾ]], ᎤᏴᏢ ᎢᏗᏢ [[Illinois|ᎢᎵᏃᏱ]], [[Wisconsin|ᏫᏍᎧᏂᏏᏂ]], [[Minnesota|ᎻᏂᏐᏓ]], [[Iowa|ᎠᏯᏩ]], [[North Dakota|ᏧᏴᎵ ᏓᏆᏓ]], [[South Dakota|ᎤᎦᎾᏭ ᏓᏆᏓ]], [[Montana|ᎹᎾᏖᎾ]], [[Wyoming|ᏩᏲᎻ]], ᏭᏕᎵᎬᏗᏢ [[Colorado|ᎧᎶᏩᏓ]] ᎠᎴ ᎯᎠ [[Front Range|ᎢᎬᏱᏗᏢ ᎠᏍᏓᏅᏅ]], [[Idaho|ᎠᏓᎰ]], ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎧᎸᎬᎢᏗᏢ [[Utah|ᏳᏔ]], ᎤᏴᏢ ᎢᏗᏢ [[Nevada]], ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ [[ᏩᏏᏓᏂ]], [[Oregon]], [[California]], [[Arizona]], [[ᏍᏆᏂᏤᏍᏛᎢ]], [[Maryland]], [[West Virginia|ᏭᏕᎵᎬ Virginia]], ᎠᎴ [[Virginia]], ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᎧᏲᏗ ᎡᏍᎦᏂ ᎣᏍᏛ ᎧᎸᎬ ᎯᎠ Rockies ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ Montana ᎠᎴ Wyoming ᎠᎴ ᎯᎠ ᏭᏕᎵᎬᏗᏢ Dakotas (ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ [[High Plains (United States)|ᎦᎸᎳᏗ ᏂᎬᏅ]]) ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ snowless. ᎾᎥᏂᎨᏍᏙᏗ ᎧᏃᎮᎭ ᎠᎴ ᎦᎸᎳᏗ-ᏂᎦᏛᎢ ᎡᏍᎦᏂ ᎭᏫᎾᏗᏢ ᏐᎢ ᎧᏃᎮᎭ ᎾᏍᎩ ᎾᏍᏇ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᎢᏳᏓᎵᎭ ᎫᏝᎢ ᎬᏙᏗ ᎤᎾᏥ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎧᏃᎮᎭ ᎤᏗᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎾᎾᎢ ᎡᎳᏗᎨ ᏂᎦᏛᎢ, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎤᎾᏥ ᎾᏍᎩᎾᎢ ᎢᎦ ᎠᎴ ᎤᏠᏱᎭ ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᏂᏗᏢ ᏑᎾᏙᏓᏆᏍᏗ. [[Canada]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎧᎵᏬᎯ ᎫᏝᎢ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎡᎷᏪᎢ ᎡᏍᎦᏂ yvwatuwidv [[Vancouver, British Columbia|Vancouver, ᎩᎵᏏ Columbia]], ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎤᎦᎾᏭ ᎢᏗᏢ [[Alberta]] ᎠᎴ ᎢᏅ ᎤᎦᎾᏭ ᎢᏗᏢ [[Ontario]]. [[Alaska]] ᎨᏒᎢ ᎾᏍᎩᏯᎢᎨᏙᏗ ᎫᏝᎢ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎦᏙᎯ ᎡᏍᎦᏂ ᎠᎴ ᎯᎸᏍᎩ ᎠᎹᏰᎵ, ᎾᎯᏳᎢ ᎤᎾᏥ ᎭᏫᎾᏗᏢ [[Hawaii|ᎭᏩᏱ]] ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᎤᎩᏒᎩ ᎾᎿ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏫᎪᏍᏓᏴ (ᎦᎸᎳᏗᏢ ᎬᏩᏚᏫᏛ 2700 m).
 
 == ᏗᏎᏍᏗ ᏓᏍᏓᏅᏅ ==
 [[File:SnowflakesWilsonBentley.jpg|thumb|left|ᎤᎾᏥ ᏫᏚᏳᎪᏛ ᎾᎥᎢ [[Wilson Bentley]], 1902]]
