translating Mexico -> ᎠᏂᏍᏆᏂᎢ

--- a/ᏅᏃᎯ.mw
+++ b/ᏅᏃᎯ.mw
@@ -13,7 +13,7 @@
 
 ==ᎧᏃᎮᏍᎩ==
 [[Image:PompeiiStreet.jpg|right|thumb|180px| [[cobblestone]] ᎶᎻ ᏅᏃᎯ ᎭᏫᎾᏗᏢ [[Pompeii]].]]
-ᎯᎠ ᎢᎬᏱ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎯᎠ [[trails|ᎤᏍᏗ ᎦᏅᏅ]] ᎪᏢᏅᎯ ᎾᎥᎢ [[migration|migrating]] ᎡᎿᎢ ᎡᎥ. ᎾᎥᎢ ᎬᏩᏚᏫᏛ [[10,000 BC]], ᎾᏍᎩ ᎯᎠ ᎤᏐᏅ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎬᏔᏅᎯ ᎾᎥᎢ ᏴᏫ ᎦᏃᎭᎵᏙᎯ [[nomad|ᎦᏰᏙᎯ]]ᎠᏍᏓᏩᏗᏒ ᎾᏍᎩ ᎯᎠ ᎤᏂᎪᏗᏗ ᎦᎾᏝᎢ. 
+ᎯᎠ ᎢᎬᏱ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎯᎠ [[trails|ᎤᏍᏗ ᎦᏅᏅ]] ᎪᏢᏅᎯ ᎾᎥᎢ [[migration|migrating]] ᎡᎿᎢ ᎡᎥ. ᎾᎥᎢ ᎬᏩᏚᏫᏛ 10,000 BCE, ᎾᏍᎩ ᎯᎠ ᎤᏐᏅ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎬᏔᏅᎯ ᎾᎥᎢ ᏴᏫ ᎦᏃᎭᎵᏙᎯ [[nomad|ᎦᏰᏙᎯ]]ᎠᏍᏓᏩᏗᏒ ᎾᏍᎩ ᎯᎠ ᎤᏂᎪᏗᏗ ᎦᎾᏝᎢ. 
 
 ᎦᎳᏅᏛ ᎠᏂᏰᏍᏛᏍᎬ ᎤᎭ ᏭᏪᏙᎢ ᎠᏩᏛᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ ᏴᏫ ᏗᏓᏙᎳᏤᎸ yvwatuwidv [[4000 BC]]. 
 
@@ -23,7 +23,7 @@
 
 ᎯᎠ ᎯᎸᎯᏳᎢ Chinese ᎠᏁᏍᎨᏓ ᎤᏁᏉᏨᎯ iyahdvnelidasdi ᏕᎦᏅᏅ, ᎢᎦᏛ paved, ᏂᏛᎴᏅᏓ ᎬᏩᏚᏫᏛ [[1100 BC]] ᎢᎬᏱᏗᏢ ᎠᎢᏒ. ᎾᎥᎢ 20 ᏂᏓᏙᎳᎬᎾ, ᎯᎠ Chinese ᏅᏃᎯ ᏓᎧᏁᎲ ᎧᏁᏉᏛ ᎦᏬᎯᎸᏙᏗ 40,000km.  
 
-ᎯᎠ [[Inca road system|ᏄᎬᏫᏳᏌᏕᎩ]] ᎤᏁᏍᎨᎲ ᎣᏌᏂ ᎤᏔᏅ ᏅᏃᎯ ᎾᏍᎩᎾᎢ ᎾᏛᏁᎸ ᏗᎬᏩᎶᏒ ᎯᎠ Andes, ᎠᎴ ᎯᎠ Mayans ᎤᏁᏍᎨᎲ ᎤᏁᏉᏨᎯ ᏓᎧᏁᎲ paved ᏕᎦᏅᏅ ᎭᏫᎾᏗᏢ Mexico ᎤᏓᎷᎸ ᎯᎠ European ᎪᎷᏩᏛᏗ ᎯᎠ ᎢᏤ ᎡᎶᎯ. 
+ᎯᎠ [[Inca road system|ᏄᎬᏫᏳᏌᏕᎩ]] ᎤᏁᏍᎨᎲ ᎣᏌᏂ ᎤᏔᏅ ᏅᏃᎯ ᎾᏍᎩᎾᎢ ᎾᏛᏁᎸ ᏗᎬᏩᎶᏒ ᎯᎠ Andes, ᎠᎴ ᎯᎠ Mayans ᎤᏁᏍᎨᎲ ᎤᏁᏉᏨᎯ ᏓᎧᏁᎲ paved ᏕᎦᏅᏅ ᎭᏫᎾᏗᏢ ᎠᏂᏍᏆᏂᎢ ᎤᏓᎷᎸ ᎯᎠ European ᎪᎷᏩᏛᏗ ᎯᎠ ᎢᏤ ᎡᎶᎯ. 
 
 ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ itsuwakodi, ᎠᎯᏴᏍᏗ ᎾᎥᎢ [[river|ᎤᏪᏴ]] ᏥᏄᏍᏛᎩ ᎢᏅ ᎠᎯᏗᎨ ᎠᎴ ᎦᏣᏄᎳᎯᎨ ᎬᎾᏬᏍᎬ ᎡᏙᎵᏙᎲ ᎾᎥᎢ ᏅᏃᎯ, ᎾᏍᎩ ᎨᏒᎢ ᎠᎦᏎᏍᏗᏍᎬ ᎯᎠ ᏓᎬᏩᎶᏛ ᏅᏃᎯ ᎠᏁᏍᎨᎲ ᎠᎴ ᎯᎠ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎬ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎠᏰᎵ [[cart|ᎤᏍᏗ ᏓᏆᎴᎷ]]ᎠᎴ ᎤᏪᏴ [[barge|ᏥᏳ]]. ᏧᏠᎯᏍᏗ ᏅᏃᎯ ᎠᎯᏴᏍᏗ ᎠᎴ ᏥᏳ ᎠᎯᏴᏍᏗ ᎨᏒᎢ ᎯᎠ ᏐᏈᎵ-ᎠᏎᏒᏓ ᏥᏳ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏐᏈᎵ ᎠᏍᏓᏩᏕᎦ ᏧᎸᏌᏛᎯ ᎤᏍᏗ ᎦᏅᏅ ᎨᎳᏛᏍᏗ ᎯᎠ ᎤᏪᏴ ᎠᏕᎸ ᏗᏗ.
 
