translate Mexico -> ᎠᏂᏍᏆᏂᎢ

--- a/ᏩᎴᎳ.mw
+++ b/ᏩᎴᎳ.mw
@@ -42,7 +42,7 @@ Many, see text.
 == ᎤᎾᏙᏢᎯ ==
 ᎬᏙᏗ ᎯᎠ ᏓᎦᏘᎴᎬ ᎠᏂᏍᎧᏱ, ᏩᎴᎳ ᎾᎯᏳᎢ ᎭᏫᎾᏗᏢ ᎤᎳᏫᏛᏓ ᎤᎭ ᎯᎠ ᏩᎦᎸᎳᏗᏴ [[metabolism|ᎤᎾᏙᏢᎯ]] ᏂᎦᏛ ᎡᎿᎢ ᎡᎥ, ᎤᏚᎳᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᎦᏣᏄᎳ ᎠᏓᏠᏍᎬ ᎤᎾᏤᎵ ᎪᏯᏛ. ᎤᎾᏤᎵ [[heart|ᎠᏓᏅᏙ]]ᎠᏓᏠᎯᏍᏗ ᏰᎵᏇ ᎠᏙᏯᏅᎯᏗᏍᏗ ᏥᏄᏍᏗ ᎦᎸᎳᏗ ᏥᏄᏍᏗ 1260 ᎠᏓᏠᎯᏍᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ, ᏓᎬᏩᎶᏛ ᏌᏊ ᎢᏳᏩᎫᏗ ᎡᎷᏪᎢ ᎭᏫᎾᏗᏢ ᏌᎪᏂᎨ-throated ᏩᎴᎳ [http://www.hummingbirds.net/about.html#heartbeat]. ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᏲᏨᎯ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎤᎾᏤᎵ ᎣᏤᎵ ᏄᏓᎨᏒ ᎭᏫᎾᏗᏢ ᎠᎵᏍᏓᏴᏗ ᎠᏂᏏᏴᏫᎭ ᎢᎦ, ᎠᎴ ᎿᏛᎦ Ꮎ ᎤᏅᏌ ᎤᎭ ᎠᏓᏩᏛᎯᏓᏍᏗ ᎢᏯᏍᎪᎯᏧᏈ ᎠᏂᏥᎸᏍᎩ ᏧᎩᏨᏅᏓ. ᎾᎾᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᏓᏁᎸ ᎢᏳᏊ, ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎢᏧᏟᎶᏛ ᎤᏣᏘᎾ ᏂᏛᎴᏅᏓ ᎠᎪᎾ ᎢᎬᏂᏏᏍᎩ ᏓᏂᏲᎱᏍᎦ. ᏱᏂᎬᏛᎾ, ᎤᏅᏌ ᎠᎴ ᏰᎵᏇ ᎢᎬᏁᏗ ᎤᏍᎦᏃᎳ ᎡᎳᏗ ᎤᎾᏤᎵ ᎤᎾᏙᏢᎯ ᎾᎾᎢ ᏒᏃᏱ, ᎠᎴ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎢᏳᏩᎪᏗ ᎠᎵᏍᏓᏴᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏳᏊ ᏱᏂᎦᎳᏍᏗ ᏰᎵ ᎠᏩᏛᏗ. ᎤᏅᏌ ᎠᏴᏍᏗ [[hibernation|ᏧᏓᏗᎩᏓ]]-ᎾᏍᎩᏯᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[torpor|ᎾᏍᏋ]]. ᎾᎯᏳᎨᏒ ᎾᏍᏋ, ᎯᎠ heartrate ᎠᎴ ᏓᎬᏩᎶᏛ ᎥᎴᏂᏙᎲ ᎠᎴ ᎢᏧᎳ slowed dramatically (ᎯᎠ heartrate ᎾᎥᏂᎨᏍᏙᏗ 50-180 ᎠᏓᏠᎯᏍᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ), ᎠᎦᏲᎳᏗᏍᎩ ᎤᎾᏤᎵ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ.
 
-ᏗᎦᏎᏍᏙᏗ ᏩᎴᎳ' ᎤᎾᏙᏢᎯ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎯᎠ ᎠᏛᏛᎲᏍᎩ ᎢᏳᏃ [[bird migration|migrating]] [[Ruby-throated Hummingbird|ᎩᎦᎨ-throated ᏩᎴᎳ]] ᏰᎵᏇ ᏓᏓᎿᏩᏍᏛ 800 [[kilometre|km]] (500 [[mile|ᏑᏟᎶᏛ]]) ᎯᎠ [[Gulf of Mexico|ᏰᎵ ᎤᏝᏅᏛ Mexico]] ᎾᎿ nonstop ᎤᎳᏫᏛᏓ, ᏥᏄᏍᏗ ᏠᎨᏏ ᏄᏍᏛ ᏗᎧᏃᏗ ᎧᏁᎢᏍᏙᏗ ᎾᏍᎩ ᎾᏛᏁ. ᎪᎯ ᏩᎴᎳ, ᎾᏍᎩᏯᎢ ᏐᎢ ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎠᏓᏅᏍᏗᏱ, ᏓᏓᎾᏅ ᎦᎸᎳᏗᏢ ᎦᎵᏦᎯᏓ ᎢᏯᏓᏛᏁᏗ ᏥᏄᏍᏗ ᎪᏛᏙᏗ, ᎾᎥᏂᎨᏍᏗ ᎧᏁᏉᎩ Ꮝ ᏄᏓᎨᏒ ᎾᎥᎢ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 40 50 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ ᎠᎴ ᏯᏛᎾ kanquotsegi ᎯᎠ ᏥᏍᏆ ᎤᏤᎵ ᏰᎵᏊ ᏱᎩ ᎦᏃᎯᎸᏒ ᎢᏳᏩᎪᏗ. (Skutch, 1973)
+ᏗᎦᏎᏍᏙᏗ ᏩᎴᎳ' ᎤᎾᏙᏢᎯ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎯᎠ ᎠᏛᏛᎲᏍᎩ ᎢᏳᏃ [[bird migration|migrating]] [[Ruby-throated Hummingbird|ᎩᎦᎨ-throated ᏩᎴᎳ]] ᏰᎵᏇ ᏓᏓᎿᏩᏍᏛ 800 [[kilometre|km]] (500 [[mile|ᏑᏟᎶᏛ]]) ᎯᎠ [[Gulf of Mexico|ᏰᎵ ᎤᏝᏅᏛ ᎠᏂᏍᏆᏂᎢ]] ᎾᎿ nonstop ᎤᎳᏫᏛᏓ, ᏥᏄᏍᏗ ᏠᎨᏏ ᏄᏍᏛ ᏗᎧᏃᏗ ᎧᏁᎢᏍᏙᏗ ᎾᏍᎩ ᎾᏛᏁ. ᎪᎯ ᏩᎴᎳ, ᎾᏍᎩᏯᎢ ᏐᎢ ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎠᏓᏅᏍᏗᏱ, ᏓᏓᎾᏅ ᎦᎸᎳᏗᏢ ᎦᎵᏦᎯᏓ ᎢᏯᏓᏛᏁᏗ ᏥᏄᏍᏗ ᎪᏛᏙᏗ, ᎾᎥᏂᎨᏍᏗ ᎧᏁᏉᎩ Ꮝ ᏄᏓᎨᏒ ᎾᎥᎢ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 40 50 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ ᎠᎴ ᏯᏛᎾ kanquotsegi ᎯᎠ ᏥᏍᏆ ᎤᏤᎵ ᏰᎵᏊ ᏱᎩ ᎦᏃᎯᎸᏒ ᎢᏳᏩᎪᏗ. (Skutch, 1973)
 
 == ᎠᏍᏓᏅᏅ ==
 [[File:Hummingbird nest.jpg|thumb|ᏩᎴᎳ ᎤᏁᏍᎩᎸᏒ ᎬᏙᏗ ᎠᏲᎵ]]
