--- a/ᏥᏍᏛᎾ.mw
+++ b/ᏥᏍᏛᎾ.mw
@@ -29,9 +29,9 @@
 
 ==Geographical ᏗᏗᎦᎴᏴ ᎠᎴ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ==
 [[File:Kräftskiva-1.jpg|thumb| Swedish ᎥᏓᎵ ᎪᏛᏅ]]
-ᎾᎿᎢ ᎠᎴ ᏦᎢ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎪᏛᏅ, ᏔᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[northern hemisphere|ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]] ᎠᎴ ᏌᏊ ᎭᏫᎾᏗᏢ ᎯᎠ [[southern hemisphere|ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]]. ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ-ᎤᏔᏂᏗ ᎦᏙᎯ ([[Gondwana]]-ᎠᏗᎦᎴᏴ) ᏏᏓᏁᎸᎯ [[Parastacidae]] ᎠᎴᏂᏙᎠ ᎭᏫᎾᏗᏢ [[South America|ᎤᎦᎾᏭ ᎠᎺᎵᎨ]], [[Madagascar]] ᎠᎴ [[Australasia]], ᎠᎴ ᎨᏒᎢ ᎠᏥᎸᏉᏗ ᎾᎥᎢ ᎯᎠ ᎦᎷᎶᎩ ᎯᎠ ᎢᎬᏱ ᎾᎥᏂᎨ ᎡᎵᏍᏗ [[pleopod]]<ref>{{Cite journal2 |author = [[Horton H. Hobbs|Hobbs, H H, Jr]] |year=1974 |title=Synopsis of the families and genera of crayfishes (Crustacean: Decapoda) |journal=Smithsonian Contributions to Zoology |volume=164 |pages=1–32}}</ref>. ᎯᎠ ᏐᎢ ᏔᎵ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ, ᎠᏁᎳ ᎯᎠ [[Astacidae]] ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᏭᏕᎵᎬᏗᏢ [[Eurasia]] ᎠᎴ ᏭᏕᎵᎬᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]] ᎠᎴ ᎠᏁᎳ ᎯᎠ ᏏᏓᏁᎸᎯ [[Cambaridae]] ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ [[Asia]] ᎠᎴ ᎧᎸᎬᎢᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]].
+ᎾᎿᎢ ᎠᎴ ᏦᎢ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎪᏛᏅ, ᏔᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[northern hemisphere|ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]] ᎠᎴ ᏌᏊ ᎭᏫᎾᏗᏢ ᎯᎠ [[southern hemisphere|ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]]. ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ-ᎤᏔᏂᏗ ᎦᏙᎯ ([[Gondwana]]-ᎠᏗᎦᎴᏴ) ᏏᏓᏁᎸᎯ [[Parastacidae]] ᎠᎴᏂᏙᎠ ᎭᏫᎾᏗᏢ [[South America|ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], [[Madagascar]] ᎠᎴ [[Australasia]], ᎠᎴ ᎨᏒᎢ ᎠᏥᎸᏉᏗ ᎾᎥᎢ ᎯᎠ ᎦᎷᎶᎩ ᎯᎠ ᎢᎬᏱ ᎾᎥᏂᎨ ᎡᎵᏍᏗ [[pleopod]]<ref>{{Cite journal2 |author = [[Horton H. Hobbs|Hobbs, H H, Jr]] |year=1974 |title=Synopsis of the families and genera of crayfishes (Crustacean: Decapoda) |journal=Smithsonian Contributions to Zoology |volume=164 |pages=1–32}}</ref>. ᎯᎠ ᏐᎢ ᏔᎵ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ, ᎠᏁᎳ ᎯᎠ [[Astacidae]] ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᏭᏕᎵᎬᏗᏢ [[Eurasia]] ᎠᎴ ᏭᏕᎵᎬᏗᏢ [[ᏧᏴᎸ ᎠᎹᏰᎵ]] ᎠᎴ ᎠᏁᎳ ᎯᎠ ᏏᏓᏁᎸᎯ [[Cambaridae]] ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ [[ᏓᎶᏂᎦᏍᏛ]] ᎠᎴ ᎧᎸᎬᎢᏗᏢ ᏧᏴᎸ ᎠᎹᏰᎵ.
 
-ᎯᎠ ᏭᏔᏅ ᏧᏓᎴᎿᎢ ᎪᏛᏅ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ-ᎧᎸᎬᎢᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]], ᎬᏙᏗ ᎦᏬᎯᎸᏙᏗ 250 ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᏐᏁᎳ genera, ᏂᎦᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᏏᏓᏁᎸᎯ [[Cambaridae]]. ᎤᏗᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[Astacidae|astacid]] ᎪᏛᏅ ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Pacific Northwest|ᎡᎷᏪᎢ ᎤᏴᏢ ᎤᏕᎵᎬ ᎢᏗᏢ]] ᎠᎴ ᎯᎠ headwaters ᎢᎦᏛ ᎤᏪᏴ ᎧᎸᎬ ᎯᎠ [[Continental Divide|ᎦᏙᎯ ᎠᏯᏔᏍᏗ]].
+ᎯᎠ ᏭᏔᏅ ᏧᏓᎴᎿᎢ ᎪᏛᏅ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ-ᎧᎸᎬᎢᏗᏢ [[North America|ᏧᏴᏢ ᎠᎹᏰᎵ]], ᎬᏙᏗ ᎦᏬᎯᎸᏙᏗ 250 ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᏐᏁᎳ genera, ᏂᎦᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᏏᏓᏁᎸᎯ [[Cambaridae]]. ᎤᏗᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[Astacidae|astacid]] ᎪᏛᏅ ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Pacific Northwest|ᎡᎷᏪᎢ ᎤᏴᏢ ᎤᏕᎵᎬ ᎢᏗᏢ]] ᎠᎴ ᎯᎠ headwaters ᎢᎦᏛ ᎤᏪᏴ ᎧᎸᎬ ᎯᎠ [[Continental Divide|ᎦᏙᎯ ᎠᏯᏔᏍᏗ]].
 
 [[Australasia]] ᎨᏒᎢ ᏄᏓᎴ centre ᎪᏛᏅ ᏧᏓᎴᎿᎢ, ᎬᏙᏗ ᎦᏬᎯᎸᏙᏗ 100 ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᏔᎳᏚ genera. ᎤᎪᏗᏗ ᎯᎠ ᎤᏟ ᎢᏲᏍᏛ-ᎤᎾᏅᏛ [[Australia]]n ᎪᏛᏅ ᎠᎴ ᎯᎠ [[genus|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ''Cherax'', ᎠᎴ ᎠᏠᏯᏍᏛ ᎯᎠ [[marron]] (''Cherax tenuimanus''), [[red-claw crayfish|ᎩᎦᎨ-ᎠᎩᏍᎬᎢ ᎪᏛᏅ]] (''Cherax quadricarinatus''), [[yabby]] (''[[Cherax destructor]]'') ᎠᎴ ᏭᏕᎵᎬᏗᏢ yabby (''Cherax preissii''). ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎪᏛᏅ, ''[[Astacopsis gouldi]]'', ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎠᎵᏂᎬᏁᏗ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎤᎶᏒᏍᏗ 3&nbsp;[[kilogram|ᏄᏓᎨᏒ]], ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏪᏴ ᎤᏴᏢ ᎢᏗᏢ [[Tasmania]].
 
@@ -39,7 +39,7 @@
 
 [[Image:Crayfish-Astacus astacusP1002890.JPG|thumb|''[[Astacus astacus]]'']]
 
-[[Europe]] ᎨᏒᎢ ᎣᏪᏅᏒ ᎦᎵᏉᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎪᏛᏅ ᎭᏫᎾᏗᏢ ᎯᎠ genera ''[[Astacus]]'' ᎠᎴ ''[[Austropotamobius]]''.
+[[ᏳᎳᏛ]] ᎨᏒᎢ ᎣᏪᏅᏒ ᎦᎵᏉᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎪᏛᏅ ᎭᏫᎾᏗᏢ ᎯᎠ genera ''[[Astacus]]'' ᎠᎴ ''[[Austropotamobius]]''.
 
 ''[[Cambaroides]]'' ᎨᏒᎢ ᎾᏰᎯᏯ [[Japan|ᎠᏰᎵ]] ᎠᎴ ᎧᎸᎬᎢᏗᏢ ᎦᏙᎯ Asia.
 
@@ -55,13 +55,13 @@
 == ᎪᏛᏅ ᏥᏄᏍᏗ ᎤᏲᏨᎯ ==
 [[Image:BoiledCrawdads.jpeg|left|thumb|Boiled ᎪᏛᏅ]]
 
-ᎪᏛᏅ ᎠᎴ ᎦᎳᏅᎯ ᎭᏫᎾᏗᏢ [[Europe]] ᎠᎴ [[China|ᎠᎦᎾᏫᏗᏍᎩ]], ᎠᎴ ᎤᏅᏌ ᎠᎴ ᎠᏎᏱᎩ ᎤᎪᏗᏗ ᎤᏂᎸᏉᏗ ᎭᏫᎾᏗᏢ [[Louisiana]], ᎭᏢᏃ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ ᎠᎵᏍᏓᏴᏗ ᎠᎴᏂᏍᎬ ᎨᏒᎢ ''ᏥᏍᏛᎾ''; ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, 98% ᎯᎠ ᎪᏛᏅ harvested ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎦᎷᎦ ᏂᏛᎴᏅᏓ Louisiana. ᎤᏅᏌ ᎠᎴ ᎤᏠᏱᎭ boiled ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏧᎳᏍᎩ ᎬᏙᏗ ᎦᎨᏛ ᏧᏠᎯᏍᏗ (ᏄᏍᏛ ᎠᎩᏍᏗ ᏄᏍᏛ ᎠᎩᏍᏗ, paprika, ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎠᎴ ᏐᎢ ᏫᏚᏳᎪᏛ ᏯᏛᎿ ᏥᏄᏍᏗ [[potato|ᏄᎾ]]es, [[sausage|ᎭᏫᏯ ᎠᏍᏙᎥᎢ]], [[maize|ᏎᎷ]], [[onion|ᏒᎩ]], [[turkey|ᎬᎾ]] neckbones ᎠᎴ [[garlic|ᎣᎦᎾᎯᏎᏗ]] ᎤᏚᏃᎯᏍᏔᏍᎧ. ᎤᏅᏌ ᎠᎴ ᏂᎦᎥᏊ ᎢᏯᏓᏛᏁᎸ ᎾᎾᎢ ᎠᏂᏟᏏᏍᎬ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[Seafood boil|''ᏥᏍᏛᎾ tuyasdi'']]. 
+ᎪᏛᏅ ᎠᎴ ᎦᎳᏅᎯ ᎭᏫᎾᏗᏢ [[ᏳᎳᏛ]] ᎠᎴ [[China|ᎠᎦᎾᏫᏗᏍᎩ]], ᎠᎴ ᎤᏅᏌ ᎠᎴ ᎠᏎᏱᎩ ᎤᎪᏗᏗ ᎤᏂᎸᏉᏗ ᎭᏫᎾᏗᏢ [[Louisiana]], ᎭᏢᏃ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ ᎠᎵᏍᏓᏴᏗ ᎠᎴᏂᏍᎬ ᎨᏒᎢ ''ᏥᏍᏛᎾ''; ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, 98% ᎯᎠ ᎪᏛᏅ harvested ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎦᎷᎦ ᏂᏛᎴᏅᏓ Louisiana. ᎤᏅᏌ ᎠᎴ ᎤᏠᏱᎭ boiled ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏧᎳᏍᎩ ᎬᏙᏗ ᎦᎨᏛ ᏧᏠᎯᏍᏗ (ᏄᏍᏛ ᎠᎩᏍᏗ ᏄᏍᏛ ᎠᎩᏍᏗ, paprika, ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎠᎴ ᏐᎢ ᏫᏚᏳᎪᏛ ᏯᏛᎿ ᏥᏄᏍᏗ [[potato|ᏄᎾ]]es, [[sausage|ᎭᏫᏯ ᎠᏍᏙᎥᎢ]], [[maize|ᏎᎷ]], [[onion|ᏒᎩ]], [[turkey|ᎬᎾ]] neckbones ᎠᎴ [[garlic|ᎣᎦᎾᎯᏎᏗ]] ᎤᏚᏃᎯᏍᏔᏍᎧ. ᎤᏅᏌ ᎠᎴ ᏂᎦᎥᏊ ᎢᏯᏓᏛᏁᎸ ᎾᎾᎢ ᎠᏂᏟᏏᏍᎬ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[Seafood boil|''ᏥᏍᏛᎾ tuyasdi'']]. 
 
 ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎢᏯᏓᏛᏁᎸ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ [[Cuisine of the United States|ᏴᏩᏁᎬ]] ᏗᏖᎵᏙ ᎭᏫᎾᏗᏢ ᏧᎾᎵᏍᏓᏴᏗ yvwatuwidv ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]]. ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎪᎢᎯ ᎬᏂᏍᏙᏗ ᎠᎴ blackened. ᎾᎿᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏗᎪᏍᎩ ᎠᏛᏅᎢᏍᏔᏅ ᎾᏍᎩᎾᎢ ᏥᏍᏛᎾ ᎭᏫᎾᏗᏢ [[cajun cuisine|cajun]] ᎠᎴ [[creole cuisine|ᏗᎧᏃᏗ]] ᎠᎵᏍᏓᏴᏗ, ᎯᎠ ᎣᎯᏍᏗ-ᎤᎾᏅᏛ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᏥᏍᏛᎾ [[étouffée]], ᏥᏍᏛᎾ [[po' boy|po' ᎠᏧᏣ]], ᏥᏍᏛᎾ ᎨᎵᏍᏙᎩ, ᎠᎴ ᏥᏍᏛᎾ beignets&nbsp;<ref>{{cite web |url=http://www.utahdiving.com/recipes.htm |title=Crayfish recipes |publisher=UtahDiving.com |accessyear=2006 |accessdate=August 28}}</ref>.
 
 ᎪᏛᏅ ᎨᏒᎢ ᎤᏂᎸᏉᏗ ᎤᏲᏨᎯ ᎭᏫᎾᏗᏢ [[Sweden]] ᎠᎴ [[Finland]], ᎠᎴ ᎨᏒᎢ ᎾᎥᎢ ᎧᏃᎮᎸᎯ ᎢᎬᏱᏗᏢ consumed ᎾᎯᏳᎨᏒ ᎯᎠ ᎠᎾᏑᎲᏍᎬ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ ᎭᏫᎾᏗᏢ ᎦᎶᏂ. ᎯᎠ tuyasdi ᎨᏒᎢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏄᏍᏛ ᎠᎩᏍᏗ ᎬᏙᏗ [[salt|ᎠᎹ]], [[sugar|ᎧᎵᏎᏥ]], [[ale|ᎠᎵᏍᏓᏴᏗ]], ᎠᎴ ᎡᏆ ᎤᎪᏗᏗ ᎯᎠ ᎠᏂᏥᎸᏍᎩ ᎯᎠ [[dill]] ᎦᎪᏘ. ᎯᎠ ᎦᏂᏴᏗ ᏄᏍᏛ ᎤᏪᏅᏒ freshwater ᎪᏛᏅ, ''[[Astacus astacus]]'', ᎠᎴ ᎢᏧᎳᎭ transplanted ᏴᏩᏁᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ''[[Signal crayfish|Pacifastacus leniusculus]]'', ᎨᏒᎢ ᎤᏙᎯᏳ ᏩᏎᎸᎯ ᎠᎴ ᎣᏏ ᎠᏰᎸᏗ ᎠᏔᏲᏍᏗ ᎯᎠ ᎤᏂᎪᏗᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ consumed ᎤᎭ ᎾᏍᏋ imported. ᏗᎦᎾᏗᏅᏗ depended ᎾᎿ ᎤᎾᏓᏟᏌᎲ ᏂᏛᎴᏅᏓ [[Turkey|ᎬᎾ]] ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎯᏍᎩ, ᎠᎴ ᎤᎶᏐᏅ ᎠᏓᏯᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏁᏗ, [[China|ᎠᎦᎾᏫᏗᏍᎩ]] ᎠᎴ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ ᎪᎯ ᎢᎦ ᎯᎠ ᏭᏔᏅ ᏙᏧᏓᎴᏅ ᎤᎾᏓᏟᏌᎲ.
 
-ᎯᎠ Mexican ᎪᏛᏅ ᎨᏒᎢ ᏓᎪᎥᎩ ᎾᎿ ᎢᏴ ᏥᏄᏍᏗ [[Acocil]] ᎠᎴ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳ ᎤᎵᏍᎨᏛ ᎠᏓᏍᏕᎸᏗ ᏗᏓᎴᎲᏍᎬ ᎯᎠ ᎯᎸᎯᏳᎢ Mexican [[Aztec]] ᎥᎦᏔᎲᎢ; ᎾᏊ ᎪᎯ ᎤᏓᏅᏗ ᎪᏛᏅ ᎨᏒᎢ consumed (ᎠᎬᏫᏳᏛ boiled) ᎠᎴ ᎠᏛᏅᎢᏍᏔᏃᏅᎯ ᎬᏙᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ Mexican ᎦᏟᏐᏗᎩ ᎠᎴ ᏄᎵᏂᎬᎬ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ Mexico.
+ᎯᎠ Mexican ᎪᏛᏅ ᎨᏒᎢ ᏓᎪᎥᎩ ᎾᎿ ᎢᏴ ᏥᏄᏍᏗ [[Acocil]] ᎠᎴ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳ ᎤᎵᏍᎨᏛ ᎠᏓᏍᏕᎸᏗ ᏗᏓᎴᎲᏍᎬ ᎯᎠ ᎯᎸᎯᏳᎢ Mexican [[Aztec]] ᎥᎦᏔᎲᎢ; ᎾᏊ ᎪᎯ ᎤᏓᏅᏗ ᎪᏛᏅ ᎨᏒᎢ consumed (ᎠᎬᏫᏳᏛ boiled) ᎠᎴ ᎠᏛᏅᎢᏍᏔᏃᏅᎯ ᎬᏙᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ Mexican ᎦᏟᏐᏗᎩ ᎠᎴ ᏄᎵᏂᎬᎬ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᏂᏍᏆᏂᎢ.
 
 ᎪᏛᏅ ᎤᏤᎵ ᎾᏞᎬ ᎠᎵᏍᏓᏴᏗ ᎤᎾᏤᎵᏛ swept ᏗᎦᎾᏗᎯᏍᏗ ᎠᎦᎾᏫᏗᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ 1990s, featuring Ꮝ "Ꮉ Ꮃ" (麻辣) ᏂᏚᏍᏛᎢ (ᎦᏟᏌᏅ ᎠᏑᏴᏗ Sichuan ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᎴ ᎤᏗᎴᎩ ᏥᎵ ᎠᎴ ᏥᎵ) ᎠᏑᏴᏗ. ᎭᏫᎾᏗᏢ [[Beijing|ᏇᏥᏅ]], ᎯᎠ "Ꮉ Ꮃ" ᏂᏚᏍᏛᎢ ᏄᏍᏛ ᎠᎩᏍᏗ ᎪᏛᏅ (麻辣小龙虾) "Ꮉ Ꮶ " (麻小)ᏚᏙᎠ ᎠᎴ  ᎢᏳᏓᎵᎭ ᎠᎵᎮᎵᎬ ᎬᏙᏗ ᎠᎫᎩᏍᏗ ᎤᏴᏣ ᎠᏬᎩᎸᏍᎩ ᎭᏫᎾᏗᏢ ᎤᏗᎴᎩ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-ᎪᎨᏱ ᏒᎯᏰᏱ ᏥᏄᏍᏗ ᎾᎥᎢ ᎤᎵᎶᎯ ᎢᎬᏁᎯ.
 
@@ -71,7 +71,7 @@
 ==ᎪᏛᏅ ᎤᏢᎢᏍᏗᏍᎬ==
 {{main|crayfish plague}}
 
-ᎢᎦᏛ ᎪᏛᏅ agilyoasdi ᏂᏛᎴᏅᏓ ᎥᏳᎩ ᎤᏯᏅᎲ [[crayfish plague|ᎪᏛᏅ ᎤᏢᎢᏍᏗᏍᎬ]]. ᎪᎯ ᎨᏒᎢ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ [[water mould|ᎠᎹ ᎤᏔᏂᏗ ᎦᏙᎯ]] ''Aphanomyces astaci''. ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''[[Astacus]]'' ᎠᎴ ᎾᏍᎩᎾ ᎨᏒ ᎠᏞᏴᏍᏙᏗ ᎥᏳᎩ, ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᏗᎦᏘᎸᏍᏗ [[signal crayfish|ᏂᎬᎢ ᎪᏛᏅ]] ᎠᏴᏍᏙᏗ ᎢᎦᏛᎭ [[Europe]].
+ᎢᎦᏛ ᎪᏛᏅ agilyoasdi ᏂᏛᎴᏅᏓ ᎥᏳᎩ ᎤᏯᏅᎲ [[crayfish plague|ᎪᏛᏅ ᎤᏢᎢᏍᏗᏍᎬ]]. ᎪᎯ ᎨᏒᎢ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ [[water mould|ᎠᎹ ᎤᏔᏂᏗ ᎦᏙᎯ]] ''Aphanomyces astaci''. ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''[[Astacus]]'' ᎠᎴ ᎾᏍᎩᎾ ᎨᏒ ᎠᏞᏴᏍᏙᏗ ᎥᏳᎩ, ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᏗᎦᏘᎸᏍᏗ [[signal crayfish|ᏂᎬᎢ ᎪᏛᏅ]] ᎠᏴᏍᏙᏗ ᎢᎦᏛᎭ [[ᏳᎳᏛ]].
 
 ==ᏫᏓᏎᎸᎢ==
 {{commons|Crayfish}}
