beginning translating place names

--- a/ᎤᏪᏴ.mw
+++ b/ᎤᏪᏴ.mw
@@ -145,7 +145,7 @@ Techniques ᎤᎭ ᏭᏪᏙᎢ ᎤᏙᎷᏩᏛᏓ analyze [[hydrology transport 
 * ᎯᎠ '''[[Potomac River|Potomac ᎤᏪᏴ]]''', ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏪᏴ ᎯᎠ [[Washington, D.C.]] ᎠᎴ ᎯᎠ souther ᎠᏟᎶᏛ ᎬᎪᏛ [[Maryland]] ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|United ᎧᏃᎮᎭ]]
 * ᎯᎠ '''[[Rhine]]''', ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏪᏴ ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ [[Europe]]
 * ᎯᎠ '''[[Rhone River|Rhône]]''', ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏪᏴ ᎤᎦᎾᏭ ᎢᏗᏢ [[France]]
-* ᎯᎠ '''[[Rio Grande]]''', ᎯᎠ ᎤᏪᏴ Ꮎ ᏚᏙᏢᏒ ᎢᎦᏛ ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ ᎠᏰᎵ ᎯᎠ [[United States|United ᎧᏃᎮᎭ]] ᎠᎴ [[Mexico]]
+* ᎯᎠ '''[[Rio Grande]]''', ᎯᎠ ᎤᏪᏴ Ꮎ ᏚᏙᏢᏒ ᎢᎦᏛ ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ ᎠᏰᎵ ᎯᎠ [[ᎠᎰᏰᎵ]] ᎠᎴ [[Mexico|ᎠᏂᏍᏆᏂᎢ]]
 * ᎯᎠ '''[[Saint Lawrence River|ᎾᏍᎦᏅᏅᎠ Lawrence ᎤᏪᏴ]]''', ᎦᏙ ᎤᏍᏗ drains ᎯᎠ [[Great Lakes (North America)|ᎡᏆ Lakes]]
 * ᎯᎠ '''[[Savannah River|Savannah ᎤᏪᏴ]]''', ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎤᏪᏴ ᎭᏫᎾᏗᏢ ᎯᎠ southeastern United ᎧᏃᎮᎭ, forming ᎤᎪᏗᏗ ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ ᎠᏰᎵ ᎯᎠ ᎧᏃᎮᎭ [[Georgia (U.S. state)|Georgia]] ᎠᎴ [[South Carolina|ᎤᎦᎾᏭ Carolina]]
 * ᎯᎠ '''[[Seine|ᎠᎦᏯᎷᏗ]]''', ᎯᎠ ᎤᏪᏴ Ꮎ ᏓᏍᏆᎶᏗ ᏗᎬᏩᎶᏒ [[Paris, France|Paris]]
