translating Mexico -> ᎠᏂᏍᏆᏂᎢ

--- a/ᏡᎬᎢ.mw
+++ b/ᏡᎬᎢ.mw
@@ -1,5 +1,5 @@
 [[File:Coastal_redwood.jpg|right|250px|thumb|ᎯᎠ [[conifer]]ous [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]], ᎯᎠ tallest ᏡᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᎿ ᎡᎶᎯ.]]
-'''ᏡᎬ''' ᎨᏒᎢ ᎡᏆ, [[Perennial plant|ᎦᏌᏆᎸ]], [[wood|ᎠᏓy]] [[plant|ᎦᎪᏘ]]. ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎠᏫᏒᏗ ᏩᏎᏍᏗ ᎾᎿ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᏭᏍᏗᎬᎢ ᏂᎬᎢ, ᎯᎠ ᎠᎴᏂᏍᎬ ᏂᎦᎥᏊ ᏂᎬᎾᏗᏍᎪ digakohidi ᎾᎾᎢ ᎠᏂᎦᏲᎵ 6 m (20 ft) ᎦᎸᎳᏗ ᎾᎾᎢ ᎤᏩᎾᏐᎲᎯ ᎠᎴ, ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ, ᎤᎲᎢ ᎠᏂᎦᏲᎵ ᏚᏩᏂᎦᎸ ᎤᎵᏍᏕᎸᎲ ᎾᎿ ᏏᏴᏫ ᏄᎬᏫᏳᏒ ᎤᏩᏂᎦᎸ ᎠᎴ ᎧᏁᏌᎢ ᎬᏙᏗ ᏧᎸᏌᏓ [[apical dominance|apical ᎾᏓᏛᏂᏌᏁᎲ]] (ᎠᎪᏩᏛᏗ [[shrub|ᎦᎪᏘ]] ᎾᏍᎩᎾᎢ ᎤᏠᏱ ᎾᎬᏁᎲ). ᎤᏠᏱᎭᎢ ᎬᏙᏗ ᎤᎪᏗᏗ ᏐᎢ ᎦᎪᏘ ᏚᏙᏢᏒ, ᏕᏡᎬ ᎠᎴ ᎦᏅᎯᏓ-ᎠᎴᏂᏙᎸ. ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎠᏛᏍᎬ 100 m ᎢᏅ ᎢᎦᏘ, ᎠᎴ ᎢᎦᏛ ᏰᎵᏇ ᎠᎴᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎠᎦᏴᎵ ᏧᏕᏘᏴᏓ. 
+'''ᏡᎬ''' ᎨᏒᎢ ᎡᏆ, [[Perennial plant|ᎦᏌᏆᎸ]], [[wood|ᎠᏓ]] [[plant|ᎦᎪᏘ]]. ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎠᏫᏒᏗ ᏩᏎᏍᏗ ᎾᎿ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᏭᏍᏗᎬᎢ ᏂᎬᎢ, ᎯᎠ ᎠᎴᏂᏍᎬ ᏂᎦᎥᏊ ᏂᎬᎾᏗᏍᎪ digakohidi ᎾᎾᎢ ᎠᏂᎦᏲᎵ 6 m (20 ft) ᎦᎸᎳᏗ ᎾᎾᎢ ᎤᏩᎾᏐᎲᎯ ᎠᎴ, ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ, ᎤᎲᎢ ᎠᏂᎦᏲᎵ ᏚᏩᏂᎦᎸ ᎤᎵᏍᏕᎸᎲ ᎾᎿ ᏏᏴᏫ ᏄᎬᏫᏳᏒ ᎤᏩᏂᎦᎸ ᎠᎴ ᎧᏁᏌᎢ ᎬᏙᏗ ᏧᎸᏌᏓ [[apical dominance|apical ᎾᏓᏛᏂᏌᏁᎲ]] (ᎠᎪᏩᏛᏗ [[shrub|ᎦᎪᏘ]] ᎾᏍᎩᎾᎢ ᎤᏠᏱ ᎾᎬᏁᎲ). ᎤᏠᏱᎭᎢ ᎬᏙᏗ ᎤᎪᏗᏗ ᏐᎢ ᎦᎪᏘ ᏚᏙᏢᏒ, ᏕᏡᎬ ᎠᎴ ᎦᏅᎯᏓ-ᎠᎴᏂᏙᎸ. ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎠᏛᏍᎬ 100 m ᎢᏅ ᎢᎦᏘ, ᎠᎴ ᎢᎦᏛ ᏰᎵᏇ ᎠᎴᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎠᎦᏴᎵ ᏧᏕᏘᏴᏓ. 
 
 ᏕᏡᎬ ᎠᎴ ᎤᎵᏍᎨᏛ ᏑᏓᎴᎩ ᎯᎠ ᏂᎬᏩᏍᏛ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎠᎴ ᎦᏛᎬᎢ ᎢᏧᏓᎴᎩ ᎭᏫᎾᏗᏢ [[Landscape architecture|landscaping]] ᎠᎴ [[agriculture|ᏗᎦᎶᎪᏗ]], ᏓᏓᏁᎲᎢ [[orchard|ᏗᎦᎶᎪᏗ]] ᏠᎨᏏ ᏓᏫᏒ (ᏯᏛᎿ ᏥᏄᏍᏗ [[apple|ᏒᎦᏔ]]). ᏕᏡᎬ ᎾᏍᎩ ᎾᏍᏇ ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ [[mythology|mythologies]] (ᎠᎪᏩᏛᏗ [[trees in mythology|ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎤᏁᎳᏅᎯ]]).
 
@@ -48,7 +48,7 @@
 ᎤᏗᏗᏢ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎬᏙᏗ ᎠᏟᎶᏍᏗ ᎦᏙᎯ [[baobab]]''Adansonia'' ᎨᏒᎢ Ꮎ ᎾᏍᎩ ᎯᎠ ᏕᏡᎬ ᎠᏓᎾᏅ ᎡᏆ ᎢᎦᎢ ᎨᏒ [[water|ᎠᎹ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᏩᏂᎨᎢ ᎠᏓ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎧᏁᏌᎢ. ᎪᎯ ᏫᏚᏳᎪᏛ ᎪᏪᎳᏅᎯ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏕᎬᏔᏛ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏑᏕᏘᏴᏓ, ᎤᏚᏃᎯᏍᏔᏍᎧ ᎦᎸᎳᏗᎨ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎠᎦᏍᎩ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᏭᏍᏗᎬᎢ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎾᏍᎩ ᎤᏁᎳᎩ baobabs ᎤᎭ ᎢᎦᏛ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏕᎬᏔᏛ ᏗᏟᎶᏛ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏕᏡᎬ, Ꮭ ᎧᎵ ᏗᏙᎳᎩ ᏗᏟᎶᏛ ᎠᎴ ᎾᏊ ᏰᎵ ᎠᏩᏛᏗ, ᎠᎴ ᏄᏓᎷᎸᎾ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎶᏒᏍᏔᏅ 10-11 m ᎠᏰᎵ ᎠᏍᏓᏅᏅ.
 
 ᎯᎠ stoutest ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎧᏃᎯᏯᏍᏗ baobabs, ᎠᎴ:
-# [[Taxodium mucronatum|Montezuma ᏗᏓᏂᏐᏗ]] ''Taxodium mucronatum'': '''11.42 m''', [[Árbol del Tule]], Santa Maria del Tule, [[Oaxaca]], [[Mexico]] (. F. Mitchell, ''ᎠᏰᎵ ᏚᎾᏙᏢᏒ Dendrology ᎤᎾᏙᏢᎯ ᏑᏕᏘᏴᏓ ᎪᏪᎵ 1983'': 93, 1984).
+# [[Taxodium mucronatum|Montezuma ᏗᏓᏂᏐᏗ]] ''Taxodium mucronatum'': '''11.42 m''', [[Árbol del Tule]], Santa Maria del Tule, [[Oaxaca]], [[Mexico|ᎠᏂᏍᏆᏂᎢ]] (F. Mitchell, ''ᎠᏰᎵ ᏚᎾᏙᏢᏒ Dendrology ᎤᎾᏙᏢᎯ ᏑᏕᏘᏴᏓ ᎪᏪᎵ 1983'': 93, 1984).
 # [[Sequoiadendron|ᏂᎬᎢ Sequoia]] ''Sequoiadendron giganteum'': '''8.85 m''', [[General Grant tree|ᏂᎦᎥ ᎠᎵᏍᎪᎸᏙᏗ ᏡᎬ]], [[Grant Grove|ᎠᎵᏍᎪᎸᏙᏗ ᎸᏱ]], California ([http://www.conifers.org/cu/se2/index.htm Gymnosperm Database])
 # [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]] ''Sequoia sempervirens'': '''7.44 m''', ᎢᎪᏗ ᎤᏍᏗ ᎤᏪᏴ Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, California ([http://www.conifers.org/cu/se/index.htm Gymnosperm Database])
 
