translating Mexico -> ᎠᏂᏍᏆᏂᎢ

--- a/ᏗᎦᎶᎪᏗ.mw
+++ b/ᏗᎦᎶᎪᏗ.mw
@@ -31,7 +31,7 @@ Mechanization, ᎯᎠ ᏙᏯᏗᏢ ᏓᏚᏓᎸ ᎨᎦᏓᏅᏖᏗ ᎣᏂᏱᏳ 
 
 gantlai ᎧᏁᏉᏍᎬ ᎤᏅᏔᏂᏓᏍᏗ ᎧᏁᏉᏍᎬ ᎠᎴ ᎠᎾᏛᎯᏍᏗᏍᎬ ᎡᎿᎢ ᎡᎥ ᎾᏍᎩᎾᎢ ᎭᏫᏯ ᎠᎴ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ gantlai ᎤᎾᏛᎯᏍᏔᏅ (ᎾᏍᎩᏯᎢ ᎤᏅᏗ, ᏧᏪᏥ, ᎠᎴ ᎤᏩᏅ) ᎾᎿ ᏂᎪᎯᎸᎢ ᎠᎴᏅᏙᏗ.
 
-ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ ᎢᎦᏛ ᎢᎦᏛ ᏧᏂᎸᏫᏍᏓᏁᏗ [[intensive agriculture|intensive ᏗᎦᎶᎪᏗ]] ᎤᎭ ᏭᏪᏙᎢ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ kanquotsegi ᎧᏃᎮᎸᏗ. ᎯᎠ ᎤᏚᏃᎯᏍᏔᏍᎧ [[sphere of influence|ᎢᎦᎢ ᎢᎦᏘ ᎾᏓᏛᏂᏌᏁᎲ]] ᎠᏰᎲᎩ ᎾᎥᎢ ᎡᏆ ᎤᎦᏔ ᎠᎴ chemical ᏚᎾᏓᏡᎬᎢ, ᎭᏫᏯ ᎠᏛᏅᎢᏍᏔᏅ ᎠᎴ ᎠᎵᏍᏓᏴᏗ processors ᎤᎭ ᏭᏪᏙᎢ ᏗᏓᎴᎲᏍᎬ ᎤᏃᏝᎩ ᎢᏧᎳ ᎭᏫᏂᏗᏢ ᎯᎠ ᏓᎦᎶᎩᏍᎬ ᎾᎥ ᏄᎾᏓᎸ ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᏂᎦᎥ ᏴᏫ ᎤᏁᏓᏍᏗ. ᎾᎿᎢ ᎤᎭ ᏭᏪᏙᎢ ᎤᏁᏉᏨᎯ ᎠᎵᏂᎬᏁᏗᎢ ᎢᎦᏛ ᏴᏫ ᏗᎦᏘᎴᎩ ᎢᎦᏛ ᏓᎦᎶᎩᏍᎬ ᎠᎵᏏᎾᎯᏍᏙᏗ, ᎠᎾᏛᎯᏍᏗᏍᎬ ᎯᎸᏍᎩ ᏣᏔᎦ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ ᎠᎴᏂᏙᎲ ᏌᏊ ᏱᏓᏟᎶᏍᏔᏅ. ᏄᏓᎴ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎨᏒᎢ ᎯᎠ ᏗᎦᎪᏗ ᎨᎳᏍᏙᏗ ᎠᏓᏁᎸ ᎢᎦᏛ ᎡᎿᎢ ᎡᎥ Ꮎ ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ [[Bovine Spongiform Encephalopathy|gantlai Spongiform Encephalopathy]] ᎭᏫᎾᏗᏢ ᏩᎦ. ᎾᎿᎢ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎤᏃᏝᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎤᏐᏅᎢ ᎢᏳᎵᏍᏙᏗ Ꮎ intensive ᏗᎦᎶᎪᏗ ᎤᎭ ᎾᎿ ᎯᎠ ᏄᏍᏗᏓᏅ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏧᎳ ᎠᏴ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎦᎵᏣᏙᏗ ᎦᏙᎯ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏟᏒᎢ ᎤᏣᏘᎾ ᎾᎾᎯ ᎯᎠ Mississippi ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ ᎠᎴ ᎤᎭ ᎢᎬᏂᏌᏅᎯ ᎤᏲᎱᏒ ᎤᏓᏓᎸ ᎭᏫᎾᏗᏢ ᎯᎠ ᏰᎵ ᎤᏝᏅᏛ Mexico, ᎭᏢᏃ ᎯᎠ Mississippi empties. Intensive ᏗᎦᎶᎪᏗ ᎾᏍᎩ ᎾᏍᏇ depletes ᎯᎠ ᏥᏍᏚ ᎯᎠ ᎦᏙᎯ ᎦᏬᎯᎸᏙᏗ iyuwakodi ᎠᎴ ᎯᎠ ᎤᎵᏍᏛ ᎢᏳᎵᏍᏙᏗ ᎨᏒᎢ Ꮎ ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᎧᎸᎬ, ᎭᏢᏃ ᎢᎦᏛ ᎯᎠ ᎤᎪᏗᏗ utvhisdi farmland ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᏥᏄᏍᏛᎩ ᎤᎦᏔᎲᏒ ᎾᎾᎯ ᎢᎾᎨ ᎾᎥᎢ intensive ᏗᎦᎶᎪᏗ.
+ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ ᎢᎦᏛ ᎢᎦᏛ ᏧᏂᎸᏫᏍᏓᏁᏗ [[intensive agriculture|intensive ᏗᎦᎶᎪᏗ]] ᎤᎭ ᏭᏪᏙᎢ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ kanquotsegi ᎧᏃᎮᎸᏗ. ᎯᎠ ᎤᏚᏃᎯᏍᏔᏍᎧ [[sphere of influence|ᎢᎦᎢ ᎢᎦᏘ ᎾᏓᏛᏂᏌᏁᎲ]] ᎠᏰᎲᎩ ᎾᎥᎢ ᎡᏆ ᎤᎦᏔ ᎠᎴ chemical ᏚᎾᏓᏡᎬᎢ, ᎭᏫᏯ ᎠᏛᏅᎢᏍᏔᏅ ᎠᎴ ᎠᎵᏍᏓᏴᏗ processors ᎤᎭ ᏭᏪᏙᎢ ᏗᏓᎴᎲᏍᎬ ᎤᏃᏝᎩ ᎢᏧᎳ ᎭᏫᏂᏗᏢ ᎯᎠ ᏓᎦᎶᎩᏍᎬ ᎾᎥ ᏄᎾᏓᎸ ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᏂᎦᎥ ᏴᏫ ᎤᏁᏓᏍᏗ. ᎾᎿᎢ ᎤᎭ ᏭᏪᏙᎢ ᎤᏁᏉᏨᎯ ᎠᎵᏂᎬᏁᏗᎢ ᎢᎦᏛ ᏴᏫ ᏗᎦᏘᎴᎩ ᎢᎦᏛ ᏓᎦᎶᎩᏍᎬ ᎠᎵᏏᎾᎯᏍᏙᏗ, ᎠᎾᏛᎯᏍᏗᏍᎬ ᎯᎸᏍᎩ ᏣᏔᎦ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ ᎠᎴᏂᏙᎲ ᏌᏊ ᏱᏓᏟᎶᏍᏔᏅ. ᏄᏓᎴ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎨᏒᎢ ᎯᎠ ᏗᎦᎪᏗ ᎨᎳᏍᏙᏗ ᎠᏓᏁᎸ ᎢᎦᏛ ᎡᎿᎢ ᎡᎥ Ꮎ ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ [[Bovine Spongiform Encephalopathy|gantlai Spongiform Encephalopathy]] ᎭᏫᎾᏗᏢ ᏩᎦ. ᎾᎿᎢ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎤᏃᏝᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎤᏐᏅᎢ ᎢᏳᎵᏍᏙᏗ Ꮎ intensive ᏗᎦᎶᎪᏗ ᎤᎭ ᎾᎿ ᎯᎠ ᏄᏍᏗᏓᏅ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏧᎳ ᎠᏴ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎦᎵᏣᏙᏗ ᎦᏙᎯ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏟᏒᎢ ᎤᏣᏘᎾ ᎾᎾᎯ ᎯᎠ Mississippi ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ ᎠᎴ ᎤᎭ ᎢᎬᏂᏌᏅᎯ ᎤᏲᎱᏒ ᎤᏓᏓᎸ ᎭᏫᎾᏗᏢ ᎯᎠ ᏰᎵ ᎤᏝᏅᏛ [[ᎠᏂᏍᏆᏂᎢ]], ᎭᏢᏃ ᎯᎠ Mississippi empties. Intensive ᏗᎦᎶᎪᏗ ᎾᏍᎩ ᎾᏍᏇ depletes ᎯᎠ ᏥᏍᏚ ᎯᎠ ᎦᏙᎯ ᎦᏬᎯᎸᏙᏗ iyuwakodi ᎠᎴ ᎯᎠ ᎤᎵᏍᏛ ᎢᏳᎵᏍᏙᏗ ᎨᏒᎢ Ꮎ ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᎧᎸᎬ, ᎭᏢᏃ ᎢᎦᏛ ᎯᎠ ᎤᎪᏗᏗ utvhisdi farmland ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᏥᏄᏍᏛᎩ ᎤᎦᏔᎲᏒ ᎾᎾᎯ ᎢᎾᎨ ᎾᎥᎢ intensive ᏗᎦᎶᎪᏗ.
 
 ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎠᏓᏁᎸ ᏚᎾᏓᏡᎬᎢ Ꮎ ᎤᏙᎷᏬᏗ ᎢᏤ ᎢᏗᎦᎪᏘ [[seed|ᎤᎦᏔ]] ᎬᏗᏍᎬᎢ [[genetic engineering|ᎠᏛᎯᏍᏙᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ]] ᎤᎭ ᎠᎾᏓᏁᎲ ᎤᎦᏔ ᎾᏍᏋ tohi adedi ᏗᏂᎶᎩᏍᎩ ᎭᏫᎾᏗᏢ ᎤᏣᏘ ᎯᎠ ᎤᏠᏱ ᎦᎶᎯᏍᏗ Ꮎ ᎡᎵᏍ software ᎨᏒᎢ tohi adedi ᏗᎦᎴᏴᏗᏍᎩ. ᎪᎯ ᎤᎭ ᎦᏁᏟᏴᏓ ᎯᎠ ᎤᏘᏴᎯ ᎤᎳᏂᎬᎬ ᎭᏫᎾᏗᏢ ᎠᏑᏰᏍᏗ ᎯᎠ ᎤᎦᏔ ᏚᎾᏓᏡᎬᎢ, ᎠᎵᏍᎪᎸᏙᏗ ᎠᏂ ᎠᏃᏪᎵᏍᎬ ᏓᏓᎴᏂᏍᎬ ᎠᎴ ᏄᏍᏗᏓᏅ ᏧᏩᎫᏔᏅᏒ ᎾᏛᎦᏅᎾ . ᎢᎦᏛ ᎠᏘᏲᎯᎭ ᎾᏍᎩ ᎯᎠ ᏚᎾᏓᏡᎬᎢ ᎠᎴ ᏧᏚᎪᏔᏁᎸ [[biopiracy]].
 
