translating Mexico -> ᎠᏂᏍᏆᏂᎢ

--- a/ᏎᎷ.mw
+++ b/ᏎᎷ.mw
@@ -69,9 +69,9 @@
 # ᎠᎴ ᏐᎢ ᏗᎦᏎᏍᏙᏗ.
 [[File:Guila Naquitz cave.jpg|right|thumbnail|Guila Naquitz ᎤᏍᏔᎦᎳᏱ, ᏄᏍᏗᏓᏅ  ᎯᎠ lyudetiyvda ᎤᎾᏅᏛ ᎤᎾᎵᏃᎯᏴᎯ  ᏎᎷ]]
 
-ᎯᎠ ᎦᎷᎯᏍᏗ ᏎᎷ ᎨᏒᎢ ᎾᏍᎩᎾ ᎤᏁᏉᏨ researchers—[[archaeologist|ᏗᏕᎶᏆᏍᎩ]], [[genetics|geneticists]], [[ethnobotany|ethnobotanists]], geographers, ᎠᎴ ᎤᏠᏯᏍᏗ.  ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎨᏒᎢ ᏁᎵᏒ ᎾᎥᎢ ᎢᎦᏛ ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᏂᏛᎴᏅᏓ 7,500 12,000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ (ᎪᏢᎯᏌᏅ ᎾᏍᎩᎾᎢ ᎡᎶᎯ ᏗᎧᏃᎩᏛ). ᎾᏞᎬ ᎠᏛᎯᏍᏙᏗ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗ Ꮎ ᏎᎷ ᎦᎷᎯᏍᏗ occured 9000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ ᎭᏫᎾᏗᏢ ᎠᏰᎵ  ᎺᎯᎪ, ᎠᏎᏱᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᏂᎦᏛᎢ ᎠᏰᎵ [[Oaxaca]] ᎠᎴ [[Jalisco]].[http://www.maizegenetics.net/publications/Matsuoka2002PNAS.pdf] ᎯᎠ ᎨᏯᏔᎯ teosinte ᎤᎪᏗᏗ ᎤᏠᏱ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏎᎷ ᎠᏛᏍᎦ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ ᎯᎠ [[Balsas River|Balsas ᎤᏪᏴ]]. tsuqagutanvsv ᎤᎾᎵᏃᎯᏴᎯ ᎢᎬᏱ ᏎᎷ ᎠᏫᏗᏍᎩ, ᎠᏩᏛᏗ ᎾᎾᎢ Guila Naquitz ᎤᏍᏔᎦᎳᏱ ᎭᏫᎾᏗᏢ ᎯᎠ Oaxaca ᎤᎨᏓᎵᏴ, ᎢᏳ ᎢᎪᎯ ᎦᏐᎯ ᎾᎥᏂᎨᏍᏙᏗ 6,250 ᏧᏕᏘᏴᏓ (ᎪᏢᎯᏌᏅ; 3450 BC, uncorrected); ᎯᎠ lyudetiyvda ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎤᏍᏔᎦᎳᏱ ᎾᎥᏂᎨ [[Tehuacan]], Puebla, ᎢᏳ ᎢᎪᎯ ca. 2750 BC. ᎤᏍᏗ ᏧᎾᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᎤᏙᏢᏒ iyuwakodi ca. 1100 BC ᎯᎳᎪ ᎢᏳ ᎡᏆ ᏗᎦᏁᏟᏴᏍᏗ ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ Mexican ᎤᏍᏔᎦᎳᏱ: ᏎᎷ ᏧᏓᎴᎿᎢ ᎤᎵᏍᏓᎯᎨ ᎤᏁᏉᏨᎯ ᎠᎴ tsuqagutanvsv teosinte ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᏓᏍᏆᏂᎪᏔᏅ.
+ᎯᎠ ᎦᎷᎯᏍᏗ ᏎᎷ ᎨᏒᎢ ᎾᏍᎩᎾ ᎤᏁᏉᏨ researchers—[[archaeologist|ᏗᏕᎶᏆᏍᎩ]], [[genetics|geneticists]], [[ethnobotany|ethnobotanists]], geographers, ᎠᎴ ᎤᏠᏯᏍᏗ.  ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎨᏒᎢ ᏁᎵᏒ ᎾᎥᎢ ᎢᎦᏛ ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᏂᏛᎴᏅᏓ 7,500 12,000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ (ᎪᏢᎯᏌᏅ ᎾᏍᎩᎾᎢ ᎡᎶᎯ ᏗᎧᏃᎩᏛ). ᎾᏞᎬ ᎠᏛᎯᏍᏙᏗ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗ Ꮎ ᏎᎷ ᎦᎷᎯᏍᏗ occured 9000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ ᎭᏫᎾᏗᏢ ᎠᏰᎵ  ᎺᎯᎪ, ᎠᏎᏱᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᏂᎦᏛᎢ ᎠᏰᎵ [[Oaxaca]] ᎠᎴ [[Jalisco]].[http://www.maizegenetics.net/publications/Matsuoka2002PNAS.pdf] ᎯᎠ ᎨᏯᏔᎯ teosinte ᎤᎪᏗᏗ ᎤᏠᏱ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏎᎷ ᎠᏛᏍᎦ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ ᎯᎠ [[Balsas River|Balsas ᎤᏪᏴ]]. tsuqagutanvsv ᎤᎾᎵᏃᎯᏴᎯ ᎢᎬᏱ ᏎᎷ ᎠᏫᏗᏍᎩ, ᎠᏩᏛᏗ ᎾᎾᎢ Guila Naquitz ᎤᏍᏔᎦᎳᏱ ᎭᏫᎾᏗᏢ ᎯᎠ Oaxaca ᎤᎨᏓᎵᏴ, ᎢᏳ ᎢᎪᎯ ᎦᏐᎯ ᎾᎥᏂᎨᏍᏙᏗ 6,250 ᏧᏕᏘᏴᏓ (ᎪᏢᎯᏌᏅ; 3450 BCE, uncorrected); ᎯᎠ lyudetiyvda ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎤᏍᏔᎦᎳᏱ ᎾᎥᏂᎨ [[Tehuacan]], Puebla, ᎢᏳ ᎢᎪᎯ ca. 2750 BCE. ᎤᏍᏗ ᏧᎾᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᎤᏙᏢᏒ iyuwakodi ca. 1100 BC ᎯᎳᎪ ᎢᏳ ᎡᏆ ᏗᎦᏁᏟᏴᏍᏗ ᎤᎾᏄᎪᏨ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎩ ᏂᏛᎴᏅᏓ Mexican ᎤᏍᏔᎦᎳᏱ: ᏎᎷ ᏧᏓᎴᎿᎢ ᎤᎵᏍᏓᎯᎨ ᎤᏁᏉᏨᎯ ᎠᎴ tsuqagutanvsv teosinte ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᏓᏍᏆᏂᎪᏔᏅ.
 
-ᎠᏎᏱᎩ ᏥᏄᏍᏗ ᎢᎬᏱ ᏥᏄᏍᏗ 1500 BC, ᏎᎷ ᎤᎴᏅᎲ ᎠᏰᏍᏛᏗ ᏂᎬᎢ ᎠᎴ ᎤᎵᏍᏓᎯᎨ.  ᏥᏄᏍᏗ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎢᏤ ᎥᎦᏔᎲᎢ, ᎢᏤ ᎬᏔᏂᏓᏍᏗ ᎨᏒᎩ ᎤᏙᎷᏩᏛᏓ ᎠᎴ ᎢᏤ varieties ᎠᏑᏰᏛ ᎤᏟ ᎢᏲᏍᏛ ᎢᏯᏓᏛᏁᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎠᏛᏅᎢᏍᏔᏅ.  ᏎᎷ ᏥᏄᏍᏛᎩ ᎯᎠ ᏕᎬᏔᏛ ᎠᎵᏍᏓᏴᏗ, ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᏕᎬᏔᏛ, ᎤᎪᏗᏗ ᎯᎠ [[pre-Columbian|ᎬᏂᎨᏒ ᏄᏍᏛᎢ-Columbian]] [[North America|ᎤᏴᏢ ᎠᎺᎵᎨn]], [[Mesoamerican]], [[South American|ᎤᎦᎾᏭ ᏴᏩᏁᎬ]], ᎠᎴ [[Caribbean]] ᎥᎦᏔᎲᎢ.  ᎾᎯᏳᎨᏒ ᎯᎠ [[1st millennium|1st ᎠᎴᏫᏍᏙᏗ]] CE (ᏂᏓᏙᎳᎬᎾ), ᏎᎷ ᏗᎦᎶᎪᏗ ᎠᏰᏍᏛᏗ ᏂᏛᎴᏅᏓ [[Mexico]] ᎾᎾᎯ ᎯᎠ [[U.S. Southwest|Ꭴ.. Southwest]] ᎠᎴ ᎠᎴᏫᏍᏙᏗ ᎣᏂᏯᎨᏍᏙᏗ ᎾᎾᎯ [[northeastern U.S.|northeastern Ꭴ..]] ᎠᎴ ᎤᎦᎾᏭ ᎧᎸᎬ Canada, ᏧᎾᏍᏗ ᎯᎠ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᏥᏄᏍᏗ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏧᎸᏌᏛᎯ ᎡᏆ ᎠᏙᎯ ᎢᎾᎨ ᎠᎴ grassland ᎡᏍᎦᏂ ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏤ ᏠᎨᏏ ᎠᏫᏒ.  [[Gavin Menzies]], ᎭᏫᎾᏗᏢ ᎤᏤᎵ ᎪᏪᎵ ''[[1421 hypothesis|1421 - ᎯᎠ ᏑᏕᏘᏴᏓ ᎠᎦᎾᏫᏗᏍᎩ ᎪᎷᏩᏛᏓ ᎯᎠ ᎡᎶᎯ]]'', ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᎤᎾᏛᏁᎸᏗ Ꮎ ᏎᎷ ᏥᏄᏍᏛᎩ ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ transplanted ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎺᎵᎨ ᎾᎥᎢ ᎯᎠ Chinese ᎾᎯᏳᎨᏒ ᎤᎾᏤᎵ ᎡᏆ ᎠᏌᎳᏙᏗ ᎯᎠ 15th sqohitsuqui tsudetiyvdi (ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯ ᎠᏆᏤᎵ ᎠᏛᏗ ᎨᏒᎢ ᏂᎬᎢ disputed [http://www.hallofmaat.com/modules.php?name=Articles&file=article&sid=91]). 
+ᎠᏎᏱᎩ ᏥᏄᏍᏗ ᎢᎬᏱ ᏥᏄᏍᏗ 1500 BC, ᏎᎷ ᎤᎴᏅᎲ ᎠᏰᏍᏛᏗ ᏂᎬᎢ ᎠᎴ ᎤᎵᏍᏓᎯᎨ.  ᏥᏄᏍᏗ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎢᏤ ᎥᎦᏔᎲᎢ, ᎢᏤ ᎬᏔᏂᏓᏍᏗ ᎨᏒᎩ ᎤᏙᎷᏩᏛᏓ ᎠᎴ ᎢᏤ varieties ᎠᏑᏰᏛ ᎤᏟ ᎢᏲᏍᏛ ᎢᏯᏓᏛᏁᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎠᏛᏅᎢᏍᏔᏅ.  ᏎᎷ ᏥᏄᏍᏛᎩ ᎯᎠ ᏕᎬᏔᏛ ᎠᎵᏍᏓᏴᏗ, ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᏕᎬᏔᏛ, ᎤᎪᏗᏗ ᎯᎠ [[pre-Columbian|ᎬᏂᎨᏒ ᏄᏍᏛᎢ-Columbian]] [[ᏧᏴᏢ ᎠᎹᏰᎵ]], [[Mesoamerican]], [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], ᎠᎴ [[Caribbean]] ᎥᎦᏔᎲᎢ.  ᎾᎯᏳᎨᏒ ᎯᎠ [[1st millennium|1st ᎠᎴᏫᏍᏙᏗ]] CE (ᏂᏓᏙᎳᎬᎾ), ᏎᎷ ᏗᎦᎶᎪᏗ ᎠᏰᏍᏛᏗ ᏂᏛᎴᏅᏓ [[Mexico|ᎠᏂᏍᏆᏂᎢ]] ᎾᎾᎯ ᎯᎠ [[U.S. Southwest|Ꭴ.. Southwest]] ᎠᎴ ᎠᎴᏫᏍᏙᏗ ᎣᏂᏯᎨᏍᏙᏗ ᎾᎾᎯ [[northeastern U.S.|northeastern Ꭴ..]] ᎠᎴ ᎤᎦᎾᏭ ᎧᎸᎬ Canada, ᏧᎾᏍᏗ ᎯᎠ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᏥᏄᏍᏗ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏧᎸᏌᏛᎯ ᎡᏆ ᎠᏙᎯ ᎢᎾᎨ ᎠᎴ grassland ᎡᏍᎦᏂ ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏤ ᏠᎨᏏ ᎠᏫᏒ.  [[Gavin Menzies]], ᎭᏫᎾᏗᏢ ᎤᏤᎵ ᎪᏪᎵ ''[[1421 hypothesis|1421 - ᎯᎠ ᏑᏕᏘᏴᏓ ᎠᎦᎾᏫᏗᏍᎩ ᎪᎷᏩᏛᏓ ᎯᎠ ᎡᎶᎯ]]'', ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᎤᎾᏛᏁᎸᏗ Ꮎ ᏎᎷ ᏥᏄᏍᏛᎩ ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ transplanted ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎺᎵᎨ ᎾᎥᎢ ᎯᎠ Chinese ᎾᎯᏳᎨᏒ ᎤᎾᏤᎵ ᎡᏆ ᎠᏌᎳᏙᏗ ᎯᎠ 15th sqohitsuqui tsudetiyvdi (ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯ ᎠᏆᏤᎵ ᎠᏛᏗ ᎨᏒᎢ ᏂᎬᎢ disputed [http://www.hallofmaat.com/modules.php?name=Articles&file=article&sid=91]). 
 
 ᎾᏍᎩ ᎨᏒᎢ ᎤᎧᏁᎳ ᎦᏙ ᎤᏍᏗ precipitated Ꮝ ᎦᎷᎯᏍᏗ, ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎢᎦᏛ ᎯᎠ ᎨᏯᏔᎯ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎨᏒᎢ ᎦᏟᏐᏗᎩ ᎤᏍᏗ ᎠᎴ ᎠᏍᏓᏯ ᎣᏤᎵ ᎢᎬᏁᎯ ᎾᏍᏋ ᎦᎳᏅᎯ ᎾᎿ ᎢᏴ, ᏥᏄᏍᏗ ᎠᏂᏏᏴᏫᎭ ᎠᏰᎵ ᎨᏒᎢ ᎠᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᎠᏍᏓᏯ bi-ᎠᏍᏚᏙᏗ ᎤᏯᏍᎦ.  ᏱᏂᎬᏛᎾ, George ᎠᏍᏚᏙᏗ ᎤᏓᏎᎮᎸᎩ Ꮎ ᎯᎠ ᏚᎷᏍᏘ teosinte ᎠᎴ ᎢᏳᏊ ᏱᏂᎦᎳᏍᏗ "popped" ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏲᏨᎯ, ᎾᏍᎩᏯᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᎾᏔᏍᎩᏍᎩ.   ᎢᎦᏛ ᎤᎭ argued Ꮎ ᎾᏍᎩ ᏯᏓᎢᏗᏏ ᎤᎭ ᎠᎩᏒᎯ ᎦᏟᏐᏗᎩ ᎤᎪᏗᏗ ᎤᎾᏁᎶᏔᏅ [[selective breeding|selective ᎧᏁᏉᏍᎬ]] ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎡᏆ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᏗᎦᎴᏂ ᎾᏍᎩᎾᎢ ᎠᏏᎾᏍᏛ ᏗᎦᎶᎪᏗ.  ᏱᏂᎬᏛᎾ, ᏗᎦᏎᏍᏙᏗ ᎯᎠ ᏧᏠᎯᏍᏗ ᎢᏳᏊ ᏱᏂᎦᎳᏍᏗ ᎪᏢᏅᎯ ᎾᎥᎢ intercrossing teosinte ᎠᎴ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏎᎷ ᎧᏁᎢᏍᏙᏗ Ꮎ ᎪᎯ ᏗᎦᏘᎸᏓ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᏬᎯᏳᏒ.
 
