translating Mexico -> ᎠᏂᏍᏆᏂᎢ

--- a/ᏙᏒᏓᎵ.mw
+++ b/ᏙᏒᏓᎵ.mw
@@ -27,7 +27,7 @@
 * [[Pseudomyrmecinae]]
 }}
 
-'''ᏙᏒᏓᎵ''' [[social insect|ᎠᎾᏓᏟᏏᏍᎬ ᏨᏍᎪᏱ]]Ꮎ ᎠᏓᏣᎸᏗ ᎯᎠ ᎤᏠᏱ ᎠᏓᏅᏍᏗ ᏥᏄᏍᏗ ᎯᎠ [[Hymenoptera|ᎧᎾᏥᏍᏕᏥ ᎠᎴ ᎾᏍᏋ]]. ᎤᏅᏌ ᎾᏍᎩᎾ ᎤᏁᏉᏨ ᎢᎬᏂᏏᏍᎩ ᎤᎾᏤᎵ ᎦᎸᎳᏗᎨᏍᏗ ᎤᎾᏙᏢᏅᎯ [[colony (biology)|ᎨᏥᏅᏏᏓ]] ᎠᎴ ᎤᏁᏍᎩᎸᏒ ᎦᏙ ᎤᏍᏗ ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎤᏠᏯᏍᏗ ᎢᏧᏆᏗᏅᏓ ᏗᏂᏏᏴᏫᎭ. ᏗᏂᏏᏴᏫᎭ ᎤᏂᏯᏙᎸ ᎾᏀᎢ ᎤᏛᎯᏍᏗ ᎠᎨᏴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎤᏛᎯᏍᏗ ᎠᏍᎦᏯ (ᎠᏠᏯᏍᏗ) ᎠᎴ ᎠᎨᏴ (ᎤᎬᏫᏳ ᎠᏂᏁᎳ). ᎨᏥᏅᏏᏓ ᏰᎵᏇ ᎠᎦᏁᎸ ᎠᎴ ᎬᏙᏗ ᎠᏯᏖᎾ ᎡᏍᎦᏂ ᎦᏙᎯ ᎠᎵᏍᏕᎸᏗ ᎠᏂ. [[Ant colony|ᏙᏒᏓᎵ ᎨᏥᏅᏏᏓ]] ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᏄᏍᏛ ᎧᏃᎮᎸ ᏥᏄᏍᏗ [[superorganism]]ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ ᎦᎾᏄᎪᎦ ᎠᏂᎪᏍᏙᏗ ᏥᏄᏍᏗ ᏏᏴᏫ ᎬᏂᎨᏒ ᏄᏍᏛᎢ.
+'''ᏙᏒᏓᎵ''' [[social insect|ᎠᎾᏓᏟᏏᏍᎬ ᏨᏍᎪᏱ]] Ꮎ ᎠᏓᏣᎸᏗ ᎯᎠ ᎤᏠᏱ ᎠᏓᏅᏍᏗ ᏥᏄᏍᏗ ᎯᎠ [[Hymenoptera|ᎧᎾᏥᏍᏕᏥ ᎠᎴ ᎾᏍᏋ]]. ᎤᏅᏌ ᎾᏍᎩᎾ ᎤᏁᏉᏨ ᎢᎬᏂᏏᏍᎩ ᎤᎾᏤᎵ ᎦᎸᎳᏗᎨᏍᏗ ᎤᎾᏙᏢᏅᎯ [[colony (biology)|ᎨᏥᏅᏏᏓ]] ᎠᎴ ᎤᏁᏍᎩᎸᏒ ᎦᏙ ᎤᏍᏗ ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎤᏠᏯᏍᏗ ᎢᏧᏆᏗᏅᏓ ᏗᏂᏏᏴᏫᎭ. ᏗᏂᏏᏴᏫᎭ ᎤᏂᏯᏙᎸ ᎾᏀᎢ ᎤᏛᎯᏍᏗ ᎠᎨᏴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎤᏛᎯᏍᏗ ᎠᏍᎦᏯ (ᎠᏠᏯᏍᏗ) ᎠᎴ ᎠᎨᏴ (ᎤᎬᏫᏳ ᎠᏂᏁᎳ). ᎨᏥᏅᏏᏓ ᏰᎵᏇ ᎠᎦᏁᎸ ᎠᎴ ᎬᏙᏗ ᎠᏯᏖᎾ ᎡᏍᎦᏂ ᎦᏙᎯ ᎠᎵᏍᏕᎸᏗ ᎠᏂ. [[Ant colony|ᏙᏒᏓᎵ ᎨᏥᏅᏏᏓ]] ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᏄᏍᏛ ᎧᏃᎮᎸ ᏥᏄᏍᏗ [[superorganism]]ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ ᎦᎾᏄᎪᎦ ᎠᏂᎪᏍᏙᏗ ᏥᏄᏍᏗ ᏏᏴᏫ ᎬᏂᎨᏒ ᏄᏍᏛᎢ.
 
 ᏙᏒᏓᎵ ᎤᎭ ᎨᏥᏅᏏᏓ ᎾᎥᏂᎨᏍᏗ ᏂᎦᎥᎢ ᎦᏙᎯ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᏀᎾ [[Earth|ᎡᎶᎯ]]. ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᏚᏙᏢᏒᎢ ᎦᎷᎶᎩ ᎡᎯᏯᎢ ᏙᏒᏓᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[Antarctica]], [[Greenland|ᎢᏤ ᎢᏳᏍᏗ ᎦᏙᎯ]], [[Iceland|ᎤᏁᏍᏓᎳ ᎦᏙᎯ]], [[Kat]], ᎠᎴ ᎯᎠ [[Hawaii|Hawaiian ᎯᎸᏍᎩ ᎠᎹᏰᎵ]].<ref>[http://www.hear.org/ants/ The invasive ants of Hawaii]</ref> ᎤᏅᏌ ᏰᎵᏇ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎦᎸᎳᏗᏢ 15-25% ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᎾᏝᎢ [[biomass (ecology)|biomass]].<ref name="schultz">Schultz, ᏧᏠᎯᏍᏗ R. 2000 ᎭᏫᎾᏗᏢ ᎠᏯᏍᏗ ᏙᏒᏓᎵ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ. PNAS 97(26):14928-14029 [http://www.pnas.org/cgi/content/full/97/26/14028 Full text]</ref> ᎦᎸᎳᏗᏢ ᏦᎢᏁ (33%) ᎯᎠ ᎡᎶᎯ ᎦᎾᏝᎢ biomass ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎪᏢᏅᎯ ᎦᎸᎳᏗᏢ ᏙᏒᏓᎵ ᎠᎴ [[termite|ᎠᏥᏅᏏᏓᏍᏗ]].<ref name="holldobler90">Hölldobler, Bert, ᎠᎴ E. O. Wilson. 1990. ᎯᎠ ᏙᏒᏓᎵ. Harvard ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ, ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏒᏢᎢ, Massachusetts.</ref>
 
@@ -178,7 +178,7 @@
 ==== ᏙᏒᏓᎵ ᎠᎵᏍᏓᏴᎲᏍᎬ ====
 {{main|Entomophagy}}
 ᏙᏒᏓᎵ ᎠᎴ ᎤᎾᏤᎵ larvae ᎦᏓᎭ ᎭᏫᎾᏗᏢ ᏄᏓᎴᎿᎥ ᎢᎦᏛᎭ ᎯᎠ ᎡᎶᎯ.
-ᎭᏫᎾᏗᏢ [[Mexico]], larvae ''ᎠᎵᏍᏓᏴᏗ ᎦᏃᎸᎥᏍᎬ'' ᏙᏒᏓᎵ, ᎤᎾᏅᏛ ᏀᎾ ᎢᏴ ᏥᏄᏍᏗ ''[[ants that eat|ᏙᏒᏓᎵ Ꮎ ᎠᎩᏍᏗ]]'' ᎠᎦᏎᏍᏔᏅ ᎡᏆ ᎤᏓᏂᎳᎯᎨ. ᎭᏫᎾᏗᏢ ᎯᎠ [[Colombia]]n ᏗᎦᎸᏫᏍᏓᏁᏗ [[Santander Department|Santander]] Hormigas Culodnas (ᎠᏨᏍᏓᏗ. : "ᎦᎵᏦᎯᏓ ᏥᏄᏍᏗ ᏙᏒᏓᎵ") ''[[Atta laevigata]]'' ᎦᎴᏴᏔᏅ ᎬᏃᏛ ᎠᎴ ᎦᏓᎭ. ᎪᎯ ᎧᏃᎮᎸᎯ ᎤᎭ ᎦᎷᏨ ᎡᎳᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎾᏰᎯᏯ [[Guanes]]. ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[Thailand]], ᏙᏒᏓᎵ ᎠᏛᏅᎢᏍᏔᏃᏅᎯ ᎠᎴ ᎦᏓᎭ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᏫᎦᎶᎯᏍᏗ. [[Khorat]] ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎤᏝᏅᏓᏕᎲ ᎦᏃᎯᎸᏒ ᏙᏒᏓᎵ ᎦᏓᎭ ᏥᏄᏍᏗ [[Hors d'œuvre|ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]. ᏧᎣᎳ ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎠᏲᎵ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᏙᏒᏓᎵ ᎤᏅᏌ ᎠᏎᏱᎩ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ Thai ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, Yum (ยำ), ᎭᏫᎾᏗᏢ ᎤᏲᏨᎯ ᎤᏯᏅᎲ Yum Khai Mod Daeng (ยำไข่มดแดง) ᎠᎴ ᎩᎦᎨ ᏙᏒᏓᎵ ᎤᏪᏥ ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, ᎤᏲᏨᎯ Ꮎ ᎦᎷᎦ ᏂᏛᎴᏅᏓ ᎯᎠ Issan ᎠᎴ ᎤᏴᏢ-ᎧᎸᎬᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ Thailand. ᎭᏫᎾᏗᏢ [[South Africa|ᎤᎦᎾᏭ Africa]], ᏙᏒᏓᎵ ᎬᏔᏅᎯ ᎠᎵᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ [[Rooibos]] (''Aspalathus linearis'') ᎦᏚᎷᎪᏗ: ᎤᏅᏌ ᎠᏓᏂᏢᏗ ᎯᎠ ᎦᎪᏘ ᎤᏤᎵ ᎤᎦᏔ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᏀᎢᏳᎢ ᎾᏍᏋ ᎠᎢᏗᎨᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᎾᎥᎢ ᎦᎪᏘ.
+ᎭᏫᎾᏗᏢ [[ᏧᏴᏢ ᎠᎹᏰᎵ]], larvae ''ᎠᎵᏍᏓᏴᏗ ᎦᏃᎸᎥᏍᎬ'' ᏙᏒᏓᎵ, ᎤᎾᏅᏛ ᏀᎾ ᎢᏴ ᏥᏄᏍᏗ ''[[ants that eat|ᏙᏒᏓᎵ Ꮎ ᎠᎩᏍᏗ]]'' ᎠᎦᏎᏍᏔᏅ ᎡᏆ ᎤᏓᏂᎳᎯᎨ. ᎭᏫᎾᏗᏢ ᎯᎠ [[Colombia]]n ᏗᎦᎸᏫᏍᏓᏁᏗ [[Santander Department|Santander]] Hormigas Culodnas (ᎠᏨᏍᏓᏗ. : "ᎦᎵᏦᎯᏓ ᏥᏄᏍᏗ ᏙᏒᏓᎵ") ''[[Atta laevigata]]'' ᎦᎴᏴᏔᏅ ᎬᏃᏛ ᎠᎴ ᎦᏓᎭ. ᎪᎯ ᎧᏃᎮᎸᎯ ᎤᎭ ᎦᎷᏨ ᎡᎳᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎾᏰᎯᏯ [[Guanes]]. ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[Thailand]], ᏙᏒᏓᎵ ᎠᏛᏅᎢᏍᏔᏃᏅᎯ ᎠᎴ ᎦᏓᎭ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᏫᎦᎶᎯᏍᏗ. [[Khorat]] ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎤᏝᏅᏓᏕᎲ ᎦᏃᎯᎸᏒ ᏙᏒᏓᎵ ᎦᏓᎭ ᏥᏄᏍᏗ [[Hors d'œuvre|ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]. ᏧᎣᎳ ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎠᏲᎵ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᏙᏒᏓᎵ ᎤᏅᏌ ᎠᏎᏱᎩ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ Thai ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, Yum (ยำ), ᎭᏫᎾᏗᏢ ᎤᏲᏨᎯ ᎤᏯᏅᎲ Yum Khai Mod Daeng (ยำไข่มดแดง) ᎠᎴ ᎩᎦᎨ ᏙᏒᏓᎵ ᎤᏪᏥ ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, ᎤᏲᏨᎯ Ꮎ ᎦᎷᎦ ᏂᏛᎴᏅᏓ ᎯᎠ Issan ᎠᎴ ᎤᏴᏢ-ᎧᎸᎬᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ Thailand. ᎭᏫᎾᏗᏢ [[South Africa|ᎤᎦᎾᏭ Africa]], ᏙᏒᏓᎵ ᎬᏔᏅᎯ ᎠᎵᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ [[Rooibos]] (''Aspalathus linearis'') ᎦᏚᎷᎪᏗ: ᎤᏅᏌ ᎠᏓᏂᏢᏗ ᎯᎠ ᎦᎪᏘ ᎤᏤᎵ ᎤᎦᏔ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᏀᎢᏳᎢ ᎾᏍᏋ ᎠᎢᏗᎨᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᎾᎥᎢ ᎦᎪᏘ.
 
 [[Charles Thomas Bingham|ᏣᎵ ᏙᎹᏏ ᎾᏍᏋ ᎦᏁᎸ]] ᏓᏓᏚᎬ ᎪᏪᎵ Ꮎ ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[India|ᏗᏓᏁᏍᎩ]], ᎠᎴ ᏂᎦᏅᎯᏒ [[Burma]] ᎠᎴ [[Siam]], ᎦᏯᎸᏗ ᎯᎠ ᎢᏤ ᎢᏳᏍᏗ ᏧᎣᎳ ᏙᏒᏓᎵ (''[[Oecophylla smaragdina]]'') ᎨᏒᎢ ᎢᏯᏓᏛᏁᎸ ᏥᏄᏍᏗ ᏄᎵᏂᎬᎬ ᎬᏙᏗ [[curry|ᎦᏅᎵᏰᏗ]]. [[Saville Kent]], ᎭᏫᎾᏗᏢ ᎯᎠ ''[[Naturalist in Australia|ᏂᎬᏩᏍᏛ ᎭᏫᎾᏗᏢ Australia]]'' ᎤᏬᏪᎳᏅ
 “Beauty, ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᎯᎠ ᎢᏤ ᎢᏳᏍᏗ ᏙᏒᏓᎵ, ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎦᏁᎦ-ᎠᏍᏛᎩ. ᎤᎾᏤᎵ ᎤᎵᎶᎯ, ᎾᎥᏂᎨᏍᏗ ᏰᎵ ᎤᎦᎾᏍᏛ-ᎾᏍᎩᏯᎢ ᎠᏓᎨᏗ ᏰᎵᏊ ᏱᎩ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᎯᎠ ᎢᎬᏱ ᎧᏃᎮᏍᎩ ᎾᎾᎢ ᎤᎾᏤᎵ ᎤᏲᏨᎯ ᎾᎥᎢ ᎯᎠ ᏴᏫ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.” ᎠᏍᏙᎥᎯ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎠᎹ, ᎤᎶᏐᏅ ᎯᎠ ᏄᏍᏛᎢ ᎴᎹᏂ ᏍᏆᏏ, “these ᏙᏒᏓᎵ ᎤᏙᏢᏒ ᎤᎵᎶᎲᏍᎩ ᏧᏄᏦᏍᏔ ᎠᏗᏔᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗ ᎠᏑᏰᏍᏗ ᎾᎥᎢ ᎯᎠ ᎾᏰᎯᏯ ᎤᏴᏢ ᎤᎬᏫᏳ ᎠᏂᏁᎳ ᎦᏙᎯ, ᎠᎴ ᎨᏒᎢ ᎢᏧᎳᎭ ᎤᏓᎵᎮᎵᏤᎸ ᎾᎥᎢ ᎤᎪᏗᏗ European ᏄᏍᏛ ᎠᎩᏍᏗ.”<ref name="beq">Bequaert, J. 1921 ᎠᏂᏍᎧᏱ ᏥᏄᏍᏗ ᎠᎵᏍᏓᏴᏗ. ᏂᎬᏩᏍᏛ ᎧᏃᎮᏍᎩ [http://www.naturalhistorymag.com/editors_pick/1921_03-04_pick.html]</ref>
