--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -49,11 +49,11 @@
 #[[Idaho|ᎠᏓᎰ]], ᎫᏰᏉᎾ 3, 1890
 #[[Wyoming|ᏩᏲᎻ]], ᎫᏰᏉᎾ 10, 1890
 #[[Utah|ᏳᏔ]], ᎤᏃᎸᏔᎾ 4, 1896
-#[[Oklahoma|ᎣᎦᎳᎰ]], ᏅᏓᏕᏆ 16, 1907
+#[[Oklahoma|ᎣᎦᎳᎰᎹ]], ᏅᏓᏕᏆ 16, 1907
 #[[New Mexico|ᏍᏆᏂᏤᏍᏛᎢ]], ᎤᏃᎸᏔᎾ 6, 1912
 #[[Arizona|ᎡᏩᏐᎾ]], ᎥᏍᎩᏱ 14, 1912
 #[[Alaska|ᎠᎳᏍᎦ]], ᎤᏃᎸᏔᎾ 3, 1959
-#[[Hawaii|ᎭᏩᏱ]], ᎦᎶᏂ 21, 1959<ref>[http://www.50states.com/statehood.htm "Statehood Dates."] ''50 ᎧᏃᎮᎭ.'' (retrieved 27 ᏚᎵᏍᏗ 2010)</ref>  
+#[[Hawaii|ᎭᏩᏱ]], ᎦᎶᏂ 21, 1959<ref>[http://www.50states.com/statehood.htm "Statehood Dates."] ''50 ᎧᏃᎮᎭ.'' (retrieved 27 ᏚᎵᏍᏗ 2010)</ref>
 
 ==ᏓᏓᏚᎬ ᎪᏪᎵ==
 <references/>
