--- a/ᎣᎦᎳᎰᎹ.mw
+++ b/ᎣᎦᎳᎰᎹ.mw
@@ -2,7 +2,7 @@
 [[File:Map of USA OK.svg|thumb|200px]]
 '''ᎣᎦᎳᎰᎹ''' ᏍᎦᏚᎩ ᎦᏓᏗ ᏑᏓᎵᏍᎪ ᎤᎶᏒᏍᏗ ᎢᏳᎾᏓᎴᏅᏓ ᎠᏂᏴᏫᏯ ᏃᎴ ᏧᏂᎦᏴᎵ ᎠᏂᏴᏫᏯ ᏃᎴ ᏧᏂᎦᏴᎵᎨᎢ. ᏌᎪᏂᎨ ᏠᎨᏏ ᏂᏓᏳᏓᎴᏅ ᎨᏒ, ᎠᏣᏓ ᎠᏂᏲᏍᎩ ᎧᏁᎲ ᎦᏓᏗ ᎠᏓᏃᏫ ᏂᎦᎵᏍᏗᏍᎬᎢ. ᎠᏰᏟ ᎠᎵᏍᏕᎵᏙᏗ ᏓᏟᎶᏍᏗ ᎠᏟᎯ ᎠᎩᏌᏌ ᎤᏤᎵ ᎠᎵᏍᏕᎵᏙᏗ. ᏯᎾᏌ ᎤᏁᎦᎸᏅ ᎪᏢᏔᏅ, ᎠᏬᎭᎵ ᏧᎩᏓᏟ ᏗᎦᏔᏅ ᎪᏚᏍᏔᏅ. ᏔᎵ ᏳᏓᎴᎩ ᏓᏟᎶᏍᏗ ᏚᏓᎾᏫᏍᏓ ᏙᎯᏭ ᎬᏒ ᎧᏃᎮᏍᎩ. ᏌᏊ ᎦᏅᎾᏩ ᏙᎯᎨᏒ ᎪᎩᏍᏙᏗ ᏃᎴ ᎠᎵᏬᎢ ᎤᏩᎾᎦᏝᏅ. ᏧᏓᎾᏫᏓᏃ ᎨᏒᏃ ᏓᏟᎶᏍᏛ ᎦᏚ ᎠᎵᏍᏕᎵᏙᏗ ᎠᏂᏴᏫᏯ ᏧᏃᏟᏍᏙᏗ ᏃᏈᏏ ᎠᏎᎯᎲ ᎦᎸᎳᏗ ᎠᏓᏂᏖᏢᏅᎢ.
 
-[[Category:ᎠᎹᏰᎵ]]
+[[Category:ᎠᎹᏰᏟ]]
 [[af:Oklahoma]]
 [[ang:Oklahoma]]
 [[ar:أوكلاهوما]]
