translating New Mexico -> ᏍᏆᏂᏤᏍᏛᎢ

--- a/ᎨᏥᎧᎲᏓ_ᎠᏁᎬᎢ.mw
+++ b/ᎨᏥᎧᎲᏓ_ᎠᏁᎬᎢ.mw
@@ -66,7 +66,7 @@
 
 * ᏣᎳᎩ ᎪᏪᎵᏍᎩ [[Robert Conley|Robert ᎪᎯᏳᏙᏗ ᏂᎬᏅ]] ᎢᏯᏓᏛᏁᎸ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ ᎭᏫᎾᏗᏢ ''ᎣᏓᎸ ᏅᎩᏨᎴ ᎧᏃᎩᏍᏗ'' (1992) <ref>ᎪᎯᏳᏙᏗ ᏂᎬᏅ, Robert J. ᎣᏓᎸ ᏅᎩᏨᎴ ᎧᏃᎩᏍᏗ: ᏗᎪᎵᏰᏗ ᎪᏪᎵ ᎯᎠ ᏅᎾᏓᎤᎳᏨᏱ. Norman: Ꭴ ᎣᎦᎳᎰᎻ P, 1992</ref>
 * ᏣᎳᎩ ᎪᏪᎵᏍᎩ [[Diane Glancy]]  ᏗᎪᎵᏰᏗ ᎪᏪᎵ ''ᎦᏌᏙᏯᏍᏗ ᎯᎠ ᎠᎵᏐᏆᎸᏗ: ᏗᎪᎵᏰᏗ ᎪᏪᎵ ᎯᎠ ᏅᎾᏓᎤᎳᏨᏱ'' (1996) ᎨᏒᎢ [[polyvocal]] ᏓᎵᏍᏛ Ꮎ ᎢᏯᏓᏛᏁᎸ ᎯᎠ ᎤᏂᎦᏙᎲᏒ ᎢᏧᎳ ᏣᎳᎩ ᎠᎴ ᎤᏁᎬ ᎤᏂᎦᏙᎲᏒ ᏀᎾ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ. <ref>Glancy, Diane. ᎦᏌᏙᏯᏍᏗ ᎯᎠ ᎠᎵᏐᏆᎸᏗ: ᏗᎪᎵᏰᏗ ᎪᏪᎵ ᎯᎠ ᏅᎾᏓᎤᎳᏨᏱ. ᏅᏯᎩ: Harcourt ᏕᎦᏂᏴᏛ, 1996</ref>
-* [[Forrest Carter|ᎾᏍᎩᎾᎢ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎡᏙᎵᏙᎲ]], ᎦᎪ ᎠᏓᎳᏍᏛᏁᏗ ᏥᏄᏍᏗ ᏣᎳᎩ ᎧᏃᎮᎸᏍᎩ ᎧᏃᎮᏗ, ᎪᏪᎵᎠ ᎬᏩᏚᏫᏛ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ ᎭᏫᎾᏗᏢ ''ᎯᎠ ᏗᏕᎶᏆᏍᏗ ᎤᏍᏗ ᏡᎬ'' (1976).<ref>ᎡᏙᎵᏙᎲ, ᎾᏍᎩᎾᎢ ᎠᏣᏪᏐᎸᏍᏙᏗ. ᎯᎠ ᏗᏕᎶᏆᏍᏗ ᎤᏍᏗ ᏡᎬ: ᎤᏙᎯᏳ ᎧᏃᎮᎸᏍᎩ. Albuquerque: Ꭴ ᎢᏤ Mexico P, 1986 [1976]</ref>
+* [[Forrest Carter|ᎾᏍᎩᎾᎢ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎡᏙᎵᏙᎲ]], ᎦᎪ ᎠᏓᎳᏍᏛᏁᏗ ᏥᏄᏍᏗ ᏣᎳᎩ ᎧᏃᎮᎸᏍᎩ ᎧᏃᎮᏗ, ᎪᏪᎵᎠ ᎬᏩᏚᏫᏛ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ ᎭᏫᎾᏗᏢ ''ᎯᎠ ᏗᏕᎶᏆᏍᏗ ᎤᏍᏗ ᏡᎬ'' (1976).<ref>ᎡᏙᎵᏙᎲ, ᎾᏍᎩᎾᎢ ᎠᏣᏪᏐᎸᏍᏙᏗ. ᎯᎠ ᏗᏕᎶᏆᏍᏗ ᎤᏍᏗ ᏡᎬ: ᎤᏙᎯᏳ ᎧᏃᎮᎸᏍᎩ. Albuquerque: Ꭴ ᏍᏆᏂᏤᏍᏛᎢ P, 1986 [1976]</ref>
 * ᎤᎪᏗᏗ ᎢᏗᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ Glenn J. Twist's ᎤᏓᏂᏝᏅ ''ᎠᏍᏆᏂᎪᏒᏗ ᎣᏓᎸ ᎠᏓᏃᎮᏗ'' ᎢᏯᏓᏛᏁᎸ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ ᎠᎴ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᏓᏓᏘᏂᏒ ᎢᏳᏩᎪᏗ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ <ref>ᎠᏍᏕᏯᏍᏗ, Glenn J. ''ᎠᏍᏆᏂᎪᏒᏗ ᎣᏓᎸ ᎠᏓᏃᎮᏗ: ᎢᏗᎦᎸᎳᏗ ᏂᏛᎴᏅᏓ ᏣᎳᎩ ᏏᏓᏁᎸᎯ''. ᎢᏤ ᎢᏳᏍᏗ ᏠᎨᏏ ᎠᏰᎵ: ᎢᏤ ᎢᏳᏍᏗ ᏠᎨᏏ ᏅᎬᎪᏙᏗ ᏗᏂᎴᏱᏗᏍᎩ, 1997</ref>
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
