translating New Mexico -> ᏍᏆᏂᏤᏍᏛᎢ

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -117,11 +117,11 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 
 ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏓᏩᏛᎯᏙᎯ ᎬᎾᏕᎾ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎨᏒᎾ ᎢᎦ ᎭᏫᎾᏗᏢ ᎢᎬᏱ ᏚᎵᏍᏗ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎠᎴ 80,000 90,000 ᏣᎳᎩ ᎠᏁᎲᎢ ᎡᏙᎵᏙᎲ Tahlequah, ᎣᎦᎳᎰᎻ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎾᏍᎩᎾᎢ ᎯᎠ festivities.  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩ ᎾᏍᏇ ᏕᎦᏃᏣᎸᏍᎦ ᎯᎠ [[ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ]], tribal newspapers ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎠᏂᎩᏍᏔᏅ ᎦᏌᏆᎸ ᎣᏂ ᏧᏩᎫᏛ 1828, ᎠᎴ ᏕᎦᏃᏣᎸᏍᎦ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎩᎵᏏ ᎠᎴ ᎯᎠ ᏍᏏᏆᏱ Syllabary.  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏓᏩᏛᎯᏙᎯ ᎠᎴ ᎪᎯᏳᏙ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᏓᎴᏂᏍᎬ ᎡᎯᏍᏛ ᎬᏙᏗ ᎯᎠ ᎠᏂᏙᎾᎥ ᏣᎳᎩ ᎥᎦᏔᎲᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ [[Cherokee Heritage Center|ᏣᎳᎩ ᎤᏩᎫᏗᏗᏒ ᎠᏰᎵ]] ᎦᏙ ᎤᏍᏗ ᎠᏓᏩᏛᎯᏙᎯ ᏗᏟᎶᏍᏔᏅ ᎯᎸᎯᏳᎢ ᏣᎳᎩ ᎤᏍᏗ ᎦᏚᎲ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏍᏚᎢᏛ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ.  ᎯᎠ ᏣᎳᎩ ᎤᏩᎫᏗᏗᏒ ᎠᏰᎵ ᎤᎭ ᎤᏂᎪᏗᏗ ᎤᏓᏂᏝᏅ ᎬᏂᎨᏒ ᏂᎬᏅ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏍᏚᎢᏛ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ.
 
-ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏍᏕᎸᏗ ᎯᎠ Sundance ᎠᎴ ᏣᎳᎩ ᏫᏚᏳᎪᏛ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ ᎭᏫᎾᏗᏢ Tahlequah, ᎣᎦᎳᎰᎻ ᎠᎴ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎦᏚᎲᎢ, Utah, ᎠᎴ ᏓᏓᏁᎳᏁ ᎢᏗᏛᏁᏗ ᎠᎴ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎾᏍᎩᎾᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏫᏚᏳᎪᏛ ᎪᏪᎵ Ꭺgoweli gowlisgi particpate ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏌᎳᏙᏗ ᏗᏟᎶᏍᏔᏅ ᏗᎦᎸᏫᏍᏓᏁᏗ.  ᎤᎪᏗᏗ ᏗᎦᏃᏣᎵ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏛᏁᎵᏍᎩ ᎠᎴ ᎠᏁᎳ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᏯᏛᎿ ᏥᏄᏍᏗ [[Wes Studi]].
+ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏍᏕᎸᏗ ᎯᎠ Sundance ᎠᎴ ᏣᎳᎩ ᏫᏚᏳᎪᏛ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ ᎭᏫᎾᏗᏢ Tahlequah, ᎣᎦᎳᎰᎻ ᎠᎴ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎦᏚᎲᎢ, Utah, ᎠᎴ ᏓᏓᏁᎳᏁ ᎢᏗᏛᏁᏗ ᎠᎴ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎾᏍᎩᎾᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏫᏚᏳᎪᏛ ᎪᏪᎵ Ꭺgoweli gowlisgi particpate ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏌᎳᏙᏗ ᏗᏟᎶᏍᏔᏅ ᏗᎦᎸᏫᏍᏓᏁᏗ.  ᎤᎪᏗᏗ ᏗᎦᏃᏣᎵ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏛᏁᎵᏍᎩ ᎠᎴ ᎠᏁᎳ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᏯᏛᎿ ᏥᏄᏍᏗ [[ᏪᏌ ᏎᏚᏗ]].
 
 ===ᎯᎠ ᏄᏍᏗᏓᏅ===
 
-ᎪᎯ ᎢᎦ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎨᏒᎢ ᏗᏓᏘᏁᎯ ᎭᏫᎾᏗᏢ ᎯᎠ environmental ᎠᎵᏍᏕᎸᏙᏗ ᏠᎨᏏ. ᎣᏂ ᏧᏩᎫᏛ 1992 ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎭ ᎢᏯᏓᏛᏁᎸ ᏥᏄᏍᏗ ᎯᎠ ᎦᏂ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏂᎧᏅᏍᎬ-Tribal Environmental ᏗᏂᎳᏫᎩ ([http://www.itecmembers.org/ ITEC]).ᎯᎠ ᎨᏥᏅᏏᏓ ITEC ᎨᏒᎢ ᎠᏓᏍᏕᎸᏗ ᎯᎠ ᎠᏰᎸ ᏄᏛᎿᏕᎬ ᎾᏰᎯᏯ ᏴᏩᏁᎬ, ᎤᎾᏤᎵ ᏂᎬᏩᏍᏛ ᏧᎬᏩᎶᏗ ᎦᎷᎩ, ᎠᎴ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᏥᏄᏍᏗ ᎾᏍᎩ ᎧᏁᎢᏍᏙᏗ ᎤᏃᎴ, ᎦᏙᎯ, ᎠᎴ ᎠᎹ. ᎠᏍᏆᏗᏍᏗ ᎪᎯ ᎨᏥᏅᏏᏓ ITEC ᏓᏓᏁᎳᏁ ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎠᎵᏍᏕᎸᏗ, ᎠᎨᏲᎲᏍᎬ ᎠᎴ environmental ᎾᎾᏛᏁᎲ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ environmental ᏓᏕᏲᎲᏍᎬ. ᎾᏊ, ᎾᎿᎢ ᎠᎴ ᏦᏍᎪᎯ-ᏐᏁᎳ (39) ITEC ᎨᎳ ᎠᏂᎳᏍᏓᎸ ᎭᏫᎾᏗᏢ ᎣᎦᎳᎰᎻ, ᎢᏤ Mexico, ᎠᎴ ᏅᏓᎩ.
+ᎪᎯ ᎢᎦ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎨᏒᎢ ᏗᏓᏘᏁᎯ ᎭᏫᎾᏗᏢ ᎯᎠ environmental ᎠᎵᏍᏕᎸᏙᏗ ᏠᎨᏏ. ᎣᏂ ᏧᏩᎫᏛ 1992 ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎭ ᎢᏯᏓᏛᏁᎸ ᏥᏄᏍᏗ ᎯᎠ ᎦᏂ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏂᎧᏅᏍᎬ-Tribal Environmental ᏗᏂᎳᏫᎩ ([http://www.itecmembers.org/ ITEC]).ᎯᎠ ᎨᏥᏅᏏᏓ ITEC ᎨᏒᎢ ᎠᏓᏍᏕᎸᏗ ᎯᎠ ᎠᏰᎸ ᏄᏛᎿᏕᎬ ᎾᏰᎯᏯ ᏴᏩᏁᎬ, ᎤᎾᏤᎵ ᏂᎬᏩᏍᏛ ᏧᎬᏩᎶᏗ ᎦᎷᎩ, ᎠᎴ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᏥᏄᏍᏗ ᎾᏍᎩ ᎧᏁᎢᏍᏙᏗ ᎤᏃᎴ, ᎦᏙᎯ, ᎠᎴ ᎠᎹ. ᎠᏍᏆᏗᏍᏗ ᎪᎯ ᎨᏥᏅᏏᏓ ITEC ᏓᏓᏁᎳᏁ ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎠᎵᏍᏕᎸᏗ, ᎠᎨᏲᎲᏍᎬ ᎠᎴ environmental ᎾᎾᏛᏁᎲ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ environmental ᏓᏕᏲᎲᏍᎬ. ᎾᏊ, ᎾᎿᎢ ᎠᎴ ᏦᏍᎪᎯ-ᏐᏁᎳ (39) ITEC ᎨᎳ ᎠᏂᎳᏍᏓᎸ ᎭᏫᎾᏗᏢ ᎣᎦᎳᎰᎻ, ᏍᏆᏂᏤᏍᏛᎢ, ᎠᎴ ᏅᏓᎩ.
 
 ===ᏣᎳᎩ Freedmen ᎠᏁᎳ ᎤᎾᏓᏡᎬ Controversies===
 [[Image:CNSeal.jpg|left]]
