correcting some states names

--- a/ᎠᎹ.mw
+++ b/ᎠᎹ.mw
@@ -112,13 +112,13 @@
 ᏄᏓᎴᎿᎥ ᎠᎹ ᏕᏁᎳᏅᎯ ᎤᎭ ᎠᏩᏛᏗ ᏄᏓᎴᎿᎥ ᎪᎷᏩᏛᏓ ᎣᏤᎵ ᎾᎬᏁᎲ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ.  ᎠᏣᏗ ᎤᎭ [[gills|ᎦᏃᎸᎥᏍᎬ]] ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ [[lungs|ᎦᏃᎸᎥᏍᎬ]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏣᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[lungfish]] ᎤᎭ ᎢᏧᎳ.  [[Marine mammal|ᎠᏜ gantlai]], ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᎺᏉᎯ, ᎤᏔᎾ ᎠᏣᏗ, [[otters|ᏥᏯ]], ᎠᎴ [[seals|ᎠᎾᎵᏍᏕᎸᎯᏙᎯ]] ᎤᏚᎳᏗ ᎦᏚᎢ ᎠᏓᏅᏍᏗ ᎧᏬᎳᏕᏍᎬ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏃᎴ.
 
 == ᎠᎹ ᎭᏫᎾᏗᏢ ᏴᏫ ᎠᏓᏅᏘᏐᏗ ==
-ᎠᏓᏅᏘᏐᏗ ᎤᎭ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ flourished yvwatuwidv ᎤᏪᏴ ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ waterways; [[Mesopotamia]], ᎯᎠ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ-ᎤᏯᏅᎲ ᎠᏓᎴᏂᏍᎬ ᎠᏓᏅᏘᏐᏗ, ᏥᏄᏍᏛᎩ ᎾᎿ ᎨᏒ ᎠᏰᎵ ᎯᎠ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎤᏪᏴ [[Tigris]] ᎠᎴ [[Euphrates]]. ᎡᏆ [[metropolises]] ᎾᏍᎩᏯᎢ [[London]], [[Montreal]], [[Paris|ᏨᏓᏓᏨᏍᏙᏗ]], [[New York|ᎢᏤ York]], ᎠᎴ [[Tokyo]] ᎠᏥᏚᎬ ᎤᎾᏤᎵ ᎦᏣᏄᎳ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎤᎾᏤᎵ ᏩᎾᎯᎨᏍᏙᏗ accessibility ᎾᎿ ᎢᏗᏢ ᎠᎹ ᎠᎴ ᎯᎠ ᎤᎾᏓᏟᏌᏅ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏗᏓᏁᏟᏴᎡᏗ. ᎯᎸᏍᎩ ᎠᎹᏰᎵ ᎬᏙᏗ ᏂᎦᎾᏰᎬᎾ ᎠᎹ ᏥᏳ ᏗᏔᎳᏗᏍᏗ, ᎾᏍᎩᏯᎢ [[Singapore]] ᎠᎴ [[Hong Kong]], ᎤᎭ flourished ᎾᏍᎩᎾᎢ ᎧᎵᏬ ᏗᏙᎳᎩ ᎪᎯ ᎠᏓᏅᏖᏗ. ᎭᏫᎾᏗᏢ ᏚᏙᏢᏒᎢ ᏯᏛᎿ ᏥᏄᏍᏗ [[North Africa|ᎤᏴᏢ Africa]] ᎠᎴ ᎯᎠ [[Middle East|ᎠᏰᎵ ᎧᎸᎬ]], ᎭᏢᏃ ᎠᎹ ᎨᏒᎢ scarcer, ᎦᎷᎯᏍᏗ ᎤᏓᏅᎦᎸᏓ anaditsgv ᎠᎹ ᏥᏄᏍᏛᎩ ᎠᎴ ᎨᏒᎢ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎭᏫᎾᏗᏢ ᏴᏫ ᏚᏙᎳᏩᏛᎲ.
+ᎠᏓᏅᏘᏐᏗ ᎤᎭ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ flourished yvwatuwidv ᎤᏪᏴ ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ waterways; [[Mesopotamia]], ᎯᎠ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ-ᎤᏯᏅᎲ ᎠᏓᎴᏂᏍᎬ ᎠᏓᏅᏘᏐᏗ, ᏥᏄᏍᏛᎩ ᎾᎿ ᎨᏒ ᎠᏰᎵ ᎯᎠ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎤᏪᏴ [[Tigris]] ᎠᎴ [[Euphrates]]. ᎡᏆ [[metropolises]] ᎾᏍᎩᏯᎢ [[London]], [[Montreal]], [[Paris|ᏨᏓᏓᏨᏍᏙᏗ]], [[New York|ᏄᏯᎩ]], ᎠᎴ [[Tokyo]] ᎠᏥᏚᎬ ᎤᎾᏤᎵ ᎦᏣᏄᎳ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎤᎾᏤᎵ ᏩᎾᎯᎨᏍᏙᏗ accessibility ᎾᎿ ᎢᏗᏢ ᎠᎹ ᎠᎴ ᎯᎠ ᎤᎾᏓᏟᏌᏅ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏗᏓᏁᏟᏴᎡᏗ. ᎯᎸᏍᎩ ᎠᎹᏰᎵ ᎬᏙᏗ ᏂᎦᎾᏰᎬᎾ ᎠᎹ ᏥᏳ ᏗᏔᎳᏗᏍᏗ, ᎾᏍᎩᏯᎢ [[Singapore]] ᎠᎴ [[Hong Kong]], ᎤᎭ flourished ᎾᏍᎩᎾᎢ ᎧᎵᏬ ᏗᏙᎳᎩ ᎪᎯ ᎠᏓᏅᏖᏗ. ᎭᏫᎾᏗᏢ ᏚᏙᏢᏒᎢ ᏯᏛᎿ ᏥᏄᏍᏗ [[North Africa|ᎤᏴᏢ Africa]] ᎠᎴ ᎯᎠ [[Middle East|ᎠᏰᎵ ᎧᎸᎬ]], ᎭᏢᏃ ᎠᎹ ᎨᏒᎢ scarcer, ᎦᎷᎯᏍᏗ ᎤᏓᏅᎦᎸᏓ anaditsgv ᎠᎹ ᏥᏄᏍᏛᎩ ᎠᎴ ᎨᏒᎢ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎭᏫᎾᏗᏢ ᏴᏫ ᏚᏙᎳᏩᏛᎲ.
 
 === ᏴᏫ ᎬᏔᏂᏓᏍᏗ ᎠᎹ ===
 [[File:Sprinkler03.jpg|thumb|250px|left|ᎠᎹ ᎤᎳᏂᎬᎬ ᎭᏫᎾᏗᏢ  sprinkler]] 
 [[File:TapWater-china.JPG|thumb|right|150px| ᏦᏬᏰᏂ ᎬᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎹ [[pump|ᎦᏌᏙᏯᏍᎩ]] ᎭᏫᎾᏗᏢ [[China|ᎠᎦᎾᏫᏗᏍᎩ]].]]
 
-ᎠᏂᏴᏫ ᎬᏙᏗ ᎠᎹ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏫᎦᎶᎯᏍᏗ.  ᎬᏩᏚᏫᏛ 72% ᎯᎠ ᎦᎵᏦᎯᏓ ᎠᏎᏊᎢ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎯᎠ [[human|ᏴᏫ]] ᎠᏰᎸ ᎨᏒᎢ ᎪᏢᏅᎯ ᎠᎹ. ᎤᏯᎾᏛᏁᏗ ᏗᏙᎳᏤᎩ, ᎯᎠ ᎠᏰᎸ ᎧᏁᎦ ᎢᏯᏛᏁᏗ ᎠᏰᎵ ᏌᏊ ᎠᎴ ᎦᎵᏉᎩ [[litre]]ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ [[day|ᎢᎦ]] ᏗᏓᏅᏗᏍᏙᏗ [[dehydration]], ᎯᎠ ᏚᏳᎪᏛ ᎢᎦᎢ ᎨᏒ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎠᎵᏂᎬᏁᏗᎢ, ᏄᏁᏌᏴᏢ, ᎤᎯᏌᏛ, ᎠᎴ ᏐᎢ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ. ᎤᎪᏗᏗ ᎪᎯ ᎨᏒᎢ ingested ᏗᎬᏩᎶᏒ ᎤᏂᎩᏍᏘ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᏐᎢ ᎬᎾᏬᏍᎬ anaditsgv stright ᎠᎹ (ᎤᏗᎴᎩ ᎤᎦᎶᎬ ᎠᎴᏂᏙᎲ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎢᎾᎨ ᏗᏓᏅᏗᏍᏙᏗ dehydration, ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏧᎸᏌᏓ ᎯᎳᎪ ᎤᏣᏘ ᎠᎹ intake ᎨᏒᎢ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎾᎥᎢ nvwatohiyadv ᏴᏫ. ᏱᏂᎬᏛᎾ, ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᎦᎪ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏧᏓᎵ ᏗᎦᏎᏍᏙᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎤᏟ ᎬᏰᎸᏗ ᎤᏦᏍᏗ ᎠᏗᏔᏍᏗ ᎦᏟᏐᏗᎩ ᎤᏣᏘ ᎠᎹ, ᎠᎴ (ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏩ ᎤᎯᏌᏛ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ ᎠᎴ ᎾᎯᏳᎢ exercising) ᎦᏂᏰᎬ ᎠᏗᏔᏍᏗ ᎦᏟᏐᏗᎩ ᎤᏍᏗ. ᏴᏫ ᏰᎵᏇ ᎠᏗᏔᏍᏗ ᎢᏅ ᎤᏟ ᎢᎦᎢ ᎠᎹ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎾᎯᏳᎢ exercising, ᏱᏂᎬᏛᎾ, ᏓᏂᎲᏍᎬ ᎠᏂ ᎾᎾᎢ ᎠᏁᎸᏙᏗ [[water intoxication|ᎠᎹ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ]], ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎤᎲᏲᎵᏍᏗ. ᎯᎠ "ᏯᏛᎾ ᎤᏙᎯᏳ" Ꮎ ᎠᏏᏴᏫ ᎢᏳᏗᎾ ᎤᏲᏨᎯ ᏧᏁᎳ ᏗᏓᎨᏗ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ ᏝᏰᎵ ᎾᏍᏋ ᎤᏍᏓᏩᏛᏒ ᎦᏐᎯ ᎠᏏᎾᏍᏛ ᏗᏓᎴᎲᏍᎬ <ref> [http://ajpregu.physiology.org/cgi/content/full/283/5/R993 "Drink at least eight glasses of water a day." Really? Is there scientific evidence for "8 × 8"?] ᎾᎥᎢ Heinz Valdin, ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎾᏙᏢᎯ, Dartmouth ᎦᏃᏢᎩ ᏅᏬᏘ ᏗᏕᎶᏆᏍᏗ, Lebanon, [[New Hampshire|ᎢᏤ Hampshire]] </ref>. ᎾᎿᎢ ᎠᎴ ᏐᎢ ᎢᏰᎵᏍᏗᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎢᏳᎵᏍᏙᏗ ᎠᎹ ᎾᎿ ᏄᏓᎨᏒ ᎤᏲᎱᏎᎸ ᎠᎴ ᏨᏕᎨᏫ Ꮎ ᎤᎭ ᏭᏪᏙᎢ dispelled <ref> [http://www.factsmart.org/h2o/h2o.htm Drinking Water - How Much?], Factsmart.org ᎤᏂᏏᎳᏛ ᏄᏍᏗᏓᏅ ᎠᎴ ᏫᏓᏎᎸᎢ ᎭᏫᏂᏗᏢ </ref>.
+ᎠᏂᏴᏫ ᎬᏙᏗ ᎠᎹ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏫᎦᎶᎯᏍᏗ.  ᎬᏩᏚᏫᏛ 72% ᎯᎠ ᎦᎵᏦᎯᏓ ᎠᏎᏊᎢ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎯᎠ [[human|ᏴᏫ]] ᎠᏰᎸ ᎨᏒᎢ ᎪᏢᏅᎯ ᎠᎹ. ᎤᏯᎾᏛᏁᏗ ᏗᏙᎳᏤᎩ, ᎯᎠ ᎠᏰᎸ ᎧᏁᎦ ᎢᏯᏛᏁᏗ ᎠᏰᎵ ᏌᏊ ᎠᎴ ᎦᎵᏉᎩ [[litre]]ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ [[day|ᎢᎦ]] ᏗᏓᏅᏗᏍᏙᏗ [[dehydration]], ᎯᎠ ᏚᏳᎪᏛ ᎢᎦᎢ ᎨᏒ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎠᎵᏂᎬᏁᏗᎢ, ᏄᏁᏌᏴᏢ, ᎤᎯᏌᏛ, ᎠᎴ ᏐᎢ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ. ᎤᎪᏗᏗ ᎪᎯ ᎨᏒᎢ ingested ᏗᎬᏩᎶᏒ ᎤᏂᎩᏍᏘ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᏐᎢ ᎬᎾᏬᏍᎬ anaditsgv stright ᎠᎹ (ᎤᏗᎴᎩ ᎤᎦᎶᎬ ᎠᎴᏂᏙᎲ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎢᎾᎨ ᏗᏓᏅᏗᏍᏙᏗ dehydration, ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏧᎸᏌᏓ ᎯᎳᎪ ᎤᏣᏘ ᎠᎹ intake ᎨᏒᎢ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎾᎥᎢ nvwatohiyadv ᏴᏫ. ᏱᏂᎬᏛᎾ, ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᎦᎪ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏧᏓᎵ ᏗᎦᏎᏍᏙᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎤᏟ ᎬᏰᎸᏗ ᎤᏦᏍᏗ ᎠᏗᏔᏍᏗ ᎦᏟᏐᏗᎩ ᎤᏣᏘ ᎠᎹ, ᎠᎴ (ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏩ ᎤᎯᏌᏛ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ ᎠᎴ ᎾᎯᏳᎢ exercising) ᎦᏂᏰᎬ ᎠᏗᏔᏍᏗ ᎦᏟᏐᏗᎩ ᎤᏍᏗ. ᏴᏫ ᏰᎵᏇ ᎠᏗᏔᏍᏗ ᎢᏅ ᎤᏟ ᎢᎦᎢ ᎠᎹ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎾᎯᏳᎢ exercising, ᏱᏂᎬᏛᎾ, ᏓᏂᎲᏍᎬ ᎠᏂ ᎾᎾᎢ ᎠᏁᎸᏙᏗ [[water intoxication|ᎠᎹ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ]], ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎤᎲᏲᎵᏍᏗ. ᎯᎠ "ᏯᏛᎾ ᎤᏙᎯᏳ" Ꮎ ᎠᏏᏴᏫ ᎢᏳᏗᎾ ᎤᏲᏨᎯ ᏧᏁᎳ ᏗᏓᎨᏗ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ ᏝᏰᎵ ᎾᏍᏋ ᎤᏍᏓᏩᏛᏒ ᎦᏐᎯ ᎠᏏᎾᏍᏛ ᏗᏓᎴᎲᏍᎬ <ref> [http://ajpregu.physiology.org/cgi/content/full/283/5/R993 "Drink at least eight glasses of water a day." Really? Is there scientific evidence for "8 × 8"?] ᎾᎥᎢ Heinz Valdin, ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎾᏙᏢᎯ, Dartmouth ᎦᏃᏢᎩ ᏅᏬᏘ ᏗᏕᎶᏆᏍᏗ, Lebanon, [[New Hampshire|ᎠᏤ ᎭᎻᏒ]] </ref>. ᎾᎿᎢ ᎠᎴ ᏐᎢ ᎢᏰᎵᏍᏗᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎢᏳᎵᏍᏙᏗ ᎠᎹ ᎾᎿ ᏄᏓᎨᏒ ᎤᏲᎱᏎᎸ ᎠᎴ ᏨᏕᎨᏫ Ꮎ ᎤᎭ ᏭᏪᏙᎢ dispelled <ref> [http://www.factsmart.org/h2o/h2o.htm Drinking Water - How Much?], Factsmart.org ᎤᏂᏏᎳᏛ ᏄᏍᏗᏓᏅ ᎠᎴ ᏫᏓᏎᎸᎢ ᎭᏫᏂᏗᏢ </ref>.
 ᎯᎠ ᎣᏂᏴᎯᎨᏍᏙᏗ ᎠᎵᏍᏓᏴᏗ ᏩᏎᎸᎯ intake ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᎥᎢ ᎯᎠ ᎢᏧᎳ ᎠᏴ [[National Research Council|ᎬᎾᏕᎾ ᏅᎠᏯᏍᏗ ᏗᏂᎳᏫᎩ]] ᎦᎸᏉᏔᏅ 2.7 liters ᎠᎹ ᏂᎦᏛ ᎦᏟᏌᏅ (ᎠᏠᏯᏍᏗᏍᎩ ᎠᎵᏍᏓᏴᏗ ᏙᏧᏓᎴᏅ) ᎾᏍᎩᎾᎢ ᎠᏂᎨᏴ ᎠᎴ 3.7 liters ᎾᏍᎩᎾᎢ ansigaya <ref> [http://www.iom.edu/report.asp?id=18495 Dietary Reference Intakes: Water, Potassium, Sodium, Chloride, and Sulfate], ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏓᏍᏕᎸᏗ ᏒᏓᎷᎦ</ref>. ᎠᎹ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏰᎸ ᎭᏫᎾᏗᏢ [[urine|ᎠᏗᎧᏓ]] ᎠᎴ [[feces|ᎦᎳᏅᎯ]], ᏗᎬᏩᎶᏒ [[sweat|ᎠᎵᎠᎷ]]ᎪᎯᏳᏙᏗ, ᎠᎴ ᎾᎥᎢ ᏗᏓᏲᎯᏍᏗ [[water vapor|ᎠᎹ ᎥᏝ ᎪᎱᏍᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᏬᎳᏕᏍᎬ.
 
 ᎠᏂᏴᏫ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᎠᎹ Ꮎ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎦᎢ ᎨᏒ ᎦᏟᏐᏗᎩ ᎤᏣᏘ ᎠᎹ ᎠᎴ ᏐᎢ impurities. ᏧᏣᏔᏊ impurities ᎠᏠᏯᏍᏛ chemicals ᎠᎴ/ᎠᎴ ᏗᏄᏬ ᏗᎦᏛᏗ [[bacterium|ᎢᎦᎢ]], ᏯᏛᎿ ᏥᏄᏍᏗ [[Vibrio]]. ᎢᎦᏛ solutes ᎠᎴ ᏗᏓᏂᎸᏨᎯ ᎠᎴ ᎢᏧᎳᎭ ᏂᎪᎯᎸ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ perceived ᏄᏍᏛ ᎠᎩᏍᏗ enhancement ᎠᎴ ᎠᏓᏁᎳᏁᏗ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ [[electrolytes]].
