--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -1,5 +1,5 @@
-[[File:Flag of the United States.svg|thumb]]
-[[File:Map of USA showing unlabeled state boundaries.png|thumb]]
+[[File:Flag of the United States.svg|thumb|ᎠᎹᏰᏟ ᎦᏓᏘ]]
+[[File:Map of USA showing unlabeled state boundaries.png|thumb|50 ᎧᏃᎮᎭ ᎡᎶᎯ ᏓᏟᎶᏍᏔᏅ]]
 '''ᎠᎹᏰᏟ'''<ref>Feeling 44</ref> ᎠᎴ "ᎠᎺᎢ" — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 290,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ, ᎠᎴ [[United States Supreme Court|ᏗᏓᏱᎵᏓᏍᏗ (Judicial)]] ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[ᎺᎯᎪ]] ᎠᎴ [[ᎧᎾᏓ]].
 
 ==ᎧᏃᎮᎭ==
