--- a/ᏙᎯᏓ_ᎦᏓᏗ.mw
+++ b/ᏙᎯᏓ_ᎦᏓᏗ.mw
@@ -1,9 +1,5 @@
 [[File:Screen shot 2010-09-13 at 10.00.03 PM.png]]
-
-
-
 '''ᏙᎯᏓ ᎦᏓᏗ'''
-
 
 ᎪᎯᎦ ᏥᎨᏒ, ᎧᏃᎮᏓ ᎠᏂᏣᎳᎩ ᎤᏁᎦ ᎦᏓᏗ ᏂᏂᎾᎡ ᎦᎵᏉᎩ ᏗᎩᎦᎨ
 ᏗᎪᏍᏓᏯ ᏗᏎᎯᎯ ᏃᏈᏏ ᎢᏗᎬᏂ. ᏙᎯᏓ ᎦᏓᏗ ᎤᏃᏎᏗ ᎨᏎᎢ. ᎠᏂᏣᎳᎩ
@@ -13,4 +9,4 @@
 ᏧᏂᏴᏫ ᏓᏟᎶᏍᏗᎭ. ᎧᏃᎮᏓ ᎨᏒ ᏍᎩᎾ ᏙᎯᏓ ᎦᏓᏗ ᏧᏂᎲᏍᏔᏁ ᏅᏃ
 ᏚᎾᏠᎯᎸᏍᏔᏅ ᎠᎭᏂ ᎬᏂᎷᎩ.
 
-[[Category:ᎠᎹᏰᎵ]]
+[[Category:ᎠᏣᎳᎩ]]
