--- a/ᎢᏤ_ᎢᏳᏍᏗᎤ_ᏪᏴ.mw
+++ b/ᎢᏤ_ᎢᏳᏍᏗᎤ_ᏪᏴ.mw
@@ -57,7 +57,7 @@
 * [http://historytogo.utah.gov/greenriver.html ᏳᏔ History: The Green River]
 
 [[Category:ᎠᎹ]]
-[[Category:ᎠᎹᏰᎵ]]
+[[Category:ᎠᎹᏰᏟ]]
 
 [[de:Green River]]
 [[en:Green River (Utah)]]
