--- a/ᏗᎦᎭᎵ.mw
+++ b/ᏗᎦᎭᎵ.mw
@@ -22,7 +22,7 @@ Many, see [[Lizard#Classification|ᏓᎵᏍᏛ]].
 
 ᎤᎪᏗᏗ ᏗᎦᎭᎵ ᏰᎵᏇ ᏧᎾᏍᏗ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᎠᎴ ᎭᏫᎾᏗᏢ itsuwakodi ᏗᎳᏏᏙᏗ.  ᎯᎠ ᎤᎪᏗᏗ ᎠᏓᏙᎳᎩ ᏱᏓᏟᎶᏍᏔᏅ ᎨᏒᎢ ᎯᎠ [[chameleon|ᏒᏃᏱ ᎡᎯ ᏅᏙ]], ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎠᏍᏓᏩᏛᏍᏗ ᏗᎧᏃᏗ ᏗᎦᏁᏟᏴᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᏐᎢ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ (ᎤᎪᏗᏗ ᏂᎬᎢ ᎯᎠ [[anole]], ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ "ᎦᎵᏦᏕ ᏒᏃᏱ ᎡᎯ ᏅᏙ" ᎠᎴ "chamele").
 
-ᏗᎦᎭᎵ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᎳᏍᏙᏗ ᎾᎿ ᎠᏂᏍᎧᏱ ᎠᎴ rodents.  ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᎵᏍᏓᏴᏗ; ᎠᏓᏙᎳᎩ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎠ ᎣᏂᏯᎨ ᎨᏒᎢ ᎯᎠ [[iguana]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᏗᏙᎳᏤᎩ ᎠᏓᏁᎳᏅᎯ gantlai ᏤᎵ.  iyuwakodi ᎤᏙᎯᏳ ᏝᏱᎪᎯᎩ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏁᎵᏒ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᏔᎵ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎩ [[venom (poison)|ᏗᏄᏬ ᏗᎦᏛᏗ]]: ᎯᎠ [[Mexican beaded lizard|Mexican beaded ᏗᎦᎭᎵ]] ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᎢ-ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[Gila monster|ᎩᎳ ᏓᎦᏘᎴᎬ]], ᎢᏧᎳ ᎦᏙ ᎤᏍᏗ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎢᏗᏢ [[ᎠᏂᏍᏆᏂᎢ]] ᎠᎴ ᎯᎠ [[southwest United States|southwest ᎠᎹᏰᎵ]].  ᏱᏂᎬᏛᎾ ᎾᏞᎬ ᏅᎠᏯᏍᏗ ᎾᎾᎢ ᎯᎠ ᏗᏕᎶᏆᏍᏗ Melbourne, [[ᏒᎳᏗᏝ]] ᎠᎴ [[ᎤᎩᏓᎵᏱ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ ᎤᎭ ᎤᏍᏆᏂᎪᏗ Ꮎ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎤᎪᏗᏗ ᏗᎦᎭᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[iguania]]ns ᎠᎴ [[monitor (lizard)|ᎠᏕᎶᎰᏍᎩ (ᏗᎦᎭᎵ)]] ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᎭ [[Venom (poison)|ᎦᎾᏆᏘᏍᏗ]]-ᎠᏛᎯᏍᏗᏍᎬ glands. ᎧᏂᎩᏛ ᎾᏍᎩ ᎯᎠ ᎠᏓᎳᏍᏛᏁᏗ ᎤᏣᏘ ᎦᏂᏰᎩ ᎠᏂᏴᏫ, ᏥᏄᏍᏗ ᎤᎾᏤᎵ ᎠᏓᎯᎯ ᎨᏒᎢ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎷᏍᎦᏃᎵ ᎾᎥᎢ ᎠᎵᏍᏓᏴᏗ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ injected ᏥᏄᏍᏗ ᎬᏙᏗ ᏗᏄᏬ ᏗᎦᏛᏗ ᎢᎾᏛ. ᏐᏁᎳ [[toxins]] ᏧᏩᎫᏔᏅᏒ ᏁᎵᏒ ᎾᏍᎩ ᎤᏩᏒ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ [[snakes|ᎢᎾᏛ]] ᎤᎭ ᏭᏪᏙᎢ ᎪᎷᏩᏛᏓ, ᎠᎴ ᏎᏍᏗ ᏧᏩᎫᏔᏅᏒ ᎤᏍᏆᏂᎪᏗ chemicals ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.
+ᏗᎦᎭᎵ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᎳᏍᏙᏗ ᎾᎿ ᎠᏂᏍᎧᏱ ᎠᎴ rodents.  ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᎵᏍᏓᏴᏗ; ᎠᏓᏙᎳᎩ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎠ ᎣᏂᏯᎨ ᎨᏒᎢ ᎯᎠ [[iguana]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᏗᏙᎳᏤᎩ ᎠᏓᏁᎳᏅᎯ gantlai ᏤᎵ.  iyuwakodi ᎤᏙᎯᏳ ᏝᏱᎪᎯᎩ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏁᎵᏒ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᏔᎵ ᏗᎦᎭᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎩ [[venom (poison)|ᏗᏄᏬ ᏗᎦᏛᏗ]]: ᎯᎠ [[Mexican beaded lizard|ᎠᏍᏆᏂ ᎠᏕᏅ ᏗᎦᎭᎵ]] ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᎢ-ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[Gila monster|ᎩᎳ ᏓᎦᏘᎴᎬ]], ᎢᏧᎳ ᎦᏙ ᎤᏍᏗ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎢᏗᏢ [[ᎠᏂᏍᏆᏂᎢ]] ᎠᎴ ᎯᎠ [[southwest United States|southwest ᎠᎹᏰᎵ]].  ᏱᏂᎬᏛᎾ ᎾᏞᎬ ᏅᎠᏯᏍᏗ ᎾᎾᎢ ᎯᎠ ᏗᏕᎶᏆᏍᏗ Melbourne, [[ᏒᎳᏗᏝ]] ᎠᎴ [[ᎤᎩᏓᎵᏱ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ ᎤᎭ ᎤᏍᏆᏂᎪᏗ Ꮎ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎤᎪᏗᏗ ᏗᎦᎭᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[iguania]]ns ᎠᎴ [[monitor (lizard)|ᎠᏕᎶᎰᏍᎩ (ᏗᎦᎭᎵ)]] ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᎭ [[Venom (poison)|ᎦᎾᏆᏘᏍᏗ]]-ᎠᏛᎯᏍᏗᏍᎬ glands. ᎧᏂᎩᏛ ᎾᏍᎩ ᎯᎠ ᎠᏓᎳᏍᏛᏁᏗ ᎤᏣᏘ ᎦᏂᏰᎩ ᎠᏂᏴᏫ, ᏥᏄᏍᏗ ᎤᎾᏤᎵ ᎠᏓᎯᎯ ᎨᏒᎢ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎷᏍᎦᏃᎵ ᎾᎥᎢ ᎠᎵᏍᏓᏴᏗ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ injected ᏥᏄᏍᏗ ᎬᏙᏗ ᏗᏄᏬ ᏗᎦᏛᏗ ᎢᎾᏛ. ᏐᏁᎳ [[toxins]] ᏧᏩᎫᏔᏅᏒ ᏁᎵᏒ ᎾᏍᎩ ᎤᏩᏒ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ [[snakes|ᎢᎾᏛ]] ᎤᎭ ᏭᏪᏙᎢ ᎪᎷᏩᏛᏓ, ᎠᎴ ᏎᏍᏗ ᏧᏩᎫᏔᏅᏒ ᎤᏍᏆᏂᎪᏗ chemicals ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.
 
 ᎾᏍᎩ ᎯᎠ ᎦᎾᏄᎪᏫᏒ ᎠᎴ ᎠᏅᏓᏗᏍᏗ ᏓᏯᏂ ᎾᏍᎩᎾᎢ ᎧᎵᏬᎯ ᎠᏓᏃᎮᏗ ᎯᎠ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ iyahdvnelidasdi ᎾᏍᎩᎾᎢ ᏗᎦᎭᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎤᏙᏢᏒ [[venom clade|ᎦᎾᏆᏘᏍᏗ clade]]. "ᎾᏍᎩ ᎯᎠ Ꭺ ᎤᏩᎫᏗᏗᏒ ᏂᎬᎢ ᏧᎾᏍᏗ ᎠᏆᏤᎵ ᎠᏓᏅᏖᏗ ᏗᎦᎭᎵ ᎠᎴ ᎢᎾᏛ ᎠᏓᎴᏂᏍᎬ, ᎠᎴ ᎾᏍᎩᎾ ᎨᏒ ᎦᎾᏆᏘᏍᏗ ᎠᏓᎴᏂᏍᎬ," ᎠᏗᎭ ᏗᎦᏘᎸᏍᏗ Greene, herpetologist ᎾᎾᎢ Cornell ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ [[ᏄᏍᎩ]].
 
