--- a/ᏎᎷ_ᎦᏚ.mw
+++ b/ᏎᎷ_ᎦᏚ.mw
@@ -2,7 +2,7 @@
 [[Image:Cornbread.jpg|thumb|ᏎᎷ ᎦᏚ]]
 
 ==ᎧᏃᎮᏍᎩ==
-ᏣᎷᎦ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎪᎷᏩᏛᏓ ᎾᎯᏳᎨᏒ ᎯᎠ [[ᏳᎳᏛ]] ᎤᏂᎦᏛᎲᏍᎩ ᎤᏴᏢ ᎠᎺᎵᎨ.  [[Native Americans|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎨᏒᎩ ᎬᏗᏍᎬᎢ ᎦᏙᎯ ᏎᎷ ᎾᏍᎩᎾᎢ ᎠᎾᏓᏍᏓᏴᎲᏍᎬ ᎦᏅᎯᏓ ᎤᏓᎷᎸ ᎯᎠ European ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎤᎷᏨᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᎶᎯ.  Europeans ᎠᏰᎲ ᎬᏙᏗ ᎯᎠ ᎾᎥᎢ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎠᏛᏍᎩ ᏎᎷ ᎢᏌ ᎾᎾᎯ ᏣᎷᎦ.  ᏣᎷᎦ ᏥᏄᏍᏛᎩ ᎤᏂᎸᏉᏗ ᎾᎯᏳᎨᏒ ᎯᎠ [[American Civil War|ᏴᏩᏁᎬ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]] ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳ ᎤᏍᏗ ᏧᎬᏩᎶᏗ ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏚᏙᏢᏒ.  ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎠᏛᏍᎩ ᎾᎾᎯ ᎦᎸᎳᏗ-ᎠᎵᏌᎳᏗᏍᎬ, ᎦᏅᏙᎬ loaves ᎠᎴ ᏄᏦᏍᏛᎾᏊ ᎪᎢᎯ ᎬᏂᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎦᏣᏄᎳ ᎠᎵᏍᏓᏴᏗ.
+ᏣᎷᎦ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎪᎷᏩᏛᏓ ᎾᎯᏳᎨᏒ ᎯᎠ [[ᏳᎳᏛ]] ᎤᏂᎦᏛᎲᏍᎩ ᎤᏴᏢ ᎠᎺᎵᎨ.  [[Native Americans|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎨᏒᎩ ᎠᏂᏳᎳᏗ ᎦᏙᎯ ᏎᎷ ᎾᏍᎩᎾᎢ ᎠᎾᏓᏍᏓᏴᎲᏍᎬ ᎦᏅᎯᏓ ᎤᏓᎷᎸ ᎯᎠ European ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎤᎷᏨᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᎶᎯ.  Europeans ᎠᏰᎲ ᎬᏙᏗ ᎯᎠ ᎾᎥᎢ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎠᏛᏍᎩ ᏎᎷ ᎢᏌ ᎾᎾᎯ ᏣᎷᎦ.  ᏣᎷᎦ ᏥᏄᏍᏛᎩ ᎤᏂᎸᏉᏗ ᎾᎯᏳᎨᏒ ᎯᎠ [[American Civil War|ᏴᏩᏁᎬ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]] ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳ ᎤᏍᏗ ᏧᎬᏩᎶᏗ ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏚᏙᏢᏒ.  ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎠᏛᏍᎩ ᎾᎾᎯ ᎦᎸᎳᏗ-ᎠᎵᏌᎳᏗᏍᎬ, ᎦᏅᏙᎬ loaves ᎠᎴ ᏄᏦᏍᏛᎾᏊ ᎪᎢᎯ ᎬᏂᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎦᏣᏄᎳ ᎠᎵᏍᏓᏴᏗ.
 
 ==ᎢᏗᎦᎪᏘ ᏣᎷᎦ==
 ᏣᎷᎦ ᎨᏒᎢ ᎤᏂᎸᏉᏗ ᎤᏤᎵᏛ ᎪᏪᎸ ᎭᏫᎾᏗᏢ [[soul food|ᎦᎸᏉᏗ ᎠᏓᏅᏙ ᎠᎵᏍᏓᏴᏗ]] ᎠᎵᎮᎵᎬ ᎾᎥᎢ ᎤᎪᏗᏗ ᏴᏫ ᎾᏍᎩᎾᎢ Ꮝ ᎦᏅᏙᎬ ᎠᎴ ᎦᏩᏒᎬ.  ᏣᎷᎦ ᏰᎵᏇ ᎾᏍᏋ baked, ᎪᎢᎯ ᎬᏂᏍᏙᏗ ᎠᎴ, ᎢᏅᎯ ᎢᏳᏓᎵ, steamed.  Steamed ᏣᎷᎦ ᎠᎴ mushy, chewier ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏚᎾᏓᏚᏓᎸ ᏎᎷ ᎢᏌ [[ᎠᏑᏰᎸᎯ]] ᎬᎾᏬᏍᎬ ᎦᏙ ᎤᏍᏗ ᎤᎪᏗᏗ ᎠᎦᏎᏍᏙᏗ ᎾᏍᏋ ᎧᏃᎮᎸᎯ ᏣᎷᎦ. 
@@ -11,7 +11,7 @@
 ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ, ᎬᏂᏍᏙᏗ-baked ᏣᎷᎦ (ᎢᏳᏓᎵᎭ ᏄᏦᏍᏛᎾᏊ ᎤᏯᏅᎲ ᎬᏂᏍᏙᏗ ᎦᏚ) ᎨᏒᎢ ᎧᏃᎮᎸᎯ ᏕᎬᏔᏛ [[rural|ᎠᏍᏛ ᏕᎦᏅᏅ]] ᎠᎵᏍᏓᏴᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎠᎹᏰᎵ]], ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[U.S. Southern states|ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ ᎠᏓᏠᏯᏍᏙᏗ ᎠᎦᎾᏫᏗᏍᎩ [[bacon|ᎭᏫᏯ ᎤᎧᏲᏒ]] ᎤᎯᏌᏛ, [[ᎪᎢ]] ᎠᎴ ᏐᎢ ᎪᎢ ᎭᏫᎾᏗᏢ ᎦᎨᏛ, ᎠᏔᎴᏒ ᎠᎹᏱ-[[Seasoning (cast iron)|ᏄᏍᏛ ᎠᎩᏍᏗ]] ᏩᏗᏅᏗ ᏔᎷᎩᏍᎩ ᎬᏂᏍᏙᏗ ᎭᏫᎾᏗᏢ ᏗᎦᏚᏗ, ᎠᎴ ᎾᎯᏳᎢ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎠᏑᎨᏗ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᏎᎷ ᎢᏌ, [[ᎤᏪᏥ]] ᎠᎴ [[buttermilk|ᎪᏢᏔᏅ ᎤᏅᏗ]] ᎾᎿ ᎢᏴ ᎾᎾᎯ ᎯᎠ ᎤᏗᎴᎩ ᎪᎢ.  ᎯᎠ ᏧᏠᎯᏍᏗ ᎨᏒᎢ ᎢᎦᎷᎦ ᎯᎠ ᏗᎦᏚᏗ ᏗᎦᏚᏗ ᎾᎾᎯ ᎡᏆ, ᏓᏪᎳᎩᏍᎩ ᎤᎦᎾᏍᏛ.  ᎪᎯ ᎦᏚ ᏫᎵ ᏫᏚᏳᎪᏛ ᎾᏍᏋ ᎠᏫᏒᏗ, ᏁᎵᏒᎢ ᎤᏟ ᎢᎦᎢ ᏥᏄᏍᏗ ᎦᏟᏐᏗᎩ ᎬᎾᏬᏍᎬ ᏥᏄᏍᏗ ᎦᏚ ᏁᎵᏒᎢ ᎦᏙᎬ ᎾᎿ Ꮝ ᎣᏤᎵ. ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ ᎯᎠ ᎬᏂᏍᏙᏗ ᎢᎬᎾᏗ, ᏯᏛᎿ ᏣᎷᎦ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ ᎦᎾᏍᏓ, muffins ᎠᎴ loaves.
 
 ===ᏎᎷ pone===
-ᏎᎷ pone (ᏱᏓᏟᎶᏍᏔᏅ ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᎠᏴᏫᏯ pone") ᎨᏒᎢ ᏗᎦᎪᏗ ᏣᎷᎦ, ᎪᏢᏅᎯ ᎤᎭᎨᏛ, ᎦᏓᏆᎵ ᎦᏓᏆᎵ ᎪᏢᏅᎯ ᏎᎷ ᎢᏌ ᎠᎴ [[hominy|ᎦᏃᎮᎾ]] [[grits|ᏁᏩᏛ]], ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎾᎥᎢ ᎤᏬᏰᏂ ᎠᎴ ᎾᎯᏳᎢ baked ᎠᎴ ᎪᎢᎯ ᎬᏂᏍᏙᏗ ᎭᏫᎾᏗᏢ [[ᎪᏢᏅ]], [[margarine]], ᎪᎢ ᎠᎴ ᎭᏫᏯ ᎤᎧᏲᏒ ᎪᎢ.  ᏎᎷ pone ᎤᎭ ᏭᏪᏙᎢ ᏕᎬᏔᏛ [[Southern U.S. cuisine|ᎤᎦᎾᏭ ᎢᏗᏢ Ꭴ.. ᎠᎵᏍᏓᏴᏗ]], ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎧᏃᎮᎸᎯ ᎾᎥᎢ ᎤᎪᏗᏗ ᏴᏩᏁᎬ ᎠᏃᏪᎵᏍᎩ, ᎠᏠᏯᏍᏗᏍᎩ [[Mark Twain|ᎤᏙᏪᎸ Twain]]. ᎢᏯᏛᏁᎵᏓᏍᏗ ᏎᎷ pone ᎨᏒᎢ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎭᏫᎾᏗᏢ ᏔᎵ ᏦᎢ ᎢᏯᏏᏔᏛ ᎤᏪᏥ ᎤᏠᏱ ᎦᎶᏄᎮᏛ ᎠᎴ ᏄᏍᏛ ᏗᎨᎦᏃᏗ crunchy ᎠᎴ/ᎠᎴ chewy ᎦᏅᏙᎬ. 
+ᏎᎷ pone (ᏱᏓᏟᎶᏍᏔᏅ ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᎠᏴᏫᏯ pone") ᎨᏒᎢ ᏗᎦᎪᏗ ᏣᎷᎦ, ᎪᏢᏅᎯ ᎤᎭᎨᏛ, ᎦᏓᏆᎵ ᎦᏓᏆᎵ ᎪᏢᏅᎯ ᏎᎷ ᎢᏌ ᎠᎴ [[hominy|ᎦᏃᎮᎾ]] [[grits|ᏁᏩᏛ]], ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎾᎥᎢ ᎤᏬᏰᏂ ᎠᎴ ᎾᎯᏳᎢ baked ᎠᎴ ᎪᎢᎯ ᎬᏂᏍᏙᏗ ᎭᏫᎾᏗᏢ [[ᎪᏢᏅ]], [[margarine]], ᎪᎢ ᎠᎴ ᎭᏫᏯ ᎤᎧᏲᏒ ᎪᎢ.  ᏎᎷ pone ᎤᎭ ᏭᏪᏙᎢ ᏕᎬᏔᏛ [[Southern U.S. cuisine|ᎤᎦᎾᏭ ᎢᏗᏢ Ꭴ.. ᎠᎵᏍᏓᏴᏗ]], ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎧᏃᎮᎸᎯ ᎾᎥᎢ ᎤᎪᏗᏗ ᏴᏩᏁᎬ ᎠᏃᏪᎵᏍᎩ, ᎠᏠᏯᏍᏗᏍᎩ [[Mark Twain|ᎤᏙᏪᎸ Twain]]. ᎢᏯᏛᏁᎵᏓᏍᏗ ᏎᎷ pone ᎨᏒᎢ ᎪᏢᎯ Ꭲgotlvhi ᎢᎩᏁᎸᎯ ᎭᏫᎾᏗᏢ ᏔᎵ ᏦᎢ ᎢᏯᏏᏔᏛ ᎤᏪᏥ ᎤᏠᏱ ᎦᎶᏄᎮᏛ ᎠᎴ ᏄᏍᏛ ᏗᎨᎦᏃᏗ crunchy ᎠᎴ/ᎠᎴ chewy ᎦᏅᏙᎬ. 
 
 ᎯᎠ ᎠᎴᏂᏍᎬ "ᏎᎷ pone" ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏚᏙᎥᎢ ᏩᏎᏍᏗ ᏌᏊ ᎦᎪ possesses ᎤᏙᎯᏳ ᎠᏍᏛ ᏕᎦᏅᏅ, ᎬᏫᏍᏓᏗ ᎢᎦᏛ ("ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᏤᎵ ᏎᎷ pone"), ᎠᎴ ᏥᏄᏍᏗ ᎦᏟᏐᏗᎩ ᏄᏍᏛ ᎧᏃᎮᏗ ᎾᏍᎩᎾ ᎠᏍᏛ ᏕᎦᏅᏅ, folksy ᎠᎴ "hick" ᎨᎦᏓᏅᏖᏗ (e.g., "ᏎᎷ pone" ᎤᏬᏢᏗ).  ᎯᎠ ᎠᎴᏂᏍᎬ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏄᏪᎵᏒ ᏥᏄᏍᏗ pejorative, ᎢᏳᏓᎵᎭ ᎠᏓᏎᎮᎸ ᎾᎾᎢ ᎠᏂᏏᏴᏫᎭ ᏂᏛᎴᏅᏓ ᎠᏍᏛ ᏕᎦᏅᏅ ᎡᏍᎦᏂ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᎴ midwestern Ꭴ.
 
@@ -27,10 +27,10 @@ thicker ᎪᏢᏔᏅ ᎤᏅᏗ-ᏚᎳᏏᏔᏅᎩ ᎠᏑᎨᏗ ᎦᏙ ᎤᏍᏗ 
 ᏫᏚᏳᎪᏛ ᎠᎵᎪᏁᏗ ᎤᏴᏢ ᎢᏗᏢ Ꭴ. ᏣᎷᎦ (ᏩᏎᎸᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ ᏥᏄᏍᏗ "ᎤᏂᎷᏨᎯ ᏣᎷᎦ") ᎠᏅᏬᏗ ᎢᎦᎢ ᎨᏐ ᎠᏰᎵ ᎢᏴ ᎤᏣᎴᏍᏗ [[ᎢᏌ]], ᎠᏰᎵ ᎢᏴ ᏎᎷ ᎢᏌ, [[ᎤᏅᏗ]], [[ᏧᏪᏥ]], [[leavening agent|ᏑᏓᎴᎩ ᎠᏥᏅᏏᏓᏍᏗ]], [[salt|ᎠᎹ]], ᎠᎴ ᎤᏠᏱᎭ [[sugar|ᎧᎵᏎᏥ]], ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎦᏚ Ꮎ ᎨᏒᎢ ᎾᏍᎩ ᏯᏛᎾ ᎤᏍᎪᏛᎭᎨ ᎠᎴ sweeter ᎬᎾᏬᏍᎬ Ꮝ ᎤᏟ ᎢᎦᎢ ᎧᏃᎮᎸᎯ ᎤᎦᎾᏭ ᎢᏗᏢ ᎾᎥᏂᎨ ᎡᎵᏍᏗ.
 
 ==ᎤᏔᏂᏗ ᎦᏙᎯ ᏄᏍᏛ ᎠᎩᏍᏗ==
-ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ ᏎᎷ ᎦᏚ ᎠᎴ ᏄᏓᎴᎿᎥ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᏂᎦᎥᏊ ᎬᏙᏗ ᏄᏓᎴᎿᎥ ᎢᏗᎦᎪᏘ ᏎᎷ ᎠᎵᏍᏓᏴᏗ.  ᎤᏴᏢ ᎢᏗᏢ ᎠᏓᏍᏓᏴᎲᏍᎩ ᏫᏚᏳᎪᏛ ᎬᏙᏗ ᏓᎶᏂᎨ ᏎᎷ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ aficionados ᏂᎦᎥᏊ ᎤᏟ ᎬᏰᎸᏗ ᎤᏁᎬ.  ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᏟ ᎬᏰᎸᏗ ᏄᏓᎴᎿᎥ flavorings ᏣᎷᎦ, ᎬᏙᏗ ᎯᎠ ᎤᏴᏢ ᎤᎲᎢ ᎤᏟ ᎠᏰᎸᎯ ᎾᏍᎩᎾᎢ ᏰᎵ ᎤᎦᎾᏍᏛ ᎠᎴ ᎦᏟᏐᏗ [[sugar|ᎧᎵᏎᏥ]] ᎠᎴ [[molasses|ᏩᏚᎵᏏ]], ᎾᎯᏳᎢ saltier ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᏓᏎᎪᎩᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ, ᎠᎴ ᎯᎠ ᎢᏴ ᎠᏑᏰᏍᏗ ᎯᎠ ᎦᏟᏐᏗᎩ ᎭᏫᏂ ᎠᏔᎴᏒ ᎯᎠ ᎦᏚ ᎬᏙᏗ ᏯᏛᎿ ᎦᏟᏐᏗᎩ ᏥᏄᏍᏗ [[Pork rind#Cracklings|cracklins]].  ᎭᏫᎾᏗᏢ [[Texas|ᏅᏓᎩ]], ᎯᎠ [[Mexico|Mexican]] ᎾᏓᏛᏂᏌᏁᎲ ᎤᎭ spawned ᎣᏍᏛ ᎤᎾᏓᏅᏛ ᏣᎷᎦ ᎪᏢᏅᎯ ᎬᏙᏗ ᎢᏤᎢ ᎠᎴ creamed ᏎᎷ ᏚᎷᏍᏘ, [[jalapeño]] ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᎴ topped ᎬᏙᏗ shredded ᎤᏅᏗ ᎦᏚᏅ.
+ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ ᏎᎷ ᎦᏚ ᎠᎴ ᏄᏓᎴᎿᎥ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᏂᎦᎥᏊ ᎬᏙᏗ ᏄᏓᎴᎿᎥ ᎢᏗᎦᎪᏘ ᏎᎷ ᎠᎵᏍᏓᏴᏗ.  ᎤᏴᏢ ᎢᏗᏢ ᎠᏓᏍᏓᏴᎲᏍᎩ ᏫᏚᏳᎪᏛ ᎬᏙᏗ ᏓᎶᏂᎨ ᏎᎷ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ aficionados ᏂᎦᎥᏊ ᎤᏟ ᎬᏰᎸᏗ ᎤᏁᎬ.  ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᏟ ᎬᏰᎸᏗ ᏄᏓᎴᎿᎥ flavorings ᏣᎷᎦ, ᎬᏙᏗ ᎯᎠ ᎤᏴᏢ ᎤᎲᎢ ᎤᏟ ᎠᏰᎸᎯ ᎾᏍᎩᎾᎢ ᏰᎵ ᎤᎦᎾᏍᏛ ᎠᎴ ᎦᏟᏐᏗ [[sugar|ᎧᎵᏎᏥ]] ᎠᎴ [[molasses|ᏩᏚᎵᏏ]], ᎾᎯᏳᎢ saltier ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᏓᏎᎪᎩᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ, ᎠᎴ ᎯᎠ ᎢᏴ ᎠᏑᏰᏍᏗ ᎯᎠ ᎦᏟᏐᏗᎩ ᎭᏫᏂ ᎠᏔᎴᏒ ᎯᎠ ᎦᏚ ᎬᏙᏗ ᏯᏛᎿ ᎦᏟᏐᏗᎩ ᏥᏄᏍᏗ [[Pork rind#Cracklings|cracklins]].  ᎭᏫᎾᏗᏢ [[Texas|ᏅᏓᎩ]], ᎯᎠ [[Mexican|ᎠᏍᏆᏂ]] ᎾᏓᏛᏂᏌᏁᎲ ᎤᎭ spawned ᎣᏍᏛ ᎤᎾᏓᏅᏛ ᏣᎷᎦ ᎪᏢᏅᎯ ᎬᏙᏗ ᎢᏤᎢ ᎠᎴ creamed ᏎᎷ ᏚᎷᏍᏘ, [[jalapeño]] ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᎴ topped ᎬᏙᏗ shredded ᎤᏅᏗ ᎦᏚᏅ.
 
 ==ᎢᏤ ᎦᏬᏂᎯᏍᏗ ᏓᎦᏘᎴᎬ==
-ᎯᎠ ᎠᎴᏂᏍᎬ "ᎠᎵᏍᏓᏴᎲᏍᎬ ᎯᎠ ᏣᎷᎦ" ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[sports talk radio|ᏗᏁᎸᏗᏱ ᎦᏬᏂᏍᎬ ᎦᏬᏂᏍᎩ]] ᏩᏎᏍᏗ ᎠᏔᏃᏲ ᎦᎪ ᎠᏓᏁᎳᏅᎯ ᎢᎬᏩᏕᎴᎩ Ꮎ ᏐᏈᎵ ᏧᎾᏦᏟ ᎤᏤᎵ ᎠᏓᏅᏖᎵᏙᎲ ᎠᏗᎭ ᎠᎴ ᎤᏬᎯᏳᎭ ᎾᏍᎩ ᏄᏠᏯᏍᏛᎾ ᎠᏛᏛᎲᏍᎩ.  ᎾᏍᎩ ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ iyuwakodi ᎠᏁᎸᏙᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎠᏥᎾᏝᎢ ᏄᏂᎬᏫᏳᏌᏕᎩ ᎠᏰᎲ ᏣᎷᎦ ᏥᏄᏍᏗ ᏕᎬᏔᏛ ᎯᎠ ᏗᎨᏥᎾᏝᎢ' ᎠᎵᏍᏓᏴᏗ ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏍᏗ ᏧᎬᏩᎶᏗ ᎠᏩᎯᏍᏗ ᎠᎴ ᎠᎧᎵᎢᎲ ᎠᎩᏍᏗ.  ᎠᏲᎯᏍᏗ ᎪᎯ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎢᎦ, ᎯᎠ ᎠᏔᏃᏲ ᎠᎴ ᏗᎨᏥᎾᏝᎢ ᎯᎠ ᏐᏈᎵ ᏧᎾᏦᏟ ᎾᏍᎩ ᎤᏤᎵ ᎠᎴ ᎠᎩᏍᏗ ᎢᎬᏩᏕᎴᎩ ᎯᎠ ᏐᏈᎵ ᏧᎾᏦᏟ ᎠᏓᏁᏗ ᎠᏂ ᎪᎯᏳᏙᏗ ᎠᎴ hungrily, ᎢᏧᎳᎭ ᎢᏳᏃ ᎾᏍᎩ ᎨᏒᎢ substandard ᎤᏛᏒᎯ.
+ᎯᎠ ᎠᎴᏂᏍᎬ "ᎠᎵᏍᏓᏴᎲᏍᎬ ᎯᎠ ᏣᎷᎦ" ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[sports talk radio|ᏗᏁᎸᏗᏱ ᎦᏬᏂᏍᎬ ᎦᏬᏂᏍᎩ]] ᏩᏎᏍᏗ ᎠᏔᏃᏲ ᎦᎪ ᎠᏓᏁᎳᏅᎯ ᎢᎬᏩᏕᎴᎩ Ꮎ ᏐᏈᎵ ᏧᎾᏦᏟ ᎤᏤᎵ ᎠᏓᏅᏖᎵᏙᎲ ᎠᏗᎭ ᎠᎴ ᎤᏬᎯᏳᎭ ᎾᏍᎩ ᏄᏠᏯᏍᏛᎾ ᎠᏛᏛᎲᏍᎩ.  ᎾᏍᎩ ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᏳᎳᎪᏗ ᎠᏁᎸᏙᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎠᏥᎾᏝᎢ ᏄᏂᎬᏫᏳᏌᏕᎩ ᎠᏰᎲ ᏣᎷᎦ ᏥᏄᏍᏗ ᏕᎬᏔᏛ ᎯᎠ ᏗᎨᏥᎾᏝᎢ' ᎠᎵᏍᏓᏴᏗ ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏍᏗ ᏧᎬᏩᎶᏗ ᎠᏩᎯᏍᏗ ᎠᎴ ᎠᎧᎵᎢᎲ ᎠᎩᏍᏗ. ᎠᏲᎯᏍᏗ ᎪᎯ ᎯᎠ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎢᎦ, ᎯᎠ ᎠᏔᏃᏲ ᎠᎴ ᏗᎨᏥᎾᏝᎢ ᎯᎠ ᏐᏈᎵ ᏧᎾᏦᏟ ᎾᏍᎩ ᎤᏤᎵ ᎠᎴ ᎠᎩᏍᏗ ᎢᎬᏩᏕᎴᎩ ᎯᎠ ᏐᏈᎵ ᏧᎾᏦᏟ ᎠᏓᏁᏗ ᎠᏂ ᎪᎯᏳᏙᏗ ᎠᎴ hungrily, ᎢᏧᎳᎭ ᎢᏳᏃ ᎾᏍᎩ ᎨᏒᎢ substandard ᎤᏛᏒᎯ.
 
 ᏱᏓᏟᎶᏍᏔᏅ: ᎤᏍᏆᎸᎲ ᎤᎳᏂᎩᏓ offseason, ᎯᎠ [[Detroit Lions|Detroit ᏢᏓᏥ]] ᎠᎴ ᏓᏰᏏ ᎠᏓᏠᎯᏍᏗ ᎯᎠ [[NFC North|NFC ᎤᏴᏢ]] ᎭᏫᎾᏗᏢ 2006.
 
