--- a/ᎨᏯᏔᎯ_ᎬᎾ.mw
+++ b/ᎨᏯᏔᎯ_ᎬᎾ.mw
@@ -42,25 +42,25 @@
 
 :''ᎾᏍᎩᎾᎢ ᎠᏆᏤᎵ ᎣᏤᎵ ᎢᎦᏛ ᎠᏯ ᎠᏚᎳᏗ ᎯᎠ ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ ᎠᏰᎲ ᎾᏍᎩ ᏂᎨᏒᎾ ᏭᏪᏙᎢ ᎠᏑᏰᏛ ᎯᎠ ᏗᎦᎳᏫᎩ ᎠᏆᏤᎵ ᏙᏱᏗᏢ ᎦᏚᎲ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᏥᏍᏆ ᎤᏲᎢ ᎠᎦᏓᏅᏖᏗ   ᎠᎦᏓᏅᏖᏗ.   ᎾᏍᎩ ᎠᏍᎦᏯ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎩᏍᏗᏱ ᎤᏤᎵ ᎠᎴᏂᏙᎲ ᏂᏚᏳᏙᏛ. ᏂᎯ ᎠᎾᏍᎬᏘ ᎤᎭ ᎠᎪᎲᎢ ᎾᏍᎩ ᎠᏍᎦᏯ perched ᎾᎿ ᎢᎦᏛ ᎤᏲᎱᏒ ᏡᎬ ᎾᎥᏂᎨ ᎯᎠ ᎤᏪᏴ, ᎭᏢᏃ, ᎦᏟᏐᏗᎩ ᎤᏓᏄᎸᎯ ᎠᏣᏗ ᎾᏍᎩᎾᎢ ᎤᏩᏒᎠᏍᎦᏯ, ᎾᏍᎩ ᎠᏍᎦᏯ watches ᎯᎠ Labour ᎯᎠ ᎠᎾᏑᎲᏍᎬ ᏔᏬᏗ; ᎠᎴ ᎯᎳᎪ ᎢᏳ Ꮎ ᎠᎵᏂᎬᏁᎯ ᏥᏍᏆ ᎤᎭ ᎾᎾᎢ ᏂᎦᏅᎯᏒ ᎠᎩᏒᎯ ᎠᏣᏗ, ᎠᎴ ᎨᏒᎢ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎾᏍᎩ ᎤᏤᎵ ᎤᏁᏍᎩᎸᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᏍᏕᎸᏗ ᎤᏤᎵ ᎤᎾᎵᎪᎯ ᎠᎴ ᎠᏲᎵ ᎠᏂᏏᏴᏫᎭ, ᎯᎠ ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ ᎠᏍᏓᏩᏗᏒ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎠᎩᏍᎪᎢ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᎾᏍᎩ ᎠᏍᎦᏯ.
 
-:''ᎬᏙᏗ ᏂᎦᏛ ᎪᎯ ᏂᏚᏳᎪᏛᎾ ᎠᏓᏚᎯᏍᏙᏗ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎥᏝ ᎭᏫᎾᏗᏢ ᎣᏍᏛ ᎦᎸᏛ ᎧᏁᏌᎢ ᎠᎴ ᎾᏍᎩᏯᎢ ᎾᏍᎩ ᏄᎾᏛᏅ ansigaya ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎾᎥᎢ ᎪᏍᏓᏯ & ᏌᎲᏍ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᏂᎦᎥᏊ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏙᎯᏳ lousy. ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎢᏴ ᎠᏂᏙᎾᎥ ᎤᏍᎦᎡᎾ: ᎯᎠ ᎤᏍᏗ ᎤᎬᏫᏳᎯ ᏥᏍᏆ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏔᏂᏗ ᎬᎾᏬᏍᎬ ᏥᏍᏆᏯ ᏗᎦᏘᎸᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏂᎦᎾᏰᏍᎬᎾ ᎠᎴ ᎠᏱᎴᎦ ᎾᏍᎩ ᎠᏍᎦᏯ   atsinuqowisgv ᎯᎠ ᏍᎦᏚᎩ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎥᎢ Ꮭ ᎤᏅᏔᏂᏓᏍᏗ ᏗᏙᎳᎩ ᎤᏂᎧᏁᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏧᎵᏨᏯᏍᏗ ᎠᎴ ᏚᏳᎪᏛ Cincinnati ᎠᎺᎵᎨ ᎦᎪ ᎤᎭ ᎤᏱᎵᏒᎩ ᏂᎦᏛ ᎯᎠ ᎤᎬᏫᏳᎯ ᎯᎸᏍᎩ ᏥᏍᏆ ᏂᏛᎴᏅᏓ ᎠᏆᏤᎵ ᏙᏱᏗᏢ ᎦᏚᎲ . . .
+:''ᎬᏙᏗ ᏂᎦᏛ ᎪᎯ ᏂᏚᏳᎪᏛᎾ ᎠᏓᏚᎯᏍᏙᏗ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎥᏝ ᎭᏫᎾᏗᏢ ᎣᏍᏛ ᎦᎸᏛ ᎧᏁᏌᎢ ᎠᎴ ᎾᏍᎩᏯᎢ ᎾᏍᎩ ᏄᎾᏛᏅ ansigaya ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎾᎥᎢ ᎪᏍᏓᏯ & ᏌᎲᏍ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᏂᎦᎥᏊ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏙᎯᏳ lousy. ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎢᏴ ᎠᏂᏙᎾᎥ ᎤᏍᎦᎡᎾ: ᎯᎠ ᎤᏍᏗ ᎤᎬᏫᏳᎯ ᏥᏍᏆ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏔᏂᏗ ᎬᎾᏬᏍᎬ ᏥᏍᏆᏯ ᏗᎦᏘᎸᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏂᎦᎾᏰᏍᎬᎾ ᎠᎴ ᎠᏱᎴᎦ ᎾᏍᎩ ᎠᏍᎦᏯ   atsinuqowisgv ᎯᎠ ᏍᎦᏚᎩ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎥᎢ Ꮭ ᎤᏅᏔᏂᏓᏍᏗ ᏗᏙᎳᎩ ᎤᏂᎧᏁᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏧᎵᏨᏯᏍᏗ ᎠᎴ ᏚᏳᎪᏛ Cincinnati ᎠᎺᎵᎨ ᎦᎪ ᎤᎭ ᎤᏱᎵᏒᎩ ᏂᎦᏛ ᎯᎠ ᎤᎬᏫᏳᎯ ᎯᎸᏍᎩ ᏥᏍᏆ ᏂᏛᎴᏅᏓ ᎠᏆᏤᎵ ᏙᏱᏗᏢ ᎦᏚᎲ...
 
-:''ᎠᏯ ᎾᎿ ᎪᎯ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎡᎯᏍᏛ Ꮎ ᎯᎠ ᎠᏎᏍᏙ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ, ᎠᎴ ᎠᎦᏘᎭ ᎤᏟ ᎢᎦᎢ ᎾᏍᎩᏯᎢ ᎬᎾ. ᎾᏍᎩᎾᎢ ᎯᎠ ᏚᏳᎪᏛ ᎯᎠ  ᎬᎾ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎤᏠᏱ ᎾᎬᏁᎲ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎠᏥᎸᏉᏗ ᏥᏍᏆ, ᎠᎴ ᎦᏟᏐᏗᎩ ᎤᏙᎯᏳ ᎠᎴᏅᏗᏍᎬ ᎾᏰᎯᏯ ᎠᎺᎵᎨ . . . ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎾᏍᎩ ᏂᏗᎨᏒᎾ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ  ᎤᏍᏗ ᏄᎵᏍᎨᏗᏴᎾ & ᎤᏜᏏᏛᎯ, ᏥᏍᏆ ᎠᎵᎦᎵᏴᎯ, ᎠᎴ ᏯᏓᎢᏗᏏ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏳᎸᏗ ᏗᎦᏘᎸᏍᏗ ᏂᎦᏛᎢ ᎯᎠ ᎩᎵᏏ ᎠᏓᎦᏘᏯ ᎦᎪ ᎢᏳᏗᎾ ᎢᏰᎵᏍᏗ ᎠᏴᏍᏙᏗ ᎤᏤᎵ ᎦᎶᎨᏒ ᏑᏟᎶᏛ ᎬᏙᏗ ᎩᎦᎨ ᎦᏌᎴᎾ ᎾᎿ.''
+:''ᎠᏯ ᎾᎿ ᎪᎯ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎡᎯᏍᏛ Ꮎ ᎯᎠ ᎠᏎᏍᏙ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ, ᎠᎴ ᎠᎦᏘᎭ ᎤᏟ ᎢᎦᎢ ᎾᏍᎩᏯᎢ ᎬᎾ. ᎾᏍᎩᎾᎢ ᎯᎠ ᏚᏳᎪᏛ ᎯᎠ  ᎬᎾ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎤᏠᏱ ᎾᎬᏁᎲ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎠᏥᎸᏉᏗ ᏥᏍᏆ, ᎠᎴ ᎦᏟᏐᏗᎩ ᎤᏙᎯᏳ ᎠᎴᏅᏗᏍᎬ ᎾᏰᎯᏯ ᎠᎺᎵᎨ... ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎾᏍᎩ ᏂᏗᎨᏒᎾ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ  ᎤᏍᏗ ᏄᎵᏍᎨᏗᏴᎾ & ᎤᏜᏏᏛᎯ, ᏥᏍᏆ ᎠᎵᎦᎵᏴᎯ, ᎠᎴ ᏯᏓᎢᏗᏏ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏳᎸᏗ ᏗᎦᏘᎸᏍᏗ ᏂᎦᏛᎢ ᎯᎠ ᎩᎵᏏ ᎠᏓᎦᏘᏯ ᎦᎪ ᎢᏳᏗᎾ ᎢᏰᎵᏍᏗ ᎠᏴᏍᏙᏗ ᎤᏤᎵ ᎦᎶᎨᏒ ᏑᏟᎶᏛ ᎬᏙᏗ ᎩᎦᎨ ᎦᏌᎴᎾ ᎾᎿ.''
 
 ᎠᏓᏚᎬ ᎪᏪᎵ ᏱᏂᎬᏛᎾ Ꮎ () ᎯᎠ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ ᎨᏒᎢ ᎾᏍᎩ ᏯᏛᎾ ᎦᏅᎪ ᎭᏫᎾᏗᏢ ᎠᎦᏆᎵ, (b) ᎯᎠ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ ᏥᏄᏍᏛᎩ ᎪᏪᎳᏅᎯ <i>ᎤᎶᏐᏅ<i> ᏩᏥᏂ ᏗᏂᎳᏫᎩ ᎤᏂᏩᏒ ᏑᏓᎵ ᏧᏕᏘᏴᏓ ᎠᏑᏰᏛ ᎯᎠ ᏬᎭᎵ ᎠᎴ ᏥᏄᏍᏛᎩ ᎪᏪᎳᏅᎯ ᎤᏤᎵ ᎤᏪᏥ ᎠᎨᏴ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎨᎳ ᏩᏥᏂ ᏗᏂᎳᏫᎩ, ᎠᎴ (c) ᎯᎠ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ ᏫᏓᏎᎸᎢ ᎥᏳᎩ ᎠᏎᏒᏓ ᏬᎭᎵ Ꮎ ᎠᎦᏘᎭ ᎾᏍᎩᏯᎢ ᎬᎾ ᎠᎴ ᎤᏠᏱ ᎢᎬᏁᏗ ᎯᎠ ᎬᎾ ᎯᎠ ᏬᎭᎵ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏄᏓᎴᎿᎥ ᎬᎾᏬᏍᎬ advocating ᎯᎠ ᎬᎾ ᎾᎿ Ꮝ ᎣᏤᎵ.  ᎾᏍᎩ ᎨᏒᎢ ᏧᎸᏌᏓ Ꮎ ᎠᏍᎦᏯ. Franklin ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎵᎮᎵᏍᏗ ᎬᏙᏗ ᎯᎠ ᎠᏑᏰᏛ ᎯᎠ ᏬᎭᎵ, ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎾᎢ ᏂᎦᏛ ᏧᎸᏌᏓ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎢᏳᏊ ᎠᏰᎵ ᎤᏒᎧᎵ advocated ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᎾ. 
 
-ᎯᎠ ᎨᏯᏔᎯ ᎬᎾ ᎤᎭ ᏭᏪᏙᎢ ᎠᏠᏯᏍᏔᏅᎯ ᏥᏄᏍᏗ ᎯᎠ ᎠᏰᎵ ᎤᏒᎧᎵ ᏗᏁᎶᏗᎢ ᏥᏍᏆ [[South Carolina|ᎤᎦᎾᏭ Carolina]], [[Alabama]], [[Oklahoma|ᎣᎦᎳᎰᎻ]] ᎠᎴ [[Massachusetts]]. 
+ᎯᎠ ᎨᏯᏔᎯ ᎬᎾ ᎤᎭ ᏭᏪᏙᎢ ᎠᏠᏯᏍᏔᏅᎯ ᏥᏄᏍᏗ ᎯᎠ ᎠᏰᎵ ᎤᏒᎧᎵ ᏗᏁᎶᏗᎢ ᏥᏍᏆ [[South Carolina|ᏐᎦᎴᏂ]], [[Alabama|ᎠᎳᏆᎹ]], [[Oklahoma|ᎣᎦᎳᎰᎻ]] ᎠᎴ [[Massachusetts|ᎺᏌᏧᏎᏗ]]. 
 
-ᎬᎾ ᎨᏒᎢ ᎤᏂᎸᏉᏗ ᏄᎬᏫᏳᏒ ᎤᏲᏨᎯ ᎾᏍᎩᎾᎢ ᎯᎠ [[Thanksgiving|ᎠᎵᎮᎵᏍᏗ ᎢᎦ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎨᏒᎾ ᎢᎦ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᏅᏓᏕᏆ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ ᏚᏂᏃᏗ ᎭᏫᎾᏗᏢ Canada.  ᎯᎠ [[Aztec]]ᎫᏄᏡᏂ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ [[ᎺᎯᎪ|Mexican]] ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ''M. g. mexicana''
+ᎬᎾ ᎨᏒᎢ ᎤᏂᎸᏉᏗ ᏄᎬᏫᏳᏒ ᎤᏲᏨᎯ ᎾᏍᎩᎾᎢ ᎯᎠ [[Thanksgiving|ᎠᎵᎮᎵᏍᏗ ᎢᎦ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎨᏒᎾ ᎢᎦ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᏅᏓᏕᏆ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ ᏚᏂᏃᏗ ᎭᏫᎾᏗᏢ Canada. ᎯᎠ [[Aztec]]ᎫᏄᏡᏂ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ [[Mexican|ᎠᏍᏆᏂ]] ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ''M. g. mexicana''
 
 ᎯᎠ ᎠᏍᏓᏅᏅ ᎠᎴ ᏗᏎᏍᏗ ᎯᎠ ᎨᏯᏔᎯ ᎬᎾ ᎠᏰᎲ ᎠᏂᎦᏲᎵ ᎾᎾᎢ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎯᎠ [[20th century|20th sqohitsuqui tsudetiyvdi]] ᎤᏍᏆᎸᎲ ᎠᏂᏃᎯᎵᏙᎲ ᎠᎴ ᎤᏲᎱᏎᎸ ᏗᎦᎶᎪᏗ.  ᏗᏁᎶᏗᎢ ᎠᏓᏅᏖᎵᏙᎯ ᎠᎦᏎᏍᏙᏗ Ꮎ ᎯᎠ ᏂᎦᏛ ᎾᏂᎥ ᏴᏫ ᎨᏯᏔᎯ ᎬᎾ ᎭᏫᎾᏗᏢ ᎯᎠ Ꭴ..ᏥᏄᏍᏛᎩ ᏥᏄᏍᏗ ᎡᎳᏗ ᏥᏄᏍᏗ 30,000 ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ 1900'.  ᏗᏁᎶᏗᎢ ᎠᏰᎵ ᎤᎾᏒᎧᎵ ᎪᏢᏅᎯ ᏓᏁᎸᏔᏅ ᎠᏓᏍᏕᎸᏗ ᎠᎴ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎯᎠ ᎧᏁᏉᏍᎬ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎨᏯᏔᎯ ᎾᏂᎥ ᏴᏫ.  ᏥᏄᏍᏗ ᎯᎠ ᎨᏯᏔᎯ ᎬᎾ ᎤᏤᎵ ᏗᏎᏍᏗ rebounded ᎭᏫᎾᏗᏢ ᎯᎠ [[1980s]] ᎠᎴ [[1990s]], ᎠᏂᏃᎯᎵᏙᎲ ᏥᏄᏍᏛᎩ ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᎭᏫᎾᏗᏢ 49 ᎢᏧᎳ ᎠᏴ ᎧᏃᎮᎭ, ᎧᏃᎯᏯᏍᏗ [[Alaska]].  ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎠᎦᏎᏍᏗ ᎾᎿᎢ ᎯᎠ ᏂᎦᏛ ᎨᏯᏔᎯ ᎬᎾ ᎾᏂᎥ ᏴᏫ ᎾᎾᎢ 7 ᎢᏳᏆᏗᏅᏓ ᏗᏂᏏᏴᏫᎭ.  ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ, ᏌᏛᏗ ᎠᎴ ᏫᏓᏲᎯᏍᏗ ᎠᏎᎸᎯ ᎤᎭ reintroduced ᎨᏯᏔᎯ ᎬᎾ ᎯᎸᏍᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Canada ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.
 
 == ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏯᏔᎯ ᎬᎾ ==
 ᎾᎿᎢ ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎧᏃᏗ ᎯᎠ ᏄᏓᎴᎿᎥ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏯᏔᎯ ᎬᎾ. ᎯᎠ ᎯᏍᎩ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ:
 # '''[[Eastern Wild Turkey|ᎧᎸᎬᎢᏗᏢ]]''' (''Meleagris gallopavo silvestris'')<br>ᎠᏍᏓᏅᏅ ᏗᎫᏝᎢ ᎯᎠ ᏂᎦᏛ ᎧᎸᎬᎢᏗᏢ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ; ᏫᎧᏁᏉᎬ ᎾᏍᎩ ᎾᏍᏇ ᎾᎾᎯ [[Ontario]], [[Quebec]], ᎠᎴ ᎯᎠ [[Maritimes|ᎠᎺᏉᎯ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎭᏫᎾᏗᏢ Canada.  ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 5.1 5.3 ᎢᏳᏆᏗᏅᏓ ᎯᎸᏍᎩ ᏥᏍᏆ. ᎤᏅᏌ ᎨᏒᎩ ᎢᎬᏱ ᏓᎪᎥᎩ ᎠᏙᎯ ᎢᎾᎨ ᎬᎾ ᎭᏫᎾᏗᏢ 1817, ᎠᎴ ᏰᎵᏇ ᎠᏛᏍᎬ ᎦᎸᎳᏗᏢ 4 ᏧᎾᎳᏏᏕᎾ ᎢᏅ ᎢᎦᏘ. ᎯᎠ ᎦᎸᎳᏗᏢ ᎦᏂᏓᏛ ᎦᏁᎸ ᎠᎴ tipped ᎬᏙᏗ ᎤᎾᎩᎾ ᏬᏗᎨ.  
-# '''Osceola ᎠᎴ Florida''' (''M. g. osceola'')<br>ᎠᏩᏛᏗ ᎾᏍᎩ ᎤᏩᏒ ᎾᎿ ᎯᎠ [[Florida]] ᎦᏙᎯ.  ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 80,000 100,000 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎪᎯ ᏥᏍᏆ ᎨᏒᎢ ᏓᎪᎥᎩ ᎾᏍᎩᎾᎢ ᎯᎠ ᏗᎦᏃᏣᎵ Seminole ᎤᎬᏫᏳᎯ Osceola, ᎠᎴ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1980. ᎾᏍᎩ ᎨᏒᎢ ᎠᏂᎦᏲᎵ ᎠᎴ darker ᎬᎾᏬᏍᎬ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎬᎾ.  ᎯᎠ ᎪᏯᏛ ᏧᎷᏄᎯ ᎠᎴ ᎤᏙᎯᏳ ᎤᎳᏏᎩ ᎬᏙᏗ ᎠᏂᎦᏲᎵ ᎢᎦᎢ ᎨᏒ ᎯᎠ ᎤᏁᎬ ᎪᏣᎴᏛ ᎠᎪᎲᎢ ᎾᎿ ᏐᎢ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.  ᎤᎾᏤᎵ overall ᎠᏰᎸ ᏧᎷᏄᎯ ᎠᎴ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎢᏤ ᎢᏳᏍᏗ-ᎩᎨᏍᏗ ᏗᎧᏃᏗ. 
-# '''Rio Grande''' (''M. g. intermedia'')<br>ᎠᏍᏓᏅᏅ ᏗᎬᏩᎶᏒ [[Texas|ᏅᏓᎩ]] ᎣᎦᎳᎰᎻ, [[Kansas]], ᎠᎴ [[Colorado]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎢᎦᏛᎭ ᎦᏲᎵ northeastern ᎧᏃᎮᎭ. Rio Grande ᎬᎾ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ ᎬᏂᎨᏒ ᏄᏩᏁᎸ Hawaii ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ 1950'.  ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 1,022,700 1,025,700 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎪᎯ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎢ ᎾᏰᎯᏯ ᎯᎠ ᎠᏰᎵ ᏂᎬᏅ ᎧᏃᎮᎭ. ᎤᏅᏌ ᎨᏒᎩ ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1879, ᎠᎴ ᎤᎭ ᏂᏓᏙᎳᎬᎾ ᎦᏅᎯᏓ ᏗᏂᏅᏍᎨᏂ. ᎤᎾᏤᎵ ᎠᏰᎸ ᏧᎷᏄᎯ ᎢᏳᏓᎵᎭ ᎤᎭ ᎢᏤ ᎢᏳᏍᏗ-coppery ᎠᏨᏍᏛ ᎠᏂ.  ᎯᎠ ᎠᎦᏚᏕᏍᏗ ᎯᎠ ᎦᏂᏓᏛ ᎠᎴ lowrer ᎦᏐᎯ ᏧᎷᏄᎯ ᎠᎴ buff-ᎤᏙᎯᏳ ᎠᏨᏍᏛ ᏅᏙ ᎤᎴᏴᏔᏅ ᏗᎧᏃᏗ.  ᏗᎦᎶᎪᏗ ᎠᎴ ᎦᏄᎪᏅᏙᏗ ᎡᏍᎦᏂ ᏐᎢ ᎤᏪᏴᎢ, ᎤᏪᏴ ᎠᎴ mesquite ᏃᏥ ᎠᎴ ᏯᏖᏃ ᎦᏅᎦᎸᏗ ᏧᏍᎦ ᎠᏙᎯ ᎢᎾᎨ. ᎾᏍᎩ ᎤᏩᏒ ᎬᎾ ᎾᏍᏋ ᎠᏩᏛᏗ ᎦᎸᎳᏗᏢ 6,000 ᏧᎾᎳᏏᏕᎾ ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ ᎠᎴ ᎠᎴ ᎠᏓᎦᎵᏍᏙᏗ. 
+# '''Osceola ᎠᎴ [[Florida|ᏧᎦᎾᏮ]]''' (''M. g. osceola'')<br>ᎠᏩᏛᏗ ᎾᏍᎩ ᎤᏩᏒ ᎾᎿ ᎯᎠ [[Florida]] ᎦᏙᎯ.  ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 80,000 100,000 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎪᎯ ᏥᏍᏆ ᎨᏒᎢ ᏓᎪᎥᎩ ᎾᏍᎩᎾᎢ ᎯᎠ ᏗᎦᏃᏣᎵ Seminole ᎤᎬᏫᏳᎯ Osceola, ᎠᎴ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1980. ᎾᏍᎩ ᎨᏒᎢ ᎠᏂᎦᏲᎵ ᎠᎴ darker ᎬᎾᏬᏍᎬ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎬᎾ.  ᎯᎠ ᎪᏯᏛ ᏧᎷᏄᎯ ᎠᎴ ᎤᏙᎯᏳ ᎤᎳᏏᎩ ᎬᏙᏗ ᎠᏂᎦᏲᎵ ᎢᎦᎢ ᎨᏒ ᎯᎠ ᎤᏁᎬ ᎪᏣᎴᏛ ᎠᎪᎲᎢ ᎾᎿ ᏐᎢ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.  ᎤᎾᏤᎵ overall ᎠᏰᎸ ᏧᎷᏄᎯ ᎠᎴ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎢᏤ ᎢᏳᏍᏗ-ᎩᎨᏍᏗ ᏗᎧᏃᏗ. 
+# '''Rio Grande''' (''M. g. intermedia'')<br>ᎠᏍᏓᏅᏅ ᏗᎬᏩᎶᏒ [[Texas|ᏅᏓᎩ]] ᎣᎦᎳᎰᎻ, [[Kansas|ᏧᏂᎦᏔᏩᏙᏅᏩᏙᏗ]], ᎠᎴ [[Colorado|ᎧᎶᏩᏓ]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎢᎦᏛᎭ ᎦᏲᎵ northeastern ᎧᏃᎮᎭ. Rio Grande ᎬᎾ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ ᎬᏂᎨᏒ ᏄᏩᏁᎸ [[Hawaii|ᎭᏩᏱ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏱᏳ 1950'.  ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 1,022,700 1,025,700 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎪᎯ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎢ ᎾᏰᎯᏯ ᎯᎠ ᎠᏰᎵ ᏂᎬᏅ ᎧᏃᎮᎭ. ᎤᏅᏌ ᎨᏒᎩ ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1879, ᎠᎴ ᎤᎭ ᏂᏓᏙᎳᎬᎾ ᎦᏅᎯᏓ ᏗᏂᏅᏍᎨᏂ. ᎤᎾᏤᎵ ᎠᏰᎸ ᏧᎷᏄᎯ ᎢᏳᏓᎵᎭ ᎤᎭ ᎢᏤ ᎢᏳᏍᏗ-coppery ᎠᏨᏍᏛ ᎠᏂ.  ᎯᎠ ᎠᎦᏚᏕᏍᏗ ᎯᎠ ᎦᏂᏓᏛ ᎠᎴ lowrer ᎦᏐᎯ ᏧᎷᏄᎯ ᎠᎴ buff-ᎤᏙᎯᏳ ᎠᏨᏍᏛ ᏅᏙ ᎤᎴᏴᏔᏅ ᏗᎧᏃᏗ.  ᏗᎦᎶᎪᏗ ᎠᎴ ᎦᏄᎪᏅᏙᏗ ᎡᏍᎦᏂ ᏐᎢ ᎤᏪᏴᎢ, ᎤᏪᏴ ᎠᎴ mesquite ᏃᏥ ᎠᎴ ᏯᏖᏃ ᎦᏅᎦᎸᏗ ᏧᏍᎦ ᎠᏙᎯ ᎢᎾᎨ. ᎾᏍᎩ ᎤᏩᏒ ᎬᎾ ᎾᏍᏋ ᎠᏩᏛᏗ ᎦᎸᎳᏗᏢ 6,000 ᏧᎾᎳᏏᏕᎾ ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ ᎠᎴ ᎠᎴ ᎠᏓᎦᎵᏍᏙᏗ. 
 # '''Merriam's''' (''M. g. merriami'')<br>ᎠᏍᏓᏅᏅ ᏗᎬᏩᎶᏒ ᎯᎠ [[Rocky Mountains|Rocky ᏙᏓᎸ]] ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ ᎢᎪᏗ [[Wyoming]], [[Montana]] ᎠᎴ [[South Dakota|ᎤᎦᎾᏭ Dakota]]. ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 334,460 344,460 ᎯᎸᏍᎩ ᏥᏍᏆ. ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ponderosa ᏃᏥ ᎠᎴ ᎣᏓᎸ ᎤᏔᏂᏗ ᎦᏙᎯ. ᏓᎪᎥᎩ ᎭᏫᎾᏗᏢ 1900 ᎭᏫᎾᏗᏢ ᎠᏥᎸᏉᏗ C. gantlai Merriam, ᎯᎠ ᎢᎬᏱ ᎤᎬᏫᏳᎯ ᎯᎠ ᎢᏧᎳ ᎠᏴ Biological ᎠᏟᎶᏍᏗ ᎦᏙᎯ. ᎯᎠ ᎦᏂᏓᏛ ᎠᎴ ᎡᎳᏗᎨ ᎦᏐᎯ ᎦᏐᎯ ᎤᎩᏓᎵ ᎤᎭ ᎤᏁᎬ ᎠᎦᏚᏕᏍᏗ. ᎤᏅᏌ ᎤᎭ ᎩᎨᏍᏗ ᎠᎴ ᏬᏗᎨ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ. 
-# '''Gould's''' (''M. g. mexicana'')<br>ᎾᏰᎯᏯ ᎠᏰᎵ ᎠᏂᏍᏆᏂᎢ ᎠᎴ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ-ᎤᎪᏗᏗ ᎢᎦᏛᎭ [[Arizona]] ᎠᎴ [[New Mexico|ᎢᏤ ᎠᏂᏍᏆᏂᎢ]]. ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 650 800 ᎯᎸᏍᎩ ᏥᏍᏆ. ᏧᏓᏗᎩᏓ ᎤᏓᏍᏕᎸᎲ ᎠᎴ regulated. ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1856. ᎤᏅᏌ ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᏗᏎᏍᏗ ᎠᎴ ᎠᎴ ᎬᏩᎶᏒᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎢᎦᏛ ᎠᏂᏍᏆᏂᎢ. Gould ᎤᏤᎵ ᎠᎴ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎯᎠ ᎯᏍᎩ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎤᏅᏌ ᎤᎭ ᎦᏅᎯᏓᎨ ᏗᏂᏅᏍᎨᏂ, ᎡᏆᎯᎨᏍᏙᏗ ᏧᎾᎳᏏᏕᎾ, ᎠᎴ ᎦᏅᎯᏓᎨ ᎦᏂᏓᏛ ᏧᎷᏄᎯ. ᎯᎠ ᏄᎬᏫᏳᏒ ᏗᎧᏃᏗ ᎯᎠ ᎠᏰᎸ ᏧᎷᏄᎯ ᎠᎴ ᎠᏥᏱ ᎠᎴ ᎢᏤ ᎢᏳᏍᏗ-ᎠᏕᎸ ᏓᎶᏂᎨ.
+# '''Gould's''' (''M. g. mexicana'')<br>ᎾᏰᎯᏯ ᎠᏰᎵ ᎠᏂᏍᏆᏂᎢ ᎠᎴ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ-ᎤᎪᏗᏗ ᎢᎦᏛᎭ [[Arizona]] ᎠᎴ [[New Mexico|ᏍᏆᏂᏤᏍᏛᎢ]]. ᎤᏅᏌ ᏎᏍᏗ ᏂᏛᎴᏅᏓ 650 800 ᎯᎸᏍᎩ ᏥᏍᏆ. ᏧᏓᏗᎩᏓ ᎤᏓᏍᏕᎸᎲ ᎠᎴ regulated. ᎢᎬᏱ ᏄᏍᏛ ᎧᏃᎮᎸ ᎭᏫᎾᏗᏢ 1856. ᎤᏅᏌ ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᏗᏎᏍᏗ ᎠᎴ ᎠᎴ ᎬᏩᎶᏒᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎢᎦᏛ ᎠᏂᏍᏆᏂᎢ. Gould ᎤᏤᎵ ᎠᎴ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎯᎠ ᎯᏍᎩ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎤᏅᏌ ᎤᎭ ᎦᏅᎯᏓᎨ ᏗᏂᏅᏍᎨᏂ, ᎡᏆᎯᎨᏍᏙᏗ ᏧᎾᎳᏏᏕᎾ, ᎠᎴ ᎦᏅᎯᏓᎨ ᎦᏂᏓᏛ ᏧᎷᏄᎯ. ᎯᎠ ᏄᎬᏫᏳᏒ ᏗᎧᏃᏗ ᎯᎠ ᎠᏰᎸ ᏧᎷᏄᎯ ᎠᎴ ᎠᏥᏱ ᎠᎴ ᎢᏤ ᎢᏳᏍᏗ-ᎠᏕᎸ ᏓᎶᏂᎨ.
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 * [[Domesticated turkey|ᎫᏄᏡᏂ ᎬᎾ]]
@@ -79,7 +79,6 @@
 
 *[http://www.nwtf.org/all_about_turkeys/index.html All About Wild Turkeys] - ᎡᎶᎯ ᏓᏟᎶᏍᏔᏅ ᎯᎠ ᎦᎷᎯᏍᏗ ᎯᎠ ᎯᏍᎩ ᏄᏓᎴᎿᎥ ᎠᏂᎦᏲᎵ-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏯᏔᎯ ᎬᎾ
 *[http://www.nwtf.org/all_about_turkeys/sounds_of_turkeys.html Sounds Made by Wild Turkeys] - ᎨᏯᏔᎯ ᎬᎾ ᏓᏯᏂ
-*[Happy Thanksgiving http://vlib.iue.it/carrie/texts/carrie_books/paksoy-6/cae22.html]
 
 [[Category:ᏥᏍᏆ]]
 [[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
